34 locales updated, fix Wikipedia missing caption

--- a/app/explore2/assets/i18n/conzept-bn.json
+++ b/app/explore2/assets/i18n/conzept-bn.json
@@ -15,7 +15,7 @@
   "app-title-citations": "উদ্ধৃতি",
   "app-guide-see-more": "আরো দেখুন",
   "app-guide-page": "পৃষ্ঠা",
-  "app-guide-news": "খবর",
+  "app-guide-news": "বর্তমান ঘটনা",
   "app-guide-topic": "বিষয়",
   "app-guide-artwork": "পেইন্টিং",
   "app-guide-organism": "জীব",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "জনসংখ্যা",
   "app-section-location-ecology": "বাস্তুশাস্ত্র",
   "app-section-location-travel": "ভ্রমণ",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "আবহাওয়া",
   "app-section-location-real-estate": "আবাসন",
   "app-menu-actions": "কর্ম",
   "app-menu-background-audio": "শ্রুতি",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "এলোমেলো বিষয়",
   "app-menu-compare-topics": "বিষয়গুলির তুলনা করুন",
   "app-menu-toggle-fullscreen": "টগল পর্দা জুড়ে প্রদর্শন",
-  "app-menu-bookmark-current-view": "বুকমার্ক বর্তমান URL",
+  "app-menu-bookmark-actions": "বুকমার্ক-নির্বাচন কর্ম",
+  "app-menu-bookmark-actions-reasoning": "যুক্তি",
+  "app-guide-bookmark-teach-topics": "আমাকে শেখাও",
+  "app-guide-bookmark-quiz-topics": "আমাকে প্রশ্ন করুন",
+  "app-guide-bookmark-related-topics": "সম্পর্কিত বিষয়",
+  "app-guide-bookmark-topic-differences": "পার্থক্য",
+  "app-guide-bookmark-commonalities": "সাধারণতা",
+  "app-guide-bookmark-similarities": "মিল",
+  "app-guide-bookmark-implications": "প্রভাব",
+  "app-guide-bookmark-history": "ইতিহাস",
+  "app-menu-import-as": "বুকমার্ক আমদানি করুন",
+  "app-menu-export-as": "বুকমার্ক রপ্তানি করুন",
+  "app-menu-bookmark-actions-media": "মিডিয়া",
+  "app-menu-visual-search": "চাক্ষুষ অনুসন্ধান",
+  "app-menu-reading-assistance": "পড়ার সহায়তা",
+  "app-menu-bread": "শব্দ শুরু বোল্ডিং",
+  "app-menu-ai-tutor": "এআই টিউটর",
+  "app-menu-bookmark-current-view": "বুকমার্ক বর্তমান দৃশ্য",
   "app-menu-clone-tab": "ক্লোন ট্যাব",
   "app-menu-plant-identification": "উদ্ভিদ সনাক্তকরণ",
   "app-menu-text-identification": "পাঠ্য সনাক্তকরণ",
@@ -71,12 +88,12 @@
   "app-menu-color-filter": "রঙ ফিল্টার",
   "app-menu-locale": "লোকেল",
   "app-menu-style": "শৈলী",
-  "app-menu-speed": "দ্রুততা",
+  "app-menu-speed": "গতি",
   "app-menu-pitch": "পিচ",
   "app-menu-fullscreen-active-pane": "সক্রিয় ফলকটি ফুলস্ক্রিন করুন",
   "app-menu-toggle-sidebar": "সাইডবার টগল করুন",
   "app-menu-add-bookmark": "বুকমার্কে সংযুক্তকরন",
-  "app-menu-note-1": "দ্রষ্টব্য 1: শুধুমাত্র তখনই উপলভ্য যখন ফোকাস সাইডবারে বা উইকিপিডিয়া নিবন্ধ ফলকে থাকে।",
+  "app-menu-note-1": "নোট 1: শুধুমাত্র তখনই উপলভ্য যখন ফোকাস সাইডবারে বা উইকিপিডিয়া আর্টিকেল প্যানে থাকে।",
   "app-section-business": "ব্যবসা",
   "app-section-government": "সরকার",
   "app-section-government-general": "সাধারণ",
@@ -107,7 +124,7 @@
   "app-section-library-general": "সাধারণ",
   "app-section-library-manuscripts": "পাণ্ডুলিপি",
   "app-section-library-history": "ইতিহাস",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "বংশতালিকা",
   "app-section-library-legal": "আইনি",
   "app-section-library-products": "পণ্য",
   "app-section-media": "মিডিয়া",
@@ -119,7 +136,7 @@
   "app-section-society": "সমাজ",
   "app-section-society-sports": "খেলাধুলা",
   "app-section-society-food": "খাদ্য",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "দর্শন",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
   "app-section-library-identity": "পরিচয়",
@@ -153,7 +170,7 @@
   "app-guide-virus": "ভাইরাস",
   "app-guide-featured-article": "বৈশিষ্ট্যযুক্ত নিবন্ধ",
   "app-menu-cover-topic": "কভার বিষয়",
-  "app-menu-news": "news",
+  "app-menu-news": "খবর",
   "app-menu-culture": "সংস্কৃতি",
   "app-menu-nature": "প্রকৃতি",
   "app-menu-license": "লাইসেন্স",
@@ -186,21 +203,27 @@
   "app-guide-inventor": "উদ্ভাবক",
   "app-guide-software": "সফটওয়্যার",
   "app-guide-mathematics": "অংক",
-  "app-guide-tourist-attraction": "ভ্রমনকারীদের আকর্ষণ",
+  "app-guide-tourist-attraction": "পর্যটকদের আকর্ষণ",
   "app-guide-dish": "থালা",
   "app-guide-cell-type": "কোষের ধরন",
   "app-guide-archae": "archae",
   "app-menu-persona": "ব্যক্তিত্ব",
   "app-guide-featured-portal": "বৈশিষ্ট্যযুক্ত পোর্টাল",
   "app-guide-musical-instrument": "যন্ত্র",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "প্রযুক্তি",
+  "app-guide-near-me": "আমার কাছে",
+  "app-guide-newspapers": "সংবাদপত্র",
+  "app-guide-news-radio": "রেডিও",
+  "app-guide-news-tv": "টেলিভিশন",
+  "app-guide-news-economic-indicators": "অর্থনৈতিক সূচক",
+  "app-guide-ongoing-conflicts": "দ্বন্দ্ব",
   "app-guide-radio": "রেডিও",
   "app-menu-country-select": "দেশ",
   "app-menu-interests": "স্বার্থ",
   "app-menu-command-editor": "কমান্ড সম্পাদক",
   "app-menu-presentation": "উপস্থাপনা",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "সম্পাদক",
   "app-menu-run-code": "চালানো",
-  "app-menu-clear-editor": "স্পষ্ট",
+  "app-menu-clear-editor": "পরিষ্কার",
   "app-foo": "foo বার baz"
 }
