--- a/app/explore2/assets/i18n/conzept-ca.json
+++ b/app/explore2/assets/i18n/conzept-ca.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citacions",
   "app-guide-see-more": "veure més",
   "app-guide-page": "pàgina",
-  "app-guide-news": "Notícies",
+  "app-guide-news": "esdeveniments actuals",
   "app-guide-topic": "tema",
   "app-guide-artwork": "pintura",
   "app-guide-organism": "organisme",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "demografia",
   "app-section-location-ecology": "ecologia",
   "app-section-location-travel": "viatjar",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "el temps",
   "app-section-location-real-estate": "estat real",
   "app-menu-actions": "accions",
   "app-menu-background-audio": "àudio",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "tema aleatori",
   "app-menu-compare-topics": "comparar temes",
   "app-menu-toggle-fullscreen": "commuta la pantalla completa",
-  "app-menu-bookmark-current-view": "marca l'URL actual",
+  "app-menu-bookmark-actions": "accions de selecció de marcadors",
+  "app-menu-bookmark-actions-reasoning": "raonament",
+  "app-guide-bookmark-teach-topics": "Ensenya'm",
+  "app-guide-bookmark-quiz-topics": "qüestiona'm",
+  "app-guide-bookmark-related-topics": "temes relacionats",
+  "app-guide-bookmark-topic-differences": "diferències",
+  "app-guide-bookmark-commonalities": "aspectes comuns",
+  "app-guide-bookmark-similarities": "semblances",
+  "app-guide-bookmark-implications": "implicacions",
+  "app-guide-bookmark-history": "història",
+  "app-menu-import-as": "importar adreces d'interès",
+  "app-menu-export-as": "exportar adreces d'interès",
+  "app-menu-bookmark-actions-media": "mitjans de comunicació",
+  "app-menu-visual-search": "cerca visual",
+  "app-menu-reading-assistance": "ajuda a la lectura",
+  "app-menu-bread": "inici de paraula en negreta",
+  "app-menu-ai-tutor": "Tutor d'IA",
+  "app-menu-bookmark-current-view": "marca la vista actual",
   "app-menu-clone-tab": "pestanya de clonació",
   "app-menu-plant-identification": "identificació de plantes",
   "app-menu-text-identification": "identificació del text",
@@ -74,7 +91,7 @@
   "app-menu-speed": "velocitat",
   "app-menu-pitch": "Brea",
   "app-menu-fullscreen-active-pane": "pantalla completa el panell actiu",
-  "app-menu-toggle-sidebar": "commuta la barra lateral",
+  "app-menu-toggle-sidebar": "alterna la barra lateral",
   "app-menu-add-bookmark": "afegir Punt de llibre",
   "app-menu-note-1": "nota 1: només disponible quan el focus es troba a la barra lateral o al panell d'articles de la Viquipèdia.",
   "app-section-business": "negocis",
@@ -107,7 +124,7 @@
   "app-section-library-general": "general",
   "app-section-library-manuscripts": "manuscrits",
   "app-section-library-history": "història",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "genealogia",
   "app-section-library-legal": "legal",
   "app-section-library-products": "productes",
   "app-section-media": "mitjans de comunicació",
@@ -119,7 +136,7 @@
   "app-section-society": "societat",
   "app-section-society-sports": "esports",
   "app-section-society-food": "menjar",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filosofia",
   "app-section-library-religion": "religió",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identitat",
@@ -153,7 +170,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "article destacat",
   "app-menu-cover-topic": "tema de portada",
-  "app-menu-news": "news",
+  "app-menu-news": "Notícies",
   "app-menu-culture": "cultura",
   "app-menu-nature": "naturalesa",
   "app-menu-license": "llicència",
@@ -193,14 +210,20 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "portal destacat",
   "app-guide-musical-instrument": "instrument",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "tecnologia",
+  "app-guide-near-me": "a prop meu",
+  "app-guide-newspapers": "diaris",
+  "app-guide-news-radio": "ràdio",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "indicadors econòmics",
+  "app-guide-ongoing-conflicts": "conflictes",
   "app-guide-radio": "ràdio",
   "app-menu-country-select": "país",
   "app-menu-interests": "interessos",
   "app-menu-command-editor": "editor d'ordres",
   "app-menu-presentation": "presentació",
   "app-menu-editor": "editor",
-  "app-menu-run-code": "executar",
+  "app-menu-run-code": "correr",
   "app-menu-clear-editor": "clar",
   "app-foo": "foo bar baz"
 }
