--- a/app/explore2/assets/i18n/conzept-cs.json
+++ b/app/explore2/assets/i18n/conzept-cs.json
@@ -1,4 +1,3 @@
-
 {
   "app-tab-topics-title": "témata",
   "app-tab-list-title": "seznam",
@@ -16,7 +15,7 @@
   "app-title-citations": "Citace",
   "app-guide-see-more": "vidět víc",
   "app-guide-page": "strana",
-  "app-guide-news": "zprávy",
+  "app-guide-news": "aktuální události",
   "app-guide-topic": "téma",
   "app-guide-artwork": "malování",
   "app-guide-organism": "organismus",
@@ -37,7 +36,7 @@
   "app-section-location-demography": "demografie",
   "app-section-location-ecology": "ekologie",
   "app-section-location-travel": "cestovat",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "počasí",
   "app-section-location-real-estate": "nemovitost",
   "app-menu-actions": "akce",
   "app-menu-background-audio": "Zvuk",
@@ -56,7 +55,24 @@
   "app-menu-random-topic-key": "náhodné téma",
   "app-menu-compare-topics": "porovnat témata",
   "app-menu-toggle-fullscreen": "přepnout na celou obrazovku",
-  "app-menu-bookmark-current-view": "přidat aktuální URL do záložek",
+  "app-menu-bookmark-actions": "akce výběru záložek",
+  "app-menu-bookmark-actions-reasoning": "uvažování",
+  "app-guide-bookmark-teach-topics": "uč mě",
+  "app-guide-bookmark-quiz-topics": "otestuj mě",
+  "app-guide-bookmark-related-topics": "související témata",
+  "app-guide-bookmark-topic-differences": "rozdíly",
+  "app-guide-bookmark-commonalities": "společné rysy",
+  "app-guide-bookmark-similarities": "podobnosti",
+  "app-guide-bookmark-implications": "Dopady",
+  "app-guide-bookmark-history": "Dějiny",
+  "app-menu-import-as": "importovat záložky",
+  "app-menu-export-as": "exportovat záložky",
+  "app-menu-bookmark-actions-media": "média",
+  "app-menu-visual-search": "vizuální vyhledávání",
+  "app-menu-reading-assistance": "pomoc při čtení",
+  "app-menu-bread": "tučné písmo na začátku slova",
+  "app-menu-ai-tutor": "učitel AI",
+  "app-menu-bookmark-current-view": "uložit aktuální pohled do záložek",
   "app-menu-clone-tab": "karta klon",
   "app-menu-plant-identification": "identifikace rostlin",
   "app-menu-text-identification": "textová identifikace",
@@ -108,7 +124,7 @@
   "app-section-library-general": "Všeobecné",
   "app-section-library-manuscripts": "rukopisy",
   "app-section-library-history": "Dějiny",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "genealogie",
   "app-section-library-legal": "právní",
   "app-section-library-products": "produkty",
   "app-section-media": "média",
@@ -120,7 +136,7 @@
   "app-section-society": "společnost",
   "app-section-society-sports": "sportovní",
   "app-section-society-food": "jídlo",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filozofie",
   "app-section-library-religion": "náboženství",
   "app-section-library-poetry": "poezie",
   "app-section-library-identity": "identita",
@@ -154,7 +170,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "doporučený článek",
   "app-menu-cover-topic": "krycí téma",
-  "app-menu-news": "news",
+  "app-menu-news": "zprávy",
   "app-menu-culture": "kultura",
   "app-menu-nature": "Příroda",
   "app-menu-license": "licence",
@@ -179,7 +195,7 @@
   "app-guide-documentary-title": "dokumentární titul",
   "app-guide-film-title": "název filmu",
   "app-guide-art-movement": "umělecké hnutí",
-  "app-guide-composer": "skladatel",
+  "app-guide-composer": "hudební skladatel",
   "app-guide-painter": "malíř",
   "app-guide-poet": "básník",
   "app-guide-philosopher": "filozof",
@@ -194,14 +210,20 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "doporučený portál",
   "app-guide-musical-instrument": "nástroj",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "technika",
+  "app-guide-near-me": "blízko mne",
+  "app-guide-newspapers": "noviny",
+  "app-guide-news-radio": "rádio",
+  "app-guide-news-tv": "televize",
+  "app-guide-news-economic-indicators": "ekonomické ukazatele",
+  "app-guide-ongoing-conflicts": "konflikty",
   "app-guide-radio": "rádio",
   "app-menu-country-select": "země",
   "app-menu-interests": "zájmy",
   "app-menu-command-editor": "příkazový editor",
   "app-menu-presentation": "prezentace",
   "app-menu-editor": "editor",
-  "app-menu-run-code": "spustit",
-  "app-menu-clear-editor": "přehledný",
+  "app-menu-run-code": "běh",
+  "app-menu-clear-editor": "Průhledná",
   "app-foo": "foo bar baz"
 }
