--- a/app/explore2/assets/i18n/conzept-da.json
+++ b/app/explore2/assets/i18n/conzept-da.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citater",
   "app-guide-see-more": "se mere",
   "app-guide-page": "side",
-  "app-guide-news": "nyheder",
+  "app-guide-news": "aktuelle begivenheder",
   "app-guide-topic": "emne",
   "app-guide-artwork": "maleri",
   "app-guide-organism": "organisme",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "demografi",
   "app-section-location-ecology": "økologi",
   "app-section-location-travel": "rejse",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "vejr",
   "app-section-location-real-estate": "ejendom",
   "app-menu-actions": "handlinger",
   "app-menu-background-audio": "lyd",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "tilfældigt emne",
   "app-menu-compare-topics": "sammenligne emner",
   "app-menu-toggle-fullscreen": "skifte fuldskærm",
-  "app-menu-bookmark-current-view": "bogmærke den aktuelle URL",
+  "app-menu-bookmark-actions": "bogmærkevalgshandlinger",
+  "app-menu-bookmark-actions-reasoning": "ræsonnement",
+  "app-guide-bookmark-teach-topics": "Lær mig",
+  "app-guide-bookmark-quiz-topics": "quiz mig",
+  "app-guide-bookmark-related-topics": "relaterede emner",
+  "app-guide-bookmark-topic-differences": "forskelle",
+  "app-guide-bookmark-commonalities": "fællestræk",
+  "app-guide-bookmark-similarities": "ligheder",
+  "app-guide-bookmark-implications": "implikationer",
+  "app-guide-bookmark-history": "historie",
+  "app-menu-import-as": "importere bogmærker",
+  "app-menu-export-as": "eksportere bogmærker",
+  "app-menu-bookmark-actions-media": "medier",
+  "app-menu-visual-search": "visuel søgning",
+  "app-menu-reading-assistance": "læsehjælp",
+  "app-menu-bread": "ord-start fed",
+  "app-menu-ai-tutor": "AI underviser",
+  "app-menu-bookmark-current-view": "bogmærke den aktuelle visning",
   "app-menu-clone-tab": "klon fane",
   "app-menu-plant-identification": "planteidentifikation",
   "app-menu-text-identification": "tekst identifikation",
@@ -71,7 +88,7 @@
   "app-menu-color-filter": "farvefilter",
   "app-menu-locale": "lokalitet",
   "app-menu-style": "stil",
-  "app-menu-speed": "hastighed",
+  "app-menu-speed": "fart",
   "app-menu-pitch": "tonehøjde",
   "app-menu-fullscreen-active-pane": "fuldskærm den aktive rude",
   "app-menu-toggle-sidebar": "skift sidebjælken",
@@ -107,7 +124,7 @@
   "app-section-library-general": "generel",
   "app-section-library-manuscripts": "manuskripter",
   "app-section-library-history": "historie",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "genealogi",
   "app-section-library-legal": "gyldige",
   "app-section-library-products": "Produkter",
   "app-section-media": "medier",
@@ -119,14 +136,14 @@
   "app-section-society": "samfund",
   "app-section-society-sports": "sport",
   "app-section-society-food": "mad",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filosofi",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
   "app-section-society-events": "begivenheder",
   "app-guide-welcome-text": "Conzept er et forsøg på at skabe en encyklopædi for det 21. århundrede.  <br><br> Nyd dine udforskninger! ",
   "app-section-society-shopping": "handle ind",
-  "app-notification-too-few-compare-topics": "Tilføj først to eller flere emner til sammenligningen ved at bruge knappen (placeret øverst i Wikipedia-artiklen og i emnets meta-sektion)",
+  "app-notification-too-few-compare-topics": "Tilføj først to eller flere emner til sammenligningen ved hjælp af knappen (placeret øverst i Wikipedia-artiklen og i meta-sektionen af ​​emnet)",
   "app-menu-goto-next-topic": "gå til næste emne (i sidebjælkens resultater)",
   "app-menu-goto-previous-topic": "gå til forrige emne (i sidebjælkens resultater)",
   "app-menu-goto-next-pane": "gå til næste rude",
@@ -153,7 +170,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "fremhævet artikel",
   "app-menu-cover-topic": "dække emne",
-  "app-menu-news": "news",
+  "app-menu-news": "nyheder",
   "app-menu-culture": "kultur",
   "app-menu-nature": "natur",
   "app-menu-license": "licens",
@@ -193,14 +210,20 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "fremhævet portal",
   "app-guide-musical-instrument": "instrument",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "teknologi",
+  "app-guide-near-me": "tæt på mig",
+  "app-guide-newspapers": "aviser",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "økonomiske indikatorer",
+  "app-guide-ongoing-conflicts": "konflikter",
   "app-guide-radio": "radio",
   "app-menu-country-select": "Land",
   "app-menu-interests": "interesser",
   "app-menu-command-editor": "kommando editor",
   "app-menu-presentation": "præsentation",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "køre",
+  "app-menu-editor": "redaktør",
+  "app-menu-run-code": "løb",
   "app-menu-clear-editor": "klar",
   "app-foo": "foo bar baz"
 }
