--- a/app/explore2/assets/i18n/conzept-fa.json
+++ b/app/explore2/assets/i18n/conzept-fa.json
@@ -15,7 +15,7 @@
   "app-title-citations": "استناد",
   "app-guide-see-more": "بیشتر ببین",
   "app-guide-page": "صفحه",
-  "app-guide-news": "اخبار",
+  "app-guide-news": "رویدادهای جاری",
   "app-guide-topic": "موضوع",
   "app-guide-artwork": "رنگ آمیزی",
   "app-guide-organism": "ارگانیسم",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "جمعیت شناسی",
   "app-section-location-ecology": "بوم شناسی",
   "app-section-location-travel": "مسافرت رفتن",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "آب و هوا",
   "app-section-location-real-estate": "مشاور املاک",
   "app-menu-actions": "اقدامات",
   "app-menu-background-audio": "سمعی",
@@ -48,14 +48,31 @@
   "app-menu-interface-language": "زبان رابط",
   "app-menu-voice": "صدا",
   "app-menu-user-manual": "راهنمای کاربری",
-  "app-menu-keyboard-shortcuts": "کلید های میانبر صفحه کلید",
+  "app-menu-keyboard-shortcuts": "میانبرهای صفحه کلید",
   "app-menu-credits": "وام",
   "app-menu-about": "در باره",
   "app-menu-random-topic": "موضوع تصادفی",
   "app-menu-random-topic-key": "موضوع تصادفی",
   "app-menu-compare-topics": "موضوعات را مقایسه کنید",
   "app-menu-toggle-fullscreen": "تمام صفحه را تغییر دهید",
-  "app-menu-bookmark-current-view": "نشانک URL فعلی",
+  "app-menu-bookmark-actions": "اقدامات انتخاب نشانک",
+  "app-menu-bookmark-actions-reasoning": "استدلال",
+  "app-guide-bookmark-teach-topics": "به من بیاموز",
+  "app-guide-bookmark-quiz-topics": "من را امتحان کنید",
+  "app-guide-bookmark-related-topics": "مطالب مرتبط",
+  "app-guide-bookmark-topic-differences": "تفاوت",
+  "app-guide-bookmark-commonalities": "مشترکات",
+  "app-guide-bookmark-similarities": "شباهت ها",
+  "app-guide-bookmark-implications": "مفاهیم",
+  "app-guide-bookmark-history": "تاریخ",
+  "app-menu-import-as": "وارد کردن نشانک ها",
+  "app-menu-export-as": "صادرات نشانک ها",
+  "app-menu-bookmark-actions-media": "رسانه ها",
+  "app-menu-visual-search": "جستجوی بصری",
+  "app-menu-reading-assistance": "کمک خواندن",
+  "app-menu-bread": "پررنگ کردن کلمه شروع کنید",
+  "app-menu-ai-tutor": "معلم هوش مصنوعی",
+  "app-menu-bookmark-current-view": "نمای فعلی نشانک",
   "app-menu-clone-tab": "تب کلون",
   "app-menu-plant-identification": "شناسایی گیاه",
   "app-menu-text-identification": "شناسایی متن",
@@ -73,7 +90,7 @@
   "app-menu-style": "سبک",
   "app-menu-speed": "سرعت",
   "app-menu-pitch": "گام صدا",
-  "app-menu-fullscreen-active-pane": "تمام صفحه نمایش فعال",
+  "app-menu-fullscreen-active-pane": "صفحه فعال تمام صفحه",
   "app-menu-toggle-sidebar": "نوار کناری را تغییر دهید",
   "app-menu-add-bookmark": "اضافه کردن نشانه",
   "app-menu-note-1": "توجه 1: فقط زمانی در دسترس است که تمرکز روی نوار کناری یا صفحه مقاله ویکی‌پدیا باشد.",
@@ -107,7 +124,7 @@
   "app-section-library-general": "عمومی",
   "app-section-library-manuscripts": "نسخه های خطی",
   "app-section-library-history": "تاریخ",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "شجره نامه",
   "app-section-library-legal": "مجاز",
   "app-section-library-products": "محصولات",
   "app-section-media": "رسانه ها",
@@ -119,7 +136,7 @@
   "app-section-society": "جامعه",
   "app-section-society-sports": "ورزش ها",
   "app-section-society-food": "غذا",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "فلسفه",
   "app-section-library-religion": "دین",
   "app-section-library-poetry": "شعر",
   "app-section-library-identity": "هویت",
@@ -153,7 +170,7 @@
   "app-guide-virus": "ویروس",
   "app-guide-featured-article": "مقاله برجسته",
   "app-menu-cover-topic": "پوشش موضوع",
-  "app-menu-news": "news",
+  "app-menu-news": "اخبار",
   "app-menu-culture": "فرهنگ",
   "app-menu-nature": "طبیعت",
   "app-menu-license": "مجوز",
@@ -162,7 +179,7 @@
   "app-guide-continent": "قاره",
   "app-guide-bioregion": "منطقه زیستی",
   "app-guide-mountain-range": "محدوده کوهستانی",
-  "app-guide-disease": "مرض",
+  "app-guide-disease": "بیماری",
   "app-guide-protein": "پروتئین",
   "app-guide-atom": "اتم",
   "app-guide-protist": "پروتیست",
@@ -170,7 +187,7 @@
   "app-guide-capitol": "کاپیتول",
   "app-guide-form-of-government": "شکل حکومت",
   "app-guide-religion": "دین",
-  "app-guide-period": "عادت زنانه",
+  "app-guide-period": "دوره زمانی",
   "app-guide-history-aspect": "جنبه تاریخی",
   "app-guide-revolution": "انقلاب",
   "app-guide-war": "جنگ",
@@ -193,13 +210,19 @@
   "app-menu-persona": "شخصیت",
   "app-guide-featured-portal": "پورتال برجسته",
   "app-guide-musical-instrument": "ابزار",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "فن آوری",
+  "app-guide-near-me": "نزدیک من",
+  "app-guide-newspapers": "روزنامه ها",
+  "app-guide-news-radio": "رادیو",
+  "app-guide-news-tv": "تلویزیون",
+  "app-guide-news-economic-indicators": "نشانگرهای اقتصادی",
+  "app-guide-ongoing-conflicts": "درگیری ها",
   "app-guide-radio": "رادیو",
   "app-menu-country-select": "کشور",
   "app-menu-interests": "منافع",
   "app-menu-command-editor": "ویرایشگر فرمان",
   "app-menu-presentation": "ارائه",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "ویرایشگر",
   "app-menu-run-code": "اجرا کن",
   "app-menu-clear-editor": "روشن",
   "app-foo": "فو بار باز"
