--- a/app/explore2/assets/i18n/conzept-fi.json
+++ b/app/explore2/assets/i18n/conzept-fi.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Lainaukset",
   "app-guide-see-more": "Katso lisää",
   "app-guide-page": "sivu",
-  "app-guide-news": "uutiset",
+  "app-guide-news": "ajankohtaiset tapahtumat",
   "app-guide-topic": "aihe",
   "app-guide-artwork": "maalaus",
   "app-guide-organism": "organismi",
@@ -36,10 +36,10 @@
   "app-section-location-demography": "väestötiede",
   "app-section-location-ecology": "ekologia",
   "app-section-location-travel": "matkustaa",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "sää",
   "app-section-location-real-estate": "Kiinteistöt",
   "app-menu-actions": "Toiminnot",
-  "app-menu-background-audio": "audio-",
+  "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "aiheluettelot",
   "app-menu-various-links": "erilaisia ​​linkkejä",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "satunnainen aihe",
   "app-menu-compare-topics": "vertailla aiheita",
   "app-menu-toggle-fullscreen": "vaihtaa koko näytön päälle",
-  "app-menu-bookmark-current-view": "merkitse nykyinen URL-osoite kirjanmerkkeihin",
+  "app-menu-bookmark-actions": "kirjanmerkkien valintatoiminnot",
+  "app-menu-bookmark-actions-reasoning": "perustelut",
+  "app-guide-bookmark-teach-topics": "opeta minua",
+  "app-guide-bookmark-quiz-topics": "kysy minulta",
+  "app-guide-bookmark-related-topics": "liittyvät aiheet",
+  "app-guide-bookmark-topic-differences": "eroja",
+  "app-guide-bookmark-commonalities": "yhteisiä piirteitä",
+  "app-guide-bookmark-similarities": "yhtäläisyyksiä",
+  "app-guide-bookmark-implications": "seurauksia",
+  "app-guide-bookmark-history": "historia",
+  "app-menu-import-as": "tuoda kirjanmerkkejä",
+  "app-menu-export-as": "viedä kirjanmerkkejä",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-visual-search": "visuaalinen haku",
+  "app-menu-reading-assistance": "lukuapua",
+  "app-menu-bread": "sana-alku lihavointi",
+  "app-menu-ai-tutor": "AI tutor",
+  "app-menu-bookmark-current-view": "merkitse nykyinen näkymä kirjanmerkkeihin",
   "app-menu-clone-tab": "klooni-välilehti",
   "app-menu-plant-identification": "kasvin tunnistaminen",
   "app-menu-text-identification": "tekstitunniste",
@@ -107,19 +124,19 @@
   "app-section-library-general": "yleistä",
   "app-section-library-manuscripts": "käsikirjoituksia",
   "app-section-library-history": "historia",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "sukututkimusta",
   "app-section-library-legal": "laillinen",
   "app-section-library-products": "Tuotteet",
   "app-section-media": "media",
-  "app-section-media-video": "video-",
+  "app-section-media-video": "video",
   "app-section-media-image": "kuva",
-  "app-section-media-audio": "audio-",
+  "app-section-media-audio": "audio",
   "app-section-media-software": "ohjelmisto",
   "app-section-meta": "meta",
   "app-section-society": "yhteiskuntaan",
   "app-section-society-sports": "Urheilu",
   "app-section-society-food": "ruokaa",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filosofia",
   "app-section-library-religion": "uskonto",
   "app-section-library-poetry": "runous",
   "app-section-library-identity": "identiteetti",
@@ -153,7 +170,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "esillä oleva artikkeli",
   "app-menu-cover-topic": "kansi aihe",
-  "app-menu-news": "news",
+  "app-menu-news": "uutiset",
   "app-menu-culture": "kulttuuri",
   "app-menu-nature": "luonto",
   "app-menu-license": "lisenssi",
@@ -175,7 +192,7 @@
   "app-guide-revolution": "vallankumous",
   "app-guide-war": "sota",
   "app-guide-battle": "taistelu",
-  "app-guide-documentary-title": "dokumentin nimi",
+  "app-guide-documentary-title": "dokumentin otsikko",
   "app-guide-film-title": "elokuvan nimi",
   "app-guide-art-movement": "taiteen liike",
   "app-guide-composer": "säveltäjä",
@@ -193,14 +210,20 @@
   "app-menu-persona": "persoona",
   "app-guide-featured-portal": "esitelty portaali",
   "app-guide-musical-instrument": "väline",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "teknologiaa",
+  "app-guide-near-me": "lähellä minua",
+  "app-guide-newspapers": "sanomalehdet",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "taloudelliset indikaattorit",
+  "app-guide-ongoing-conflicts": "konflikteja",
   "app-guide-radio": "radio",
   "app-menu-country-select": "maa",
   "app-menu-interests": "kiinnostuksen kohteet",
   "app-menu-command-editor": "komentoeditori",
   "app-menu-presentation": "esittely",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "suorita",
-  "app-menu-clear-editor": "selkeä",
+  "app-menu-editor": "toimittaja",
+  "app-menu-run-code": "juosta",
+  "app-menu-clear-editor": "asia selvä",
   "app-foo": "foo bar baz"
 }
