--- a/app/explore2/assets/i18n/conzept-ha.json
+++ b/app/explore2/assets/i18n/conzept-ha.json
@@ -15,7 +15,7 @@
   "app-title-citations": "ambato",
   "app-guide-see-more": "karin gani",
   "app-guide-page": "shafi",
-  "app-guide-news": "labarai",
+  "app-guide-news": "abubuwan da ke faruwa a yanzu",
   "app-guide-topic": "batu",
   "app-guide-artwork": "zanen",
   "app-guide-organism": "kwayoyin halitta",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "alƙaluma",
   "app-section-location-ecology": "ilimin halitta",
   "app-section-location-travel": "tafiya",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "yanayi",
   "app-section-location-real-estate": "dukiya",
   "app-menu-actions": "ayyuka",
   "app-menu-background-audio": "audio",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "batun bazuwar",
   "app-menu-compare-topics": "kwatanta batutuwa",
   "app-menu-toggle-fullscreen": "kunna cikakken allo",
-  "app-menu-bookmark-current-view": "alamar URL na yanzu",
+  "app-menu-bookmark-actions": "alamar shafi-zaɓi ayyuka",
+  "app-menu-bookmark-actions-reasoning": "tunani",
+  "app-guide-bookmark-teach-topics": "koya min",
+  "app-guide-bookmark-quiz-topics": "yi min tambaya",
+  "app-guide-bookmark-related-topics": "batutuwa masu alaka",
+  "app-guide-bookmark-topic-differences": "bambance-bambance",
+  "app-guide-bookmark-commonalities": "gama-gari",
+  "app-guide-bookmark-similarities": "kamanceceniya",
+  "app-guide-bookmark-implications": "abubuwan da ke faruwa",
+  "app-guide-bookmark-history": "tarihi",
+  "app-menu-import-as": "shigo da alamun shafi",
+  "app-menu-export-as": "alamun fitarwa",
+  "app-menu-bookmark-actions-media": "kafofin watsa labarai",
+  "app-menu-visual-search": "bincike na gani",
+  "app-menu-reading-assistance": "taimakon karatu",
+  "app-menu-bread": "kalma-fara ƙarfin hali",
+  "app-menu-ai-tutor": "AI mai koyarwa",
+  "app-menu-bookmark-current-view": "alamar shafi na halin yanzu",
   "app-menu-clone-tab": "clone tab",
   "app-menu-plant-identification": "ganewar shuka",
   "app-menu-text-identification": "tantance rubutu",
@@ -76,7 +93,7 @@
   "app-menu-fullscreen-active-pane": "cika allo mai aiki",
   "app-menu-toggle-sidebar": "kunna labarun gefe",
   "app-menu-add-bookmark": "ƙara alamar shafi",
-  "app-menu-note-1": "bayanin kula 1: yana samuwa kawai lokacin da aka mayar da hankali kan labarun gefe ko ɓangaren labarin Wikipedia.",
+  "app-menu-note-1": "bayanin kula 1: ana samun kawai lokacin da aka mayar da hankali kan labarun gefe ko sashin labarin Wikipedia.",
   "app-section-business": "kasuwanci",
   "app-section-government": "gwamnati",
   "app-section-government-general": "na gaba ɗaya",
@@ -107,7 +124,7 @@
   "app-section-library-general": "na gaba ɗaya",
   "app-section-library-manuscripts": "rubuce-rubucen hannu",
   "app-section-library-history": "tarihi",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "zuriyarsu",
   "app-section-library-legal": "na shari'a",
   "app-section-library-products": "samfurori",
   "app-section-media": "kafofin watsa labarai",
@@ -119,7 +136,7 @@
   "app-section-society": "al'umma",
   "app-section-society-sports": "wasanni",
   "app-section-society-food": "abinci",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "falsafa",
   "app-section-library-religion": "addini",
   "app-section-library-poetry": "waka",
   "app-section-library-identity": "ainihi",
@@ -153,7 +170,7 @@
   "app-guide-virus": "ƙwayar cuta",
   "app-guide-featured-article": "labarin da aka gabatar",
   "app-menu-cover-topic": "batun rufewa",
-  "app-menu-news": "news",
+  "app-menu-news": "labarai",
   "app-menu-culture": "al'ada",
   "app-menu-nature": "yanayi",
   "app-menu-license": "lasisi",
@@ -193,13 +210,19 @@
   "app-menu-persona": "mutum",
   "app-guide-featured-portal": "portal mai fasali",
   "app-guide-musical-instrument": "kayan aiki",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "fasaha",
+  "app-guide-near-me": "kusa da ni",
+  "app-guide-newspapers": "jaridu",
+  "app-guide-news-radio": "rediyo",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "alamomin tattalin arziki",
+  "app-guide-ongoing-conflicts": "rikice-rikice",
   "app-guide-radio": "rediyo",
   "app-menu-country-select": "kasa",
   "app-menu-interests": "sha'awa",
   "app-menu-command-editor": "editan umarni",
   "app-menu-presentation": "gabatarwa",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "edita",
   "app-menu-run-code": "gudu",
   "app-menu-clear-editor": "bayyananne",
   "app-foo": "foo bar ba"
