--- a/app/explore2/assets/i18n/conzept-hr.json
+++ b/app/explore2/assets/i18n/conzept-hr.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citati",
   "app-guide-see-more": "vidi više",
   "app-guide-page": "stranica",
-  "app-guide-news": "vijesti",
+  "app-guide-news": "tekuće događaje",
   "app-guide-topic": "tema",
   "app-guide-artwork": "slika",
   "app-guide-organism": "organizam",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "demografija",
   "app-section-location-ecology": "ekologija",
   "app-section-location-travel": "putovati",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "vrijeme",
   "app-section-location-real-estate": "nekretnina",
   "app-menu-actions": "akcije",
   "app-menu-background-audio": "audio",
@@ -48,14 +48,31 @@
   "app-menu-interface-language": "jezik sučelja",
   "app-menu-voice": "glas",
   "app-menu-user-manual": "Korisnički priručnik",
-  "app-menu-keyboard-shortcuts": "prečaci na tipkovnici",
+  "app-menu-keyboard-shortcuts": "prečice na tipkovnici",
   "app-menu-credits": "krediti",
   "app-menu-about": "oko",
   "app-menu-random-topic": "slučajna tema",
   "app-menu-random-topic-key": "slučajna tema",
   "app-menu-compare-topics": "usporediti teme",
   "app-menu-toggle-fullscreen": "prebaci preko cijelog zaslona",
-  "app-menu-bookmark-current-view": "označi trenutni URL",
+  "app-menu-bookmark-actions": "akcije odabira oznaka",
+  "app-menu-bookmark-actions-reasoning": "rasuđivanje",
+  "app-guide-bookmark-teach-topics": "nauči me",
+  "app-guide-bookmark-quiz-topics": "ispitaj me",
+  "app-guide-bookmark-related-topics": "srodne teme",
+  "app-guide-bookmark-topic-differences": "Razlike",
+  "app-guide-bookmark-commonalities": "zajedničke karakteristike",
+  "app-guide-bookmark-similarities": "sličnosti",
+  "app-guide-bookmark-implications": "implikacije",
+  "app-guide-bookmark-history": "povijesti",
+  "app-menu-import-as": "uvoz knjižnih oznaka",
+  "app-menu-export-as": "izvoz oznaka",
+  "app-menu-bookmark-actions-media": "medijima",
+  "app-menu-visual-search": "vizualno pretraživanje",
+  "app-menu-reading-assistance": "pomoć u čitanju",
+  "app-menu-bread": "početak riječi podebljano",
+  "app-menu-ai-tutor": "učitelj umjetne inteligencije",
+  "app-menu-bookmark-current-view": "označi trenutni prikaz",
   "app-menu-clone-tab": "kartica kloniranja",
   "app-menu-plant-identification": "identifikacija biljke",
   "app-menu-text-identification": "identifikacija teksta",
@@ -107,7 +124,7 @@
   "app-section-library-general": "Općenito",
   "app-section-library-manuscripts": "rukopisi",
   "app-section-library-history": "povijesti",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "genealogija",
   "app-section-library-legal": "pravni",
   "app-section-library-products": "proizvoda",
   "app-section-media": "medijima",
@@ -119,7 +136,7 @@
   "app-section-society": "društvo",
   "app-section-society-sports": "sportski",
   "app-section-society-food": "hrana",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filozofija",
   "app-section-library-religion": "religija",
   "app-section-library-poetry": "poezija",
   "app-section-library-identity": "identitet",
@@ -153,8 +170,8 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "istaknuti članak",
   "app-menu-cover-topic": "naslovna tema",
-  "app-menu-news": "news",
-  "app-menu-culture": "kultura",
+  "app-menu-news": "vijesti",
+  "app-menu-culture": "Kultura",
   "app-menu-nature": "priroda",
   "app-menu-license": "licencija",
   "app-guide-help": "Pomozite",
@@ -193,14 +210,20 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "istaknuti portal",
   "app-guide-musical-instrument": "instrument",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "tehnologija",
+  "app-guide-near-me": "blizu mene",
+  "app-guide-newspapers": "novine",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "televizor",
+  "app-guide-news-economic-indicators": "ekonomski pokazatelji",
+  "app-guide-ongoing-conflicts": "sukobi",
   "app-guide-radio": "radio",
   "app-menu-country-select": "zemlja",
   "app-menu-interests": "interesa",
   "app-menu-command-editor": "uređivač naredbi",
   "app-menu-presentation": "prezentacija",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "pokrenuti",
-  "app-menu-clear-editor": "jasan",
+  "app-menu-editor": "urednik",
+  "app-menu-run-code": "trčanje",
+  "app-menu-clear-editor": "čisto",
   "app-foo": "foo bar baz"
 }
