--- a/app/explore2/assets/i18n/conzept-id.json
+++ b/app/explore2/assets/i18n/conzept-id.json
@@ -4,18 +4,18 @@
   "app-tab-bookmarks-title": "penanda buku",
   "app-tab-tools-title": "peralatan",
   "app-tab-settings-title": "pengaturan",
-  "app-tab-help-title": "Tolong",
+  "app-tab-help-title": "membantu",
   "app-tab-audio-chat-title": "obrolan audio",
-  "app-search-placeholder": "Cari",
+  "app-search-placeholder": "mencari",
   "app-structured-search-title": "pencarian terstruktur",
   "app-title-occurence": "Peta kejadian",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "halaman",
-  "app-title-citations": "kutipan",
+  "app-title-citations": "Kutipan",
   "app-guide-see-more": "lihat lebih banyak",
   "app-guide-page": "halaman",
-  "app-guide-news": "berita",
+  "app-guide-news": "Peristiwa saat ini",
   "app-guide-topic": "tema",
   "app-guide-artwork": "lukisan",
   "app-guide-organism": "organisme",
@@ -23,9 +23,9 @@
   "app-guide-science": "sains",
   "app-topics-found": "topik ditemukan",
   "app-section-main": "utama",
-  "app-section-info": "informasi",
-  "app-section-library": "Perpustakaan",
-  "app-section-web": "jaring",
+  "app-section-info": "info",
+  "app-section-library": "perpustakaan",
+  "app-section-web": "web",
   "app-section-news": "berita",
   "app-section-news-general": "umum",
   "app-section-social": "sosial",
@@ -36,14 +36,14 @@
   "app-section-location-demography": "demografi",
   "app-section-location-ecology": "ekologi",
   "app-section-location-travel": "bepergian",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "cuaca",
   "app-section-location-real-estate": "perumahan",
   "app-menu-actions": "tindakan",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "daftar topik",
   "app-menu-various-links": "berbagai tautan",
-  "app-menu-font": "fon",
+  "app-menu-font": "font",
   "app-menu-theme": "tema",
   "app-menu-interface-language": "Bahasa antarmuka",
   "app-menu-voice": "suara",
@@ -54,9 +54,26 @@
   "app-menu-random-topic": "topik acak",
   "app-menu-random-topic-key": "topik acak",
   "app-menu-compare-topics": "membandingkan topik",
-  "app-menu-toggle-fullscreen": "alihkan layar penuh",
-  "app-menu-bookmark-current-view": "tandai URL saat ini",
-  "app-menu-clone-tab": "kloning tab",
+  "app-menu-toggle-fullscreen": "beralih ke layar penuh",
+  "app-menu-bookmark-actions": "tindakan pemilihan bookmark",
+  "app-menu-bookmark-actions-reasoning": "pemikiran",
+  "app-guide-bookmark-teach-topics": "ajari aku",
+  "app-guide-bookmark-quiz-topics": "kuis aku",
+  "app-guide-bookmark-related-topics": "topik-topik terkait",
+  "app-guide-bookmark-topic-differences": "perbedaan",
+  "app-guide-bookmark-commonalities": "kesamaan",
+  "app-guide-bookmark-similarities": "kesamaan",
+  "app-guide-bookmark-implications": "implikasi",
+  "app-guide-bookmark-history": "sejarah",
+  "app-menu-import-as": "impor bookmark",
+  "app-menu-export-as": "ekspor bookmark",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-visual-search": "pencarian visual",
+  "app-menu-reading-assistance": "bantuan membaca",
+  "app-menu-bread": "huruf tebal di awal kata",
+  "app-menu-ai-tutor": "guru AI",
+  "app-menu-bookmark-current-view": "tandai tampilan saat ini",
+  "app-menu-clone-tab": "tab klon",
   "app-menu-plant-identification": "identifikasi tanaman",
   "app-menu-text-identification": "identifikasi teks",
   "app-menu-digital-libraries": "perpustakaan digital",
@@ -68,7 +85,7 @@
   "app-menu-font-size": "ukuran huruf",
   "app-menu-darkmode": "mode gelap",
   "app-menu-link-preview": "pratinjau tautan",
-  "app-menu-color-filter": "filter warna",
+  "app-menu-color-filter": "penyaring warna",
   "app-menu-locale": "lokal",
   "app-menu-style": "gaya",
   "app-menu-speed": "kecepatan",
@@ -76,13 +93,13 @@
   "app-menu-fullscreen-active-pane": "layar penuh panel aktif",
   "app-menu-toggle-sidebar": "alihkan bilah sisi",
   "app-menu-add-bookmark": "tambah bookmark",
-  "app-menu-note-1": "catatan 1: hanya tersedia saat fokus berada di bilah sisi atau panel artikel Wikipedia.",
+  "app-menu-note-1": "catatan 1: hanya tersedia bila fokus berada pada bilah sisi atau panel artikel Wikipedia.",
   "app-section-business": "bisnis",
   "app-section-government": "pemerintah",
   "app-section-government-general": "umum",
   "app-section-government-legislature": "badan legislatif",
   "app-section-government-executive": "eksekutif",
-  "app-section-government-judicial": "peradilan",
+  "app-section-government-judicial": "yudisial",
   "app-section-education": "pendidikan",
   "app-section-education-assistance": "pendampingan",
   "app-section-education-courses": "kursus",
@@ -96,7 +113,7 @@
   "app-section-science-biology": "biologi",
   "app-section-science-medical": "medis",
   "app-section-science-chemistry": "kimia",
-  "app-section-science-minerology": "minerologi",
+  "app-section-science-minerology": "mineralogi",
   "app-section-science-archeology": "arkeologi",
   "app-section-science-mathematics": "matematika",
   "app-section-science-astronomy": "astronomi",
@@ -107,7 +124,7 @@
   "app-section-library-general": "umum",
   "app-section-library-manuscripts": "manuskrip",
   "app-section-library-history": "sejarah",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "silsilah",
   "app-section-library-legal": "hukum",
   "app-section-library-products": "produk",
   "app-section-media": "media",
@@ -119,16 +136,16 @@
   "app-section-society": "masyarakat",
   "app-section-society-sports": "olahraga",
   "app-section-society-food": "makanan",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filsafat",
   "app-section-library-religion": "agama",
   "app-section-library-poetry": "puisi",
   "app-section-library-identity": "identitas",
   "app-section-society-events": "acara",
-  "app-guide-welcome-text": "Conzept adalah upaya untuk membuat ensiklopedia untuk abad ke-21.  <br><br> Nikmati penjelajahan Anda! ",
+  "app-guide-welcome-text": "Conzept merupakan upaya untuk membuat ensiklopedia untuk abad ke-21.  <br><br> Nikmati penjelajahan Anda! ",
   "app-section-society-shopping": "belanja",
-  "app-notification-too-few-compare-topics": "Pertama tambahkan dua atau lebih topik ke perbandingan, menggunakan tombol (terletak di bagian atas artikel Wikipedia dan di bagian meta topik)",
-  "app-menu-goto-next-topic": "pergi ke topik berikutnya (di hasil sidebar)",
-  "app-menu-goto-previous-topic": "pergi ke topik sebelumnya (di hasil sidebar)",
+  "app-notification-too-few-compare-topics": "Pertama, tambahkan dua topik atau lebih ke perbandingan, menggunakan tombol (terletak di bagian atas artikel Wikipedia dan di bagian meta topik)",
+  "app-menu-goto-next-topic": "lanjutkan ke topik berikutnya (di hasil sidebar)",
+  "app-menu-goto-previous-topic": "buka topik sebelumnya (di hasil sidebar)",
   "app-menu-goto-next-pane": "pergi ke panel berikutnya",
   "app-menu-goto-previous-pane": "pergi ke panel sebelumnya",
   "app-menu-new-search": "pencarian baru",
@@ -152,12 +169,12 @@
   "app-guide-bacterium": "bakteri",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "artikel unggulan",
-  "app-menu-cover-topic": "topik penutup",
-  "app-menu-news": "news",
+  "app-menu-cover-topic": "topik sampul",
+  "app-menu-news": "berita",
   "app-menu-culture": "budaya",
   "app-menu-nature": "alam",
   "app-menu-license": "lisensi",
-  "app-guide-help": "Tolong",
+  "app-guide-help": "membantu",
   "app-guide-sea": "laut",
   "app-guide-continent": "benua",
   "app-guide-bioregion": "bioregion",
@@ -167,10 +184,10 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protista",
   "app-guide-country-map": "peta negara",
-  "app-guide-capitol": "ibukota",
-  "app-guide-form-of-government": "bentuk pemerintahan",
+  "app-guide-capitol": "gedung DPR",
+  "app-guide-form-of-government": "bentuk pemerintahan.",
   "app-guide-religion": "agama",
-  "app-guide-period": "Titik",
+  "app-guide-period": "periode",
   "app-guide-history-aspect": "aspek sejarah",
   "app-guide-revolution": "revolusi",
   "app-guide-war": "perang",
@@ -188,19 +205,25 @@
   "app-guide-mathematics": "matematika",
   "app-guide-tourist-attraction": "objek wisata",
   "app-guide-dish": "piring",
-  "app-guide-cell-type": "tipe sel",
-  "app-guide-archae": "archae",
+  "app-guide-cell-type": "jenis sel",
+  "app-guide-archae": "kuno",
   "app-menu-persona": "kepribadian",
   "app-guide-featured-portal": "portal unggulan",
   "app-guide-musical-instrument": "instrumen",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "teknologi",
+  "app-guide-near-me": "dekat saya",
+  "app-guide-newspapers": "surat kabar",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "televisi",
+  "app-guide-news-economic-indicators": "indikator ekonomi",
+  "app-guide-ongoing-conflicts": "konflik",
   "app-guide-radio": "radio",
   "app-menu-country-select": "negara",
   "app-menu-interests": "minat",
   "app-menu-command-editor": "editor perintah",
   "app-menu-presentation": "presentasi",
   "app-menu-editor": "editor",
-  "app-menu-run-code": "Lari",
+  "app-menu-run-code": "berlari",
   "app-menu-clear-editor": "jernih",
   "app-foo": "foo bar baz"
 }
