--- a/app/explore2/assets/i18n/conzept-it.json
+++ b/app/explore2/assets/i18n/conzept-it.json
@@ -2,41 +2,41 @@
   "app-tab-topics-title": "temi",
   "app-tab-list-title": "elenco",
   "app-tab-bookmarks-title": "segnalibri",
-  "app-tab-tools-title": "Strumenti",
+  "app-tab-tools-title": "utensili",
   "app-tab-settings-title": "impostazioni",
   "app-tab-help-title": "aiuto",
   "app-tab-audio-chat-title": "chat audio",
   "app-search-placeholder": "ricerca",
   "app-structured-search-title": "ricerca strutturata",
-  "app-title-occurence": "Mappa delle occorrenze",
+  "app-title-occurence": "Mappa degli eventi",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "pagine",
   "app-title-citations": "Citazioni",
   "app-guide-see-more": "Vedi altro",
   "app-guide-page": "pagina",
-  "app-guide-news": "notizia",
+  "app-guide-news": "eventi attuali",
   "app-guide-topic": "argomento",
-  "app-guide-artwork": "la pittura",
+  "app-guide-artwork": "pittura",
   "app-guide-organism": "organismo",
   "app-guide-music": "musica",
   "app-guide-science": "scienza",
   "app-topics-found": "argomenti trovati",
   "app-section-main": "principale",
-  "app-section-info": "Informazioni",
+  "app-section-info": "informazioni",
   "app-section-library": "biblioteca",
   "app-section-web": "ragnatela",
   "app-section-news": "notizia",
   "app-section-news-general": "generale",
   "app-section-social": "sociale",
-  "app-section-news-tech": "tecnico",
+  "app-section-news-tech": "tecnologia",
   "app-section-society-jobs": "lavori",
-  "app-section-location": "Posizione",
+  "app-section-location": "posizione",
   "app-section-location-geography": "geografia",
   "app-section-location-demography": "demografia",
   "app-section-location-ecology": "ecologia",
-  "app-section-location-travel": "viaggiare",
-  "app-section-location-weather": "weather",
+  "app-section-location-travel": "viaggio",
+  "app-section-location-weather": "tempo atmosferico",
   "app-section-location-real-estate": "immobiliare",
   "app-menu-actions": "Azioni",
   "app-menu-background-audio": "Audio",
@@ -45,20 +45,37 @@
   "app-menu-various-links": "vari collegamenti",
   "app-menu-font": "font",
   "app-menu-theme": "tema",
-  "app-menu-interface-language": "lingua dell'interfaccia",
+  "app-menu-interface-language": "linguaggio dell'interfaccia",
   "app-menu-voice": "voce",
   "app-menu-user-manual": "Manuale d'uso",
   "app-menu-keyboard-shortcuts": "tasti rapidi",
   "app-menu-credits": "crediti",
-  "app-menu-about": "di",
+  "app-menu-about": "Di",
   "app-menu-random-topic": "argomento casuale",
   "app-menu-random-topic-key": "argomento casuale",
-  "app-menu-compare-topics": "confrontare gli argomenti",
+  "app-menu-compare-topics": "confrontare argomenti",
   "app-menu-toggle-fullscreen": "passare a schermo intero",
-  "app-menu-bookmark-current-view": "segnalibro dell'URL corrente",
+  "app-menu-bookmark-actions": "azioni di selezione dei segnalibri",
+  "app-menu-bookmark-actions-reasoning": "ragionamento",
+  "app-guide-bookmark-teach-topics": "insegnami",
+  "app-guide-bookmark-quiz-topics": "interrogami",
+  "app-guide-bookmark-related-topics": "argomenti correlati",
+  "app-guide-bookmark-topic-differences": "differenze",
+  "app-guide-bookmark-commonalities": "punti in comune",
+  "app-guide-bookmark-similarities": "analogie",
+  "app-guide-bookmark-implications": "implicazioni",
+  "app-guide-bookmark-history": "storia",
+  "app-menu-import-as": "importare segnalibri",
+  "app-menu-export-as": "esportare segnalibri",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-visual-search": "ricerca visiva",
+  "app-menu-reading-assistance": "assistenza alla lettura",
+  "app-menu-bread": "inizio parola in grassetto",
+  "app-menu-ai-tutor": "Tutor dell'intelligenza artificiale",
+  "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
   "app-menu-clone-tab": "scheda clone",
   "app-menu-plant-identification": "identificazione delle piante",
-  "app-menu-text-identification": "identificazione testuale",
+  "app-menu-text-identification": "identificazione del testo",
   "app-menu-digital-libraries": "biblioteche digitali",
   "app-menu-geography": "geografia",
   "app-menu-version": "versione",
@@ -68,19 +85,19 @@
   "app-menu-font-size": "dimensione del font",
   "app-menu-darkmode": "Modalità scura",
   "app-menu-link-preview": "anteprima del collegamento",
-  "app-menu-color-filter": "filtro colore",
+  "app-menu-color-filter": "filtro colorato",
   "app-menu-locale": "locale",
   "app-menu-style": "stile",
   "app-menu-speed": "velocità",
-  "app-menu-pitch": "intonazione",
+  "app-menu-pitch": "pece",
   "app-menu-fullscreen-active-pane": "a schermo intero il riquadro attivo",
-  "app-menu-toggle-sidebar": "attiva o disattiva la barra laterale",
+  "app-menu-toggle-sidebar": "attiva/disattiva la barra laterale",
   "app-menu-add-bookmark": "Aggiungi segnalibro",
   "app-menu-note-1": "nota 1: disponibile solo quando lo stato attivo è sulla barra laterale o sul riquadro di un articolo di Wikipedia.",
-  "app-section-business": "attività commerciale",
+  "app-section-business": "Attività commerciale",
   "app-section-government": "governo",
   "app-section-government-general": "generale",
-  "app-section-government-legislature": "legislatore",
+  "app-section-government-legislature": "legislativo",
   "app-section-government-executive": "esecutivo",
   "app-section-government-judicial": "giudiziario",
   "app-section-education": "formazione scolastica",
@@ -89,25 +106,25 @@
   "app-section-education-quizzes": "quiz",
   "app-section-science": "scienza",
   "app-section-science-search-tools": "Strumenti di ricerca",
-  "app-section-science-open-journals": "giornali aperti",
-  "app-section-science-closed-journals": "giornali chiusi",
+  "app-section-science-open-journals": "diari aperti",
+  "app-section-science-closed-journals": "diari chiusi",
   "app-section-science-news": "notizia",
-  "app-section-science-language": "linguaggio",
+  "app-section-science-language": "lingua",
   "app-section-science-biology": "biologia",
   "app-section-science-medical": "medico",
   "app-section-science-chemistry": "chimica",
-  "app-section-science-minerology": "minerologia",
+  "app-section-science-minerology": "mineralogia",
   "app-section-science-archeology": "archeologia",
   "app-section-science-mathematics": "matematica",
   "app-section-science-astronomy": "astronomia",
   "app-section-media-datasets": "set di dati",
   "app-section-media-datasets-general": "generale",
-  "app-section-media-datasets-topical": "d'attualità",
+  "app-section-media-datasets-topical": "attualità",
   "app-section-art": "arte",
   "app-section-library-general": "generale",
   "app-section-library-manuscripts": "manoscritti",
   "app-section-library-history": "storia",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "genealogia",
   "app-section-library-legal": "legale",
   "app-section-library-products": "prodotti",
   "app-section-media": "media",
@@ -119,30 +136,30 @@
   "app-section-society": "società",
   "app-section-society-sports": "gli sport",
   "app-section-society-food": "cibo",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filosofia",
   "app-section-library-religion": "religione",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identità",
   "app-section-society-events": "eventi",
-  "app-guide-welcome-text": "Conzept è un tentativo di creare un'enciclopedia per il 21° secolo.  <br><br> Godetevi le vostre esplorazioni! ",
-  "app-section-society-shopping": "acquisti",
-  "app-notification-too-few-compare-topics": "Per prima cosa aggiungi due o più argomenti al confronto, utilizzando il pulsante (che si trova nella parte superiore dell'articolo di Wikipedia e nella meta-sezione dell'argomento)",
-  "app-menu-goto-next-topic": "vai al prossimo argomento (nei risultati della barra laterale)",
+  "app-guide-welcome-text": "Conzept è un tentativo di creare un'enciclopedia per il 21° secolo.  <br><br> Goditi le tue esplorazioni! ",
+  "app-section-society-shopping": "shopping",
+  "app-notification-too-few-compare-topics": "Per prima cosa aggiungi due o più argomenti al confronto, utilizzando il pulsante (situato nella parte superiore dell'articolo di Wikipedia e nella meta-sezione dell'argomento)",
+  "app-menu-goto-next-topic": "vai all'argomento successivo (nei risultati della barra laterale)",
   "app-menu-goto-previous-topic": "vai all'argomento precedente (nei risultati della barra laterale)",
   "app-menu-goto-next-pane": "vai al riquadro successivo",
   "app-menu-goto-previous-pane": "vai al riquadro precedente",
   "app-menu-new-search": "nuova ricerca",
   "app-guide-documentary": "documentario",
-  "app-guide-country": "nazione",
+  "app-guide-country": "Paese",
   "app-guide-string-search": "ricerca di stringhe",
   "app-guide-historical-country": "paese storico",
   "app-guide-ethnic-group": "gruppo etnico",
-  "app-guide-language": "linguaggio",
+  "app-guide-language": "lingua",
   "app-guide-national-park": "Parco Nazionale",
   "app-guide-mammal": "mammifero",
   "app-guide-bird": "uccello",
   "app-guide-reptile": "rettile",
-  "app-guide-fish": "pesce",
+  "app-guide-fish": "pescare",
   "app-guide-amphibian": "anfibio",
   "app-guide-insect": "insetto",
   "app-guide-spider": "ragno",
@@ -153,7 +170,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "articolo in primo piano",
   "app-menu-cover-topic": "argomento di copertina",
-  "app-menu-news": "news",
+  "app-menu-news": "notizia",
   "app-menu-culture": "cultura",
   "app-menu-nature": "natura",
   "app-menu-license": "licenza",
@@ -162,12 +179,12 @@
   "app-guide-continent": "continente",
   "app-guide-bioregion": "bioregione",
   "app-guide-mountain-range": "catena montuosa",
-  "app-guide-disease": "patologia",
+  "app-guide-disease": "malattia",
   "app-guide-protein": "proteina",
   "app-guide-atom": "atomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mappa del paese",
-  "app-guide-capitol": "capitale",
+  "app-guide-capitol": "Campidoglio",
   "app-guide-form-of-government": "forma di governo",
   "app-guide-religion": "religione",
   "app-guide-period": "periodo",
@@ -189,18 +206,24 @@
   "app-guide-tourist-attraction": "attrazione turistica",
   "app-guide-dish": "piatto",
   "app-guide-cell-type": "tipo di cellula",
-  "app-guide-archae": "arca",
+  "app-guide-archae": "archae",
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "portale in primo piano",
   "app-guide-musical-instrument": "strumento",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "tecnologia",
+  "app-guide-near-me": "vicino a me",
+  "app-guide-newspapers": "giornali",
+  "app-guide-news-radio": "Radio",
+  "app-guide-news-tv": "tv",
+  "app-guide-news-economic-indicators": "indicatori economici",
+  "app-guide-ongoing-conflicts": "conflitti",
   "app-guide-radio": "Radio",
-  "app-menu-country-select": "nazione",
+  "app-menu-country-select": "Paese",
   "app-menu-interests": "interessi",
-  "app-menu-command-editor": "editor di comandi",
+  "app-menu-command-editor": "editore dei comandi",
   "app-menu-presentation": "presentazione",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "eseguire il codice",
+  "app-menu-editor": "editore",
+  "app-menu-run-code": "correre",
   "app-menu-clear-editor": "chiaro",
   "app-foo": "foo bar baz"
 }
