--- a/app/explore2/assets/i18n/conzept-ko.json
+++ b/app/explore2/assets/i18n/conzept-ko.json
@@ -1,23 +1,23 @@
 {
   "app-tab-topics-title": "주제",
   "app-tab-list-title": "목록",
-  "app-tab-bookmarks-title": "책갈피",
+  "app-tab-bookmarks-title": "북마크",
   "app-tab-tools-title": "도구",
   "app-tab-settings-title": "설정",
   "app-tab-help-title": "돕다",
-  "app-tab-audio-chat-title": "음성 채팅",
-  "app-search-placeholder": "검색",
+  "app-tab-audio-chat-title": "오디오 채팅",
+  "app-search-placeholder": "찾다",
   "app-structured-search-title": "구조화된 검색",
-  "app-title-occurence": "발생 지도",
+  "app-title-occurence": "발생지도",
   "app-title-super": "감독자",
   "app-title-sub": "보결",
   "app-title-pages": "페이지",
   "app-title-citations": "인용",
   "app-guide-see-more": "더보기",
   "app-guide-page": "페이지",
-  "app-guide-news": "소식",
+  "app-guide-news": "현재 이벤트",
   "app-guide-topic": "주제",
-  "app-guide-artwork": "페인트 등",
+  "app-guide-artwork": "그림",
   "app-guide-organism": "유기체",
   "app-guide-music": "음악",
   "app-guide-science": "과학",
@@ -27,7 +27,7 @@
   "app-section-library": "도서관",
   "app-section-web": "편물",
   "app-section-news": "소식",
-  "app-section-news-general": "일반",
+  "app-section-news-general": "일반적인",
   "app-section-social": "사회의",
   "app-section-news-tech": "기술",
   "app-section-society-jobs": "직업",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "인구 통계학",
   "app-section-location-ecology": "생태학",
   "app-section-location-travel": "여행하다",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "날씨",
   "app-section-location-real-estate": "부동산",
   "app-menu-actions": "행위",
   "app-menu-background-audio": "오디오",
@@ -53,16 +53,33 @@
   "app-menu-about": "~에 대한",
   "app-menu-random-topic": "무작위 주제",
   "app-menu-random-topic-key": "무작위 주제",
-  "app-menu-compare-topics": "주제 비교",
+  "app-menu-compare-topics": "주제를 비교하다",
   "app-menu-toggle-fullscreen": "전체 화면 전환",
-  "app-menu-bookmark-current-view": "현재 URL 북마크",
-  "app-menu-clone-tab": "클론 탭",
+  "app-menu-bookmark-actions": "북마크 선택 작업",
+  "app-menu-bookmark-actions-reasoning": "추리",
+  "app-guide-bookmark-teach-topics": "가르쳐 줘",
+  "app-guide-bookmark-quiz-topics": "나에게 퀴즈를 줘",
+  "app-guide-bookmark-related-topics": "관련 주제",
+  "app-guide-bookmark-topic-differences": "차이점",
+  "app-guide-bookmark-commonalities": "공통점",
+  "app-guide-bookmark-similarities": "유사점",
+  "app-guide-bookmark-implications": "의미",
+  "app-guide-bookmark-history": "역사",
+  "app-menu-import-as": "북마크 가져오기",
+  "app-menu-export-as": "북마크 내보내기",
+  "app-menu-bookmark-actions-media": "미디어",
+  "app-menu-visual-search": "시각적 검색",
+  "app-menu-reading-assistance": "독서 보조",
+  "app-menu-bread": "단어 시작 볼드체",
+  "app-menu-ai-tutor": "AI 튜터",
+  "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
+  "app-menu-clone-tab": "복제 탭",
   "app-menu-plant-identification": "식물 식별",
-  "app-menu-text-identification": "문자 식별",
+  "app-menu-text-identification": "텍스트 식별",
   "app-menu-digital-libraries": "디지털 도서관",
   "app-menu-geography": "지리학",
   "app-menu-version": "버전",
-  "app-menu-made-by": "만든",
+  "app-menu-made-by": "에 의해 만들어진",
   "app-menu-all-rights-reserved": "판권 소유",
   "app-menu-font-type": "글꼴 유형",
   "app-menu-font-size": "글꼴 크기",
@@ -73,13 +90,13 @@
   "app-menu-style": "스타일",
   "app-menu-speed": "속도",
   "app-menu-pitch": "정점",
-  "app-menu-fullscreen-active-pane": "전체 화면 활성 창",
-  "app-menu-toggle-sidebar": "사이드바 토글",
+  "app-menu-fullscreen-active-pane": "활성 창 전체 화면",
+  "app-menu-toggle-sidebar": "사이드바 전환",
   "app-menu-add-bookmark": "북마크에 추가하다",
-  "app-menu-note-1": "참고 1: 포커스가 사이드바 또는 Wikipedia 기사 창에 있는 경우에만 사용할 수 있습니다.",
+  "app-menu-note-1": "참고 1: 포커스가 사이드바 또는 Wikipedia 문서 창에 있는 경우에만 사용할 수 있습니다.",
   "app-section-business": "사업",
   "app-section-government": "정부",
-  "app-section-government-general": "일반",
+  "app-section-government-general": "일반적인",
   "app-section-government-legislature": "입법부",
   "app-section-government-executive": "경영진",
   "app-section-government-judicial": "사법",
@@ -100,14 +117,14 @@
   "app-section-science-archeology": "고고학",
   "app-section-science-mathematics": "수학",
   "app-section-science-astronomy": "천문학",
-  "app-section-media-datasets": "데이터세트",
-  "app-section-media-datasets-general": "일반",
+  "app-section-media-datasets": "데이터 세트",
+  "app-section-media-datasets-general": "일반적인",
   "app-section-media-datasets-topical": "뉴스 영화",
   "app-section-art": "미술",
-  "app-section-library-general": "일반",
+  "app-section-library-general": "일반적인",
   "app-section-library-manuscripts": "원고",
   "app-section-library-history": "역사",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "가계",
   "app-section-library-legal": "합법적인",
   "app-section-library-products": "제품",
   "app-section-media": "미디어",
@@ -119,14 +136,14 @@
   "app-section-society": "사회",
   "app-section-society-sports": "스포츠",
   "app-section-society-food": "음식",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "철학",
   "app-section-library-religion": "종교",
   "app-section-library-poetry": "시",
   "app-section-library-identity": "신원",
   "app-section-society-events": "이벤트",
-  "app-guide-welcome-text": "Conzept는 21세기 백과사전을 만들려는 시도입니다.  <br><br> 탐험을 즐기세요! ",
+  "app-guide-welcome-text": "컨셉트는 21세기에 맞는 백과사전을 만들려는 시도입니다.  <br><br> 탐험을 즐겨보세요! ",
   "app-section-society-shopping": "쇼핑",
-  "app-notification-too-few-compare-topics": "먼저 버튼을 사용하여 두 개 이상의 주제를 비교에 추가합니다(위키피디아 문서 상단 및 주제의 메타 섹션에 있음).",
+  "app-notification-too-few-compare-topics": "먼저 버튼(Wikipedia 문서 상단과 주제의 메타 섹션에 있음)을 사용하여 비교에 두 개 이상의 주제를 추가합니다.",
   "app-menu-goto-next-topic": "다음 주제로 이동(사이드바 결과에서)",
   "app-menu-goto-previous-topic": "이전 주제로 이동(사이드바 결과에서)",
   "app-menu-goto-next-pane": "다음 창으로 이동",
@@ -135,40 +152,40 @@
   "app-guide-documentary": "기록한 것",
   "app-guide-country": "국가",
   "app-guide-string-search": "문자열 검색",
-  "app-guide-historical-country": "역사적 국가",
+  "app-guide-historical-country": "역사적인 나라",
   "app-guide-ethnic-group": "인종 그룹",
   "app-guide-language": "언어",
   "app-guide-national-park": "국립 공원",
   "app-guide-mammal": "포유 동물",
   "app-guide-bird": "새",
   "app-guide-reptile": "비열한",
-  "app-guide-fish": "생선",
+  "app-guide-fish": "물고기",
   "app-guide-amphibian": "수륙 양용 비행기",
   "app-guide-insect": "곤충",
   "app-guide-spider": "거미",
-  "app-guide-plant": "공장",
+  "app-guide-plant": "식물",
   "app-guide-algae": "조류",
   "app-guide-fungus": "진균류",
   "app-guide-bacterium": "박테리아",
   "app-guide-virus": "바이러스",
   "app-guide-featured-article": "특집 기사",
   "app-menu-cover-topic": "표지 주제",
-  "app-menu-news": "news",
+  "app-menu-news": "소식",
   "app-menu-culture": "문화",
   "app-menu-nature": "자연",
   "app-menu-license": "특허",
   "app-guide-help": "돕다",
   "app-guide-sea": "바다",
   "app-guide-continent": "대륙",
-  "app-guide-bioregion": "생물 지역",
+  "app-guide-bioregion": "생물지역",
   "app-guide-mountain-range": "산맥",
   "app-guide-disease": "질병",
   "app-guide-protein": "단백질",
   "app-guide-atom": "원자",
-  "app-guide-protist": "원생주의자",
+  "app-guide-protist": "원생생물",
   "app-guide-country-map": "국가 지도",
   "app-guide-capitol": "국회 의사당",
-  "app-guide-form-of-government": "정부의 형태.",
+  "app-guide-form-of-government": "정부의 형태",
   "app-guide-religion": "종교",
   "app-guide-period": "기간",
   "app-guide-history-aspect": "역사 측면",
@@ -189,18 +206,24 @@
   "app-guide-tourist-attraction": "관광 명소",
   "app-guide-dish": "접시",
   "app-guide-cell-type": "세포 유형",
-  "app-guide-archae": "고고학자",
+  "app-guide-archae": "고세",
   "app-menu-persona": "페르소나",
   "app-guide-featured-portal": "추천 포털",
   "app-guide-musical-instrument": "기구",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "기술",
+  "app-guide-near-me": "내 근처에",
+  "app-guide-newspapers": "신문",
+  "app-guide-news-radio": "라디오",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "경제 지표",
+  "app-guide-ongoing-conflicts": "갈등",
   "app-guide-radio": "라디오",
   "app-menu-country-select": "국가",
   "app-menu-interests": "이해",
   "app-menu-command-editor": "명령 편집기",
   "app-menu-presentation": "프레젠테이션",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "운영",
+  "app-menu-editor": "편집자",
+  "app-menu-run-code": "달리다",
   "app-menu-clear-editor": "분명한",
   "app-foo": "푸 바 바즈"
 }
