--- a/app/explore2/assets/i18n/conzept-mr.json
+++ b/app/explore2/assets/i18n/conzept-mr.json
@@ -15,7 +15,7 @@
   "app-title-citations": "उद्धरण",
   "app-guide-see-more": "अजून पहा",
   "app-guide-page": "पृष्ठ",
-  "app-guide-news": "बातम्या",
+  "app-guide-news": "सद्य घटना",
   "app-guide-topic": "विषय",
   "app-guide-artwork": "चित्रकला",
   "app-guide-organism": "जीव",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "लोकसंख्या",
   "app-section-location-ecology": "पर्यावरणशास्त्र",
   "app-section-location-travel": "प्रवास",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "हवामान",
   "app-section-location-real-estate": "रिअल इस्टेट",
   "app-menu-actions": "क्रिया",
   "app-menu-background-audio": "ऑडिओ",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "यादृच्छिक विषय",
   "app-menu-compare-topics": "विषयांची तुलना करा",
   "app-menu-toggle-fullscreen": "फुलस्क्रीन टॉगल करा",
-  "app-menu-bookmark-current-view": "वर्तमान URL बुकमार्क करा",
+  "app-menu-bookmark-actions": "बुकमार्क-निवड क्रिया",
+  "app-menu-bookmark-actions-reasoning": "तर्क",
+  "app-guide-bookmark-teach-topics": "मला शिकवा",
+  "app-guide-bookmark-quiz-topics": "मला प्रश्नोत्तर करा",
+  "app-guide-bookmark-related-topics": "संबंधित विषय",
+  "app-guide-bookmark-topic-differences": "फरक",
+  "app-guide-bookmark-commonalities": "समानता",
+  "app-guide-bookmark-similarities": "समानता",
+  "app-guide-bookmark-implications": "परिणाम",
+  "app-guide-bookmark-history": "इतिहास",
+  "app-menu-import-as": "बुकमार्क आयात करा",
+  "app-menu-export-as": "बुकमार्क निर्यात करा",
+  "app-menu-bookmark-actions-media": "मीडिया",
+  "app-menu-visual-search": "व्हिज्युअल शोध",
+  "app-menu-reading-assistance": "वाचन सहाय्य",
+  "app-menu-bread": "शब्द-प्रारंभ ठळक",
+  "app-menu-ai-tutor": "एआय ट्यूटर",
+  "app-menu-bookmark-current-view": "बुकमार्क वर्तमान दृश्य",
   "app-menu-clone-tab": "क्लोन टॅब",
   "app-menu-plant-identification": "वनस्पती ओळख",
   "app-menu-text-identification": "मजकूर ओळख",
@@ -73,7 +90,7 @@
   "app-menu-style": "शैली",
   "app-menu-speed": "गती",
   "app-menu-pitch": "खेळपट्टी",
-  "app-menu-fullscreen-active-pane": "सक्रिय उपखंड पूर्णस्क्रीन करा",
+  "app-menu-fullscreen-active-pane": "सक्रिय उपखंड पूर्णस्क्रीन",
   "app-menu-toggle-sidebar": "साइडबार टॉगल करा",
   "app-menu-add-bookmark": "बुकमार्क जोडा",
   "app-menu-note-1": "टीप 1: जेव्हा फोकस साइडबारवर किंवा विकिपीडिया लेख उपखंडावर असेल तेव्हाच उपलब्ध.",
@@ -107,7 +124,7 @@
   "app-section-library-general": "सामान्य",
   "app-section-library-manuscripts": "हस्तलिखिते",
   "app-section-library-history": "इतिहास",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "वंशावळी",
   "app-section-library-legal": "कायदेशीर",
   "app-section-library-products": "उत्पादने",
   "app-section-media": "मीडिया",
@@ -119,12 +136,12 @@
   "app-section-society": "समाज",
   "app-section-society-sports": "खेळ",
   "app-section-society-food": "अन्न",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "तत्वज्ञान",
   "app-section-library-religion": "धर्म",
   "app-section-library-poetry": "कविता",
   "app-section-library-identity": "ओळख",
   "app-section-society-events": "घटना",
-  "app-guide-welcome-text": "कॉन्झेप्ट हा एकविसाव्या शतकासाठी विश्वकोश तयार करण्याचा प्रयत्न आहे.  <br><br> तुमच्या शोधांचा आनंद घ्या! ",
+  "app-guide-welcome-text": "कॉन्झेप्ट हा एकविसाव्या शतकासाठी ज्ञानकोश तयार करण्याचा प्रयत्न आहे.  <br><br> तुमच्या शोधांचा आनंद घ्या! ",
   "app-section-society-shopping": "खरेदी",
   "app-notification-too-few-compare-topics": "प्रथम बटण वापरून तुलना करण्यासाठी दोन किंवा अधिक विषय जोडा (विकिपीडिया-लेखाच्या शीर्षस्थानी आणि विषयाच्या मेटा-विभागात)",
   "app-menu-goto-next-topic": "पुढील विषयावर जा (साइडबार निकालांमध्ये)",
@@ -153,7 +170,7 @@
   "app-guide-virus": "विषाणू",
   "app-guide-featured-article": "वैशिष्ट्यीकृत लेख",
   "app-menu-cover-topic": "कव्हर विषय",
-  "app-menu-news": "news",
+  "app-menu-news": "बातम्या",
   "app-menu-culture": "संस्कृती",
   "app-menu-nature": "निसर्ग",
   "app-menu-license": "परवाना",
@@ -193,13 +210,19 @@
   "app-menu-persona": "व्यक्तिमत्व",
   "app-guide-featured-portal": "वैशिष्ट्यीकृत पोर्टल",
   "app-guide-musical-instrument": "साधन",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "तंत्रज्ञान",
+  "app-guide-near-me": "माझ्या जवळ",
+  "app-guide-newspapers": "वर्तमानपत्र",
+  "app-guide-news-radio": "रेडिओ",
+  "app-guide-news-tv": "टीव्ही",
+  "app-guide-news-economic-indicators": "आर्थिक निर्देशक",
+  "app-guide-ongoing-conflicts": "संघर्ष",
   "app-guide-radio": "रेडिओ",
   "app-menu-country-select": "देश",
   "app-menu-interests": "स्वारस्ये",
   "app-menu-command-editor": "कमांड एडिटर",
   "app-menu-presentation": "सादरीकरण",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "संपादक",
   "app-menu-run-code": "धावणे",
   "app-menu-clear-editor": "स्पष्ट",
   "app-foo": "foo बार बाज"
