--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -55,6 +55,23 @@
   "app-menu-random-topic-key": "willekeurig onderwerp",
   "app-menu-compare-topics": "onderwerpen vergelijken",
   "app-menu-toggle-fullscreen": "volledig scherm activeren",
+  "app-menu-bookmark-actions": "bladwijzer-selectie acties",
+  "app-menu-bookmark-actions-reasoning": "redenatie",
+  "app-guide-bookmark-teach-topics": "educatie",
+  "app-guide-bookmark-quiz-topics": "quiz mij",
+  "app-guide-bookmark-related-topics": "gerelateerde onderwerpen",
+  "app-guide-bookmark-topic-differences": "differences",
+  "app-guide-bookmark-commonalities": "gemeenschappelijkheden",
+  "app-guide-bookmark-similarities": "overeenkomsten",
+  "app-guide-bookmark-implications": "implicaties",
+  "app-guide-bookmark-history": "geschiedenis",
+  "app-menu-import-as": "importeer bladwijzers",
+  "app-menu-export-as": "exporteer bladwijzers",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-visual-search": "visueel zoeken",
+  "app-menu-reading-assistance": "leeshulp",
+  "app-menu-bread": "begin-woord nadruk",
+  "app-menu-ai-tutor": "AI hulp",
   "app-menu-bookmark-current-view": "bladwijzer huidige URL",
   "app-menu-clone-tab": "tabblad kloon",
   "app-menu-plant-identification": "identificatie van planten",
@@ -194,6 +211,12 @@
   "app-guide-featured-portal": "aanbevolen portaal",
   "app-guide-musical-instrument": "instrument",
   "app-guide-technology": "technologie",
+  "app-guide-near-me": "nabij",
+  "app-guide-newspapers": "kranten",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "economische indicatoren",
+  "app-guide-ongoing-conflicts": "conflicten",
   "app-guide-radio": "radio",
   "app-menu-country-select": "land",
   "app-menu-interests": "interesses",
