--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -1,9 +1,9 @@
 {
   "app-tab-topics-title": "tópicos",
-  "app-tab-list-title": "Lista",
+  "app-tab-list-title": "lista",
   "app-tab-bookmarks-title": "favoritos",
-  "app-tab-tools-title": "Ferramentas",
-  "app-tab-settings-title": "definições",
+  "app-tab-tools-title": "ferramentas",
+  "app-tab-settings-title": "configurações",
   "app-tab-help-title": "ajuda",
   "app-tab-audio-chat-title": "bate-papo de áudio",
   "app-search-placeholder": "procurar",
@@ -15,18 +15,18 @@
   "app-title-citations": "Citações",
   "app-guide-see-more": "ver mais",
   "app-guide-page": "página",
-  "app-guide-news": "notícia",
+  "app-guide-news": "eventos atuais",
   "app-guide-topic": "tema",
-  "app-guide-artwork": "quadro",
+  "app-guide-artwork": "pintura",
   "app-guide-organism": "organismo",
   "app-guide-music": "música",
   "app-guide-science": "Ciência",
   "app-topics-found": "tópicos encontrados",
-  "app-section-main": "a Principal",
-  "app-section-info": "informação",
+  "app-section-main": "principal",
+  "app-section-info": "informações",
   "app-section-library": "biblioteca",
   "app-section-web": "rede",
-  "app-section-news": "notícia",
+  "app-section-news": "notícias",
   "app-section-news-general": "em geral",
   "app-section-social": "social",
   "app-section-news-tech": "tecnologia",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "demografia",
   "app-section-location-ecology": "ecologia",
   "app-section-location-travel": "viagem",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "clima",
   "app-section-location-real-estate": "imobiliária",
   "app-menu-actions": "ações",
   "app-menu-background-audio": "áudio",
@@ -45,19 +45,36 @@
   "app-menu-various-links": "vários links",
   "app-menu-font": "Fonte",
   "app-menu-theme": "tema",
-  "app-menu-interface-language": "idioma da interface",
+  "app-menu-interface-language": "Interface de linguagem",
   "app-menu-voice": "voz",
   "app-menu-user-manual": "manual do usuário",
   "app-menu-keyboard-shortcuts": "atalhos do teclado",
   "app-menu-credits": "créditos",
-  "app-menu-about": "cerca de",
+  "app-menu-about": "sobre",
   "app-menu-random-topic": "tópico aleatório",
   "app-menu-random-topic-key": "tópico aleatório",
   "app-menu-compare-topics": "comparar tópicos",
   "app-menu-toggle-fullscreen": "alternar para o modo tela cheia",
-  "app-menu-bookmark-current-view": "URL atual dos favoritos",
-  "app-menu-clone-tab": "clonar guia",
-  "app-menu-plant-identification": "identificação da planta",
+  "app-menu-bookmark-actions": "ações de seleção de favoritos",
+  "app-menu-bookmark-actions-reasoning": "raciocínio",
+  "app-guide-bookmark-teach-topics": "ensine-me",
+  "app-guide-bookmark-quiz-topics": "me questione",
+  "app-guide-bookmark-related-topics": "tópicos relacionados",
+  "app-guide-bookmark-topic-differences": "diferenças",
+  "app-guide-bookmark-commonalities": "pontos em comum",
+  "app-guide-bookmark-similarities": "semelhanças",
+  "app-guide-bookmark-implications": "implicações",
+  "app-guide-bookmark-history": "história",
+  "app-menu-import-as": "importar favoritos",
+  "app-menu-export-as": "exportar favoritos",
+  "app-menu-bookmark-actions-media": "meios de comunicação",
+  "app-menu-visual-search": "pesquisa visual",
+  "app-menu-reading-assistance": "assistência de leitura",
+  "app-menu-bread": "negrito no início da palavra",
+  "app-menu-ai-tutor": "Tutor de IA",
+  "app-menu-bookmark-current-view": "marcar a visualização atual",
+  "app-menu-clone-tab": "guia clonar",
+  "app-menu-plant-identification": "identificação de plantas",
   "app-menu-text-identification": "identificação de texto",
   "app-menu-digital-libraries": "bibliotecas digitais",
   "app-menu-geography": "geografia",
@@ -71,13 +88,13 @@
   "app-menu-color-filter": "filtro de cor",
   "app-menu-locale": "localidade",
   "app-menu-style": "estilo",
-  "app-menu-speed": "Rapidez",
+  "app-menu-speed": "velocidade",
   "app-menu-pitch": "tom",
-  "app-menu-fullscreen-active-pane": "tela cheia o painel ativo",
+  "app-menu-fullscreen-active-pane": "tela cheia do painel ativo",
   "app-menu-toggle-sidebar": "alternar a barra lateral",
   "app-menu-add-bookmark": "adicionar marcador",
-  "app-menu-note-1": "nota 1: disponível apenas quando o foco está na barra lateral ou em um painel de artigos da Wikipedia.",
-  "app-section-business": "o negócio",
+  "app-menu-note-1": "nota 1: disponível apenas quando o foco está na barra lateral ou no painel de artigos da Wikipedia.",
+  "app-section-business": "negócios",
   "app-section-government": "governo",
   "app-section-government-general": "em geral",
   "app-section-government-legislature": "legislatura",
@@ -91,12 +108,12 @@
   "app-section-science-search-tools": "ferramentas de busca",
   "app-section-science-open-journals": "diários abertos",
   "app-section-science-closed-journals": "diários fechados",
-  "app-section-science-news": "notícia",
-  "app-section-science-language": "Língua",
+  "app-section-science-news": "notícias",
+  "app-section-science-language": "linguagem",
   "app-section-science-biology": "biologia",
   "app-section-science-medical": "médico",
   "app-section-science-chemistry": "química",
-  "app-section-science-minerology": "mineralogia",
+  "app-section-science-minerology": "mineralologia",
   "app-section-science-archeology": "arqueologia",
   "app-section-science-mathematics": "matemática",
   "app-section-science-astronomy": "astronomia",
@@ -107,7 +124,7 @@
   "app-section-library-general": "em geral",
   "app-section-library-manuscripts": "manuscritos",
   "app-section-library-history": "história",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "Genealogia",
   "app-section-library-legal": "jurídico",
   "app-section-library-products": "produtos",
   "app-section-media": "meios de comunicação",
@@ -118,15 +135,15 @@
   "app-section-meta": "meta",
   "app-section-society": "sociedade",
   "app-section-society-sports": "Esportes",
-  "app-section-society-food": "Comida",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-society-food": "comida",
+  "app-section-library-philosophy": "filosofia",
   "app-section-library-religion": "religião",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identidade",
   "app-section-society-events": "eventos",
   "app-guide-welcome-text": "Conzept é uma tentativa de criar uma enciclopédia para o século XXI.  <br><br> Aproveite suas explorações! ",
-  "app-section-society-shopping": "Shopping",
-  "app-notification-too-few-compare-topics": "Primeiro adicione dois ou mais tópicos à comparação, usando o botão (localizado na parte superior do artigo da Wikipédia e na meta-seção do tópico)",
+  "app-section-society-shopping": "compras",
+  "app-notification-too-few-compare-topics": "Primeiro adicione dois ou mais tópicos à comparação, usando o botão (localizado no topo do artigo da Wikipedia e na metaseção do tópico)",
   "app-menu-goto-next-topic": "vá para o próximo tópico (nos resultados da barra lateral)",
   "app-menu-goto-previous-topic": "vá para o tópico anterior (nos resultados da barra lateral)",
   "app-menu-goto-next-pane": "ir para o próximo painel",
@@ -134,10 +151,10 @@
   "app-menu-new-search": "nova pesquisa",
   "app-guide-documentary": "documentário",
   "app-guide-country": "país",
-  "app-guide-string-search": "pesquisa de string",
+  "app-guide-string-search": "pesquisa de strings",
   "app-guide-historical-country": "país histórico",
   "app-guide-ethnic-group": "grupo étnico",
-  "app-guide-language": "Língua",
+  "app-guide-language": "linguagem",
   "app-guide-national-park": "Parque Nacional",
   "app-guide-mammal": "mamífero",
   "app-guide-bird": "pássaro",
@@ -152,8 +169,8 @@
   "app-guide-bacterium": "bactéria",
   "app-guide-virus": "vírus",
   "app-guide-featured-article": "Artigo de destaque",
-  "app-menu-cover-topic": "tema da capa",
-  "app-menu-news": "news",
+  "app-menu-cover-topic": "tópico de capa",
+  "app-menu-news": "notícias",
   "app-menu-culture": "cultura",
   "app-menu-nature": "natureza",
   "app-menu-license": "licença",
@@ -167,8 +184,8 @@
   "app-guide-atom": "átomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mapa do país",
-  "app-guide-capitol": "capitólio",
-  "app-guide-form-of-government": "forma de gov.",
+  "app-guide-capitol": "Capitólio",
+  "app-guide-form-of-government": "forma de governo",
   "app-guide-religion": "religião",
   "app-guide-period": "período",
   "app-guide-history-aspect": "aspecto histórico",
@@ -189,18 +206,24 @@
   "app-guide-tourist-attraction": "atração turística",
   "app-guide-dish": "prato",
   "app-guide-cell-type": "tipo de célula",
-  "app-guide-archae": "archae",
-  "app-menu-persona": "persona",
+  "app-guide-archae": "arquéias",
+  "app-menu-persona": "personalidade",
   "app-guide-featured-portal": "portal em destaque",
   "app-guide-musical-instrument": "instrumento",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "tecnologia",
+  "app-guide-near-me": "perto de mim",
+  "app-guide-newspapers": "jornais",
+  "app-guide-news-radio": "rádio",
+  "app-guide-news-tv": "televisão",
+  "app-guide-news-economic-indicators": "indicadores econômicos",
+  "app-guide-ongoing-conflicts": "conflitos",
   "app-guide-radio": "rádio",
   "app-menu-country-select": "país",
   "app-menu-interests": "interesses",
-  "app-menu-command-editor": "editor de comandos",
+  "app-menu-command-editor": "editor de comando",
   "app-menu-presentation": "apresentação",
   "app-menu-editor": "editor",
-  "app-menu-run-code": "executar código",
-  "app-menu-clear-editor": "Claro",
+  "app-menu-run-code": "correr",
+  "app-menu-clear-editor": "claro",
   "app-foo": "foo bar baz"
 }
