--- a/app/explore2/assets/i18n/conzept-ru.json
+++ b/app/explore2/assets/i18n/conzept-ru.json
@@ -5,29 +5,29 @@
   "app-tab-tools-title": "инструменты",
   "app-tab-settings-title": "настройки",
   "app-tab-help-title": "помощь",
-  "app-tab-audio-chat-title": "аудио чат",
+  "app-tab-audio-chat-title": "аудиочат",
   "app-search-placeholder": "поиск",
   "app-structured-search-title": "структурированный поиск",
-  "app-title-occurence": "Карта вхождения",
+  "app-title-occurence": "Карта встречаемости",
   "app-title-super": "супер",
   "app-title-sub": "суб",
   "app-title-pages": "страницы",
   "app-title-citations": "Цитаты",
   "app-guide-see-more": "узнать больше",
   "app-guide-page": "страница",
-  "app-guide-news": "Новости",
+  "app-guide-news": "текущие события",
   "app-guide-topic": "тема",
-  "app-guide-artwork": "картина",
+  "app-guide-artwork": "рисование",
   "app-guide-organism": "организм",
-  "app-guide-music": "Музыка",
+  "app-guide-music": "музыка",
   "app-guide-science": "наука",
   "app-topics-found": "темы найдены",
-  "app-section-main": "главный",
+  "app-section-main": "основной",
   "app-section-info": "Информация",
   "app-section-library": "библиотека",
   "app-section-web": "сеть",
   "app-section-news": "Новости",
-  "app-section-news-general": "Генеральная",
+  "app-section-news-general": "общий",
   "app-section-social": "Социальное",
   "app-section-news-tech": "технология",
   "app-section-society-jobs": "рабочие места",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "демография",
   "app-section-location-ecology": "экология",
   "app-section-location-travel": "путешествовать",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "погода",
   "app-section-location-real-estate": "недвижимость",
   "app-menu-actions": "действия",
   "app-menu-background-audio": "аудио",
@@ -53,13 +53,30 @@
   "app-menu-about": "о",
   "app-menu-random-topic": "случайная тема",
   "app-menu-random-topic-key": "случайная тема",
-  "app-menu-compare-topics": "сравнить темы",
+  "app-menu-compare-topics": "сравнивать темы",
   "app-menu-toggle-fullscreen": "Включить полноэкранный режим",
-  "app-menu-bookmark-current-view": "добавить текущий URL в закладки",
-  "app-menu-clone-tab": "вкладка клон",
+  "app-menu-bookmark-actions": "действия по выбору закладок",
+  "app-menu-bookmark-actions-reasoning": "рассуждение",
+  "app-guide-bookmark-teach-topics": "научи меня",
+  "app-guide-bookmark-quiz-topics": "опроси меня",
+  "app-guide-bookmark-related-topics": "похожие темы",
+  "app-guide-bookmark-topic-differences": "различия",
+  "app-guide-bookmark-commonalities": "сходства",
+  "app-guide-bookmark-similarities": "сходство",
+  "app-guide-bookmark-implications": "подразумеваемое",
+  "app-guide-bookmark-history": "история",
+  "app-menu-import-as": "импортировать закладки",
+  "app-menu-export-as": "экспортировать закладки",
+  "app-menu-bookmark-actions-media": "СМИ",
+  "app-menu-visual-search": "визуальный поиск",
+  "app-menu-reading-assistance": "помощь в чтении",
+  "app-menu-bread": "начало слова жирным шрифтом",
+  "app-menu-ai-tutor": "репетитор по искусственному интеллекту",
+  "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
+  "app-menu-clone-tab": "клонировать вкладку",
   "app-menu-plant-identification": "идентификация растений",
   "app-menu-text-identification": "текстовая идентификация",
-  "app-menu-digital-libraries": "электронные библиотеки",
+  "app-menu-digital-libraries": "цифровые библиотеки",
   "app-menu-geography": "география",
   "app-menu-version": "версия",
   "app-menu-made-by": "сделан",
@@ -69,19 +86,19 @@
   "app-menu-darkmode": "темный режим",
   "app-menu-link-preview": "предварительный просмотр ссылки",
   "app-menu-color-filter": "цветной фильтр",
-  "app-menu-locale": "место действия",
+  "app-menu-locale": "локаль",
   "app-menu-style": "стиль",
   "app-menu-speed": "скорость",
   "app-menu-pitch": "подача",
-  "app-menu-fullscreen-active-pane": "полноэкранная активная панель",
+  "app-menu-fullscreen-active-pane": "полноэкранный режим активной панели",
   "app-menu-toggle-sidebar": "переключить боковую панель",
   "app-menu-add-bookmark": "добавить закладку",
-  "app-menu-note-1": "примечание 1: доступно, только когда фокус находится на боковой панели или панели статьи Википедии.",
+  "app-menu-note-1": "примечание 1: доступно только в том случае, если фокус находится на боковой панели или на панели статей Википедии.",
   "app-section-business": "бизнес",
   "app-section-government": "правительство",
-  "app-section-government-general": "Генеральная",
+  "app-section-government-general": "общий",
   "app-section-government-legislature": "законодательный орган",
-  "app-section-government-executive": "должностное лицо",
+  "app-section-government-executive": "исполнительный",
   "app-section-government-judicial": "судебный",
   "app-section-education": "образование",
   "app-section-education-assistance": "помощь",
@@ -96,45 +113,45 @@
   "app-section-science-biology": "биология",
   "app-section-science-medical": "медицинский",
   "app-section-science-chemistry": "химия",
-  "app-section-science-minerology": "минералогия",
+  "app-section-science-minerology": "минералология",
   "app-section-science-archeology": "археология",
   "app-section-science-mathematics": "математика",
   "app-section-science-astronomy": "астрономия",
   "app-section-media-datasets": "наборы данных",
-  "app-section-media-datasets-general": "Генеральная",
-  "app-section-media-datasets-topical": "злободневный",
+  "app-section-media-datasets-general": "общий",
+  "app-section-media-datasets-topical": "актуальный",
   "app-section-art": "искусство",
-  "app-section-library-general": "Генеральная",
+  "app-section-library-general": "общий",
   "app-section-library-manuscripts": "рукописи",
   "app-section-library-history": "история",
-  "app-section-library-genealogy": "genealogy",
-  "app-section-library-legal": "законный",
-  "app-section-library-products": "товары",
+  "app-section-library-genealogy": "генеалогия",
+  "app-section-library-legal": "юридический",
+  "app-section-library-products": "продукты",
   "app-section-media": "СМИ",
   "app-section-media-video": "видео",
   "app-section-media-image": "изображение",
   "app-section-media-audio": "аудио",
-  "app-section-media-software": "программного обеспечения",
+  "app-section-media-software": "программное обеспечение",
   "app-section-meta": "мета",
   "app-section-society": "общество",
-  "app-section-society-sports": "спортивный",
+  "app-section-society-sports": "виды спорта",
   "app-section-society-food": "еда",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "философия",
   "app-section-library-religion": "религия",
   "app-section-library-poetry": "поэзия",
   "app-section-library-identity": "личность",
-  "app-section-society-events": "События",
-  "app-guide-welcome-text": "Conzept — это попытка создать энциклопедию 21 века.  <br><br> Наслаждайтесь исследованиями! ",
-  "app-section-society-shopping": "поход по магазинам",
-  "app-notification-too-few-compare-topics": "Сначала добавьте к сравнению две и более темы, используя кнопку (находится вверху статьи Википедии и в мета-разделе темы)",
-  "app-menu-goto-next-topic": "перейти к следующей теме (в результатах боковой панели)",
-  "app-menu-goto-previous-topic": "перейти к предыдущей теме (в боковом меню результатов)",
+  "app-section-society-events": "события",
+  "app-guide-welcome-text": "Conzept — это попытка создать энциклопедию XXI века.  <br><br> Наслаждайтесь исследованиями! ",
+  "app-section-society-shopping": "Покупка",
+  "app-notification-too-few-compare-topics": "Сначала добавьте в сравнение две или более темы, используя кнопку (находится вверху статьи Википедии и в метаразделе темы)",
+  "app-menu-goto-next-topic": "перейти к следующей теме (в боковой панели результатов)",
+  "app-menu-goto-previous-topic": "перейти к предыдущей теме (в боковой панели результатов)",
   "app-menu-goto-next-pane": "перейти к следующей панели",
-  "app-menu-goto-previous-pane": "перейти к предыдущей панели",
+  "app-menu-goto-previous-pane": "перейти на предыдущую панель",
   "app-menu-new-search": "новый поиск",
   "app-guide-documentary": "документальный",
   "app-guide-country": "страна",
-  "app-guide-string-search": "поиск строки",
+  "app-guide-string-search": "строковый поиск",
   "app-guide-historical-country": "историческая страна",
   "app-guide-ethnic-group": "этническая группа",
   "app-guide-language": "язык",
@@ -142,18 +159,18 @@
   "app-guide-mammal": "млекопитающее",
   "app-guide-bird": "птица",
   "app-guide-reptile": "рептилия",
-  "app-guide-fish": "рыбы",
+  "app-guide-fish": "рыба",
   "app-guide-amphibian": "амфибия",
   "app-guide-insect": "насекомое",
   "app-guide-spider": "паук",
-  "app-guide-plant": "завод",
+  "app-guide-plant": "растение",
   "app-guide-algae": "водоросли",
   "app-guide-fungus": "грибок",
   "app-guide-bacterium": "бактерия",
   "app-guide-virus": "вирус",
   "app-guide-featured-article": "избранная статья",
-  "app-menu-cover-topic": "тема обложки",
-  "app-menu-news": "news",
+  "app-menu-cover-topic": "обложка темы",
+  "app-menu-news": "Новости",
   "app-menu-culture": "культура",
   "app-menu-nature": "природа",
   "app-menu-license": "лицензия",
@@ -175,7 +192,7 @@
   "app-guide-revolution": "революция",
   "app-guide-war": "война",
   "app-guide-battle": "боевой",
-  "app-guide-documentary-title": "документальное название",
+  "app-guide-documentary-title": "название документального фильма",
   "app-guide-film-title": "название фильма",
   "app-guide-art-movement": "художественное движение",
   "app-guide-composer": "композитор",
@@ -184,23 +201,29 @@
   "app-guide-philosopher": "философ",
   "app-guide-architect": "архитектор",
   "app-guide-inventor": "изобретатель",
-  "app-guide-software": "программного обеспечения",
+  "app-guide-software": "программное обеспечение",
   "app-guide-mathematics": "математика",
-  "app-guide-tourist-attraction": "достопримечательность",
+  "app-guide-tourist-attraction": "туристическая достопримечательность",
   "app-guide-dish": "блюдо",
   "app-guide-cell-type": "тип ячейки",
   "app-guide-archae": "археи",
-  "app-menu-persona": "персона",
-  "app-guide-featured-portal": "рекомендуемый портал",
+  "app-menu-persona": "личность",
+  "app-guide-featured-portal": "избранный портал",
   "app-guide-musical-instrument": "инструмент",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "технологии",
+  "app-guide-near-me": "около меня",
+  "app-guide-newspapers": "газеты",
+  "app-guide-news-radio": "радио",
+  "app-guide-news-tv": "ТВ",
+  "app-guide-news-economic-indicators": "экономические показатели",
+  "app-guide-ongoing-conflicts": "конфликты",
   "app-guide-radio": "радио",
   "app-menu-country-select": "страна",
   "app-menu-interests": "интересы",
   "app-menu-command-editor": "редактор команд",
   "app-menu-presentation": "презентация",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "бежать",
-  "app-menu-clear-editor": "Чисто",
-  "app-foo": "фу бар баз"
+  "app-menu-editor": "редактор",
+  "app-menu-run-code": "бегать",
+  "app-menu-clear-editor": "прозрачный",
+  "app-foo": "Фу бар Баз"
 }
