--- a/app/explore2/assets/i18n/conzept-sr.json
+++ b/app/explore2/assets/i18n/conzept-sr.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Цитати",
   "app-guide-see-more": "види више",
   "app-guide-page": "страна",
-  "app-guide-news": "вести",
+  "app-guide-news": "Актуелности",
   "app-guide-topic": "тема",
   "app-guide-artwork": "сликарство",
   "app-guide-organism": "организам",
@@ -30,13 +30,13 @@
   "app-section-news-general": "Генерал",
   "app-section-social": "друштвеним",
   "app-section-news-tech": "тецх",
-  "app-section-society-jobs": "послови",
+  "app-section-society-jobs": "пословима",
   "app-section-location": "локација",
   "app-section-location-geography": "географија",
   "app-section-location-demography": "демографија",
   "app-section-location-ecology": "екологија",
   "app-section-location-travel": "путовања",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "временске прилике",
   "app-section-location-real-estate": "некретнина",
   "app-menu-actions": "радње",
   "app-menu-background-audio": "аудио",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "случајна тема",
   "app-menu-compare-topics": "упореди теме",
   "app-menu-toggle-fullscreen": "укључите цео екран",
-  "app-menu-bookmark-current-view": "обележи тренутну УРЛ адресу",
+  "app-menu-bookmark-actions": "радње избора обележивача",
+  "app-menu-bookmark-actions-reasoning": "расуђивање",
+  "app-guide-bookmark-teach-topics": "научи ме",
+  "app-guide-bookmark-quiz-topics": "питај ме",
+  "app-guide-bookmark-related-topics": "Повезане теме",
+  "app-guide-bookmark-topic-differences": "Разлике",
+  "app-guide-bookmark-commonalities": "заједничкости",
+  "app-guide-bookmark-similarities": "сличности",
+  "app-guide-bookmark-implications": "последице",
+  "app-guide-bookmark-history": "историје",
+  "app-menu-import-as": "увоз обележивача",
+  "app-menu-export-as": "извоз обележивача",
+  "app-menu-bookmark-actions-media": "медија",
+  "app-menu-visual-search": "визуелна претрага",
+  "app-menu-reading-assistance": "помоћ при читању",
+  "app-menu-bread": "подебљано на почетку речи",
+  "app-menu-ai-tutor": "АИ тутор",
+  "app-menu-bookmark-current-view": "обележи тренутни приказ",
   "app-menu-clone-tab": "клон картица",
   "app-menu-plant-identification": "идентификација биљке",
   "app-menu-text-identification": "идентификација текста",
@@ -85,7 +102,7 @@
   "app-section-government-judicial": "судски",
   "app-section-education": "образовање",
   "app-section-education-assistance": "помоћ",
-  "app-section-education-courses": "курсева",
+  "app-section-education-courses": "курсеви",
   "app-section-education-quizzes": "квизови",
   "app-section-science": "Наука",
   "app-section-science-search-tools": "алати за претрагу",
@@ -107,7 +124,7 @@
   "app-section-library-general": "Генерал",
   "app-section-library-manuscripts": "рукописима",
   "app-section-library-history": "историје",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "генеалогија",
   "app-section-library-legal": "правни",
   "app-section-library-products": "производи",
   "app-section-media": "медија",
@@ -119,7 +136,7 @@
   "app-section-society": "друштво",
   "app-section-society-sports": "спортске",
   "app-section-society-food": "храна",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "филозофија",
   "app-section-library-religion": "религија",
   "app-section-library-poetry": "поезија",
   "app-section-library-identity": "идентитет",
@@ -133,7 +150,7 @@
   "app-menu-goto-previous-pane": "идите на претходно окно",
   "app-menu-new-search": "Нова претрага",
   "app-guide-documentary": "документарни филм",
-  "app-guide-country": "земљи",
+  "app-guide-country": "земља",
   "app-guide-string-search": "стринг сеарцх",
   "app-guide-historical-country": "историјска земља",
   "app-guide-ethnic-group": "етничка група",
@@ -153,7 +170,7 @@
   "app-guide-virus": "вирус",
   "app-guide-featured-article": "истакнут чланак",
   "app-menu-cover-topic": "насловна тема",
-  "app-menu-news": "news",
+  "app-menu-news": "вести",
   "app-menu-culture": "културе",
   "app-menu-nature": "природа",
   "app-menu-license": "лиценце",
@@ -166,7 +183,7 @@
   "app-guide-protein": "беланчевина",
   "app-guide-atom": "атом",
   "app-guide-protist": "протист",
-  "app-guide-country-map": "мапа земље",
+  "app-guide-country-map": "карта земље",
   "app-guide-capitol": "главни град",
   "app-guide-form-of-government": "облик гов.",
   "app-guide-religion": "религија",
@@ -193,14 +210,20 @@
   "app-menu-persona": "персона",
   "app-guide-featured-portal": "истакнути портал",
   "app-guide-musical-instrument": "инструмент",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "технологије",
+  "app-guide-near-me": "близу мене",
+  "app-guide-newspapers": "новине",
+  "app-guide-news-radio": "радио",
+  "app-guide-news-tv": "ТВ",
+  "app-guide-news-economic-indicators": "економски показатељи",
+  "app-guide-ongoing-conflicts": "сукоби",
   "app-guide-radio": "радио",
-  "app-menu-country-select": "земљи",
+  "app-menu-country-select": "земља",
   "app-menu-interests": "интересовања",
   "app-menu-command-editor": "уредник команди",
   "app-menu-presentation": "презентација",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "покренути код",
-  "app-menu-clear-editor": "јасан уредник",
+  "app-menu-editor": "уредник",
+  "app-menu-run-code": "трцати",
+  "app-menu-clear-editor": "јасно",
   "app-foo": "фоо бар баз"
 }
