--- a/app/explore2/assets/i18n/conzept-sv.json
+++ b/app/explore2/assets/i18n/conzept-sv.json
@@ -55,6 +55,23 @@
   "app-menu-random-topic-key": "slumpmässigt ämne",
   "app-menu-compare-topics": "jämföra ämnen",
   "app-menu-toggle-fullscreen": "växla helskärm",
+  "app-menu-bookmark-actions": "bookmark-selection actions",
+  "app-menu-bookmark-actions-reasoning": "reasoning",
+  "app-guide-bookmark-teach-topics": "teach me",
+  "app-guide-bookmark-quiz-topics": "quiz me",
+  "app-guide-bookmark-related-topics": "related topics",
+  "app-guide-bookmark-topic-differences": "differences",
+  "app-guide-bookmark-commonalities": "commonalities",
+  "app-guide-bookmark-similarities": "similarities",
+  "app-guide-bookmark-implications": "implications",
+  "app-guide-bookmark-history": "history",
+  "app-menu-import-as": "import bookmarks",
+  "app-menu-export-as": "export bookmarks",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-visual-search": "visual search",
+  "app-menu-reading-assistance": "reading assistance",
+  "app-menu-bread": "word-start bolding",
+  "app-menu-ai-tutor": "AI tutor",
   "app-menu-bookmark-current-view": "bokmärke aktuell URL",
   "app-menu-clone-tab": "klonfliken",
   "app-menu-plant-identification": "anläggningsidentifiering",
@@ -194,6 +211,12 @@
   "app-guide-featured-portal": "utvald portal",
   "app-guide-musical-instrument": "instrument",
   "app-guide-technology": "technology",
+  "app-guide-near-me": "near me",
+  "app-guide-newspapers": "newspapers",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "economic indicators",
+  "app-guide-ongoing-conflicts": "conflicts",
   "app-guide-radio": "radio",
   "app-menu-country-select": "Land",
   "app-menu-interests": "intressen",
