--- a/app/explore2/assets/i18n/conzept-sw.json
+++ b/app/explore2/assets/i18n/conzept-sw.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Manukuu",
   "app-guide-see-more": "ona zaidi",
   "app-guide-page": "ukurasa",
-  "app-guide-news": "habari",
+  "app-guide-news": "matukio ya sasa",
   "app-guide-topic": "mada",
   "app-guide-artwork": "uchoraji",
   "app-guide-organism": "viumbe",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "demografia",
   "app-section-location-ecology": "ikolojia",
   "app-section-location-travel": "kusafiri",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "hali ya hewa",
   "app-section-location-real-estate": "mali isiyohamishika",
   "app-menu-actions": "Vitendo",
   "app-menu-background-audio": "sauti",
@@ -45,7 +45,7 @@
   "app-menu-various-links": "viungo mbalimbali",
   "app-menu-font": "fonti",
   "app-menu-theme": "mandhari",
-  "app-menu-interface-language": "lugha ya interface",
+  "app-menu-interface-language": "lugha ya kiolesura",
   "app-menu-voice": "sauti",
   "app-menu-user-manual": "mwongozo wa mtumiaji",
   "app-menu-keyboard-shortcuts": "njia za mkato za kibodi",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "mada nasibu",
   "app-menu-compare-topics": "kulinganisha mada",
   "app-menu-toggle-fullscreen": "geuza skrini nzima",
-  "app-menu-bookmark-current-view": "alamisha URL ya sasa",
+  "app-menu-bookmark-actions": "vitendo vya uteuzi wa alamisho",
+  "app-menu-bookmark-actions-reasoning": "hoja",
+  "app-guide-bookmark-teach-topics": "Nifunze",
+  "app-guide-bookmark-quiz-topics": "niulize maswali",
+  "app-guide-bookmark-related-topics": "mada zinazohusiana",
+  "app-guide-bookmark-topic-differences": "tofauti",
+  "app-guide-bookmark-commonalities": "mambo ya kawaida",
+  "app-guide-bookmark-similarities": "kufanana",
+  "app-guide-bookmark-implications": "athari",
+  "app-guide-bookmark-history": "historia",
+  "app-menu-import-as": "ingiza alamisho",
+  "app-menu-export-as": "safirisha alamisho",
+  "app-menu-bookmark-actions-media": "vyombo vya habari",
+  "app-menu-visual-search": "utafutaji wa kuona",
+  "app-menu-reading-assistance": "msaada wa kusoma",
+  "app-menu-bread": "neno-anza kwa ujasiri",
+  "app-menu-ai-tutor": "Mkufunzi wa AI",
+  "app-menu-bookmark-current-view": "alamisho mwonekano wa sasa",
   "app-menu-clone-tab": "kichupo cha clone",
   "app-menu-plant-identification": "kitambulisho cha mimea",
   "app-menu-text-identification": "kitambulisho cha maandishi",
@@ -107,7 +124,7 @@
   "app-section-library-general": "jumla",
   "app-section-library-manuscripts": "maandishi",
   "app-section-library-history": "historia",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "nasaba",
   "app-section-library-legal": "kisheria",
   "app-section-library-products": "bidhaa",
   "app-section-media": "vyombo vya habari",
@@ -119,14 +136,14 @@
   "app-section-society": "jamii",
   "app-section-society-sports": "michezo",
   "app-section-society-food": "chakula",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "falsafa",
   "app-section-library-religion": "dini",
   "app-section-library-poetry": "ushairi",
   "app-section-library-identity": "utambulisho",
   "app-section-society-events": "matukio",
   "app-guide-welcome-text": "Conzept ni jaribio la kuunda ensaiklopidia ya karne ya 21.  <br><br> Furahia uvumbuzi wako! ",
   "app-section-society-shopping": "ununuzi",
-  "app-notification-too-few-compare-topics": "Kwanza ongeza mada mbili au zaidi kwenye ulinganisho, kwa kutumia kitufe (kilichopo juu ya kifungu cha Wikipedia na katika sehemu ya meta ya mada)",
+  "app-notification-too-few-compare-topics": "Kwanza ongeza mada mbili au zaidi kwenye ulinganisho, ukitumia kitufe (kilichopo juu ya kifungu cha Wikipedia na katika sehemu ya meta ya mada)",
   "app-menu-goto-next-topic": "nenda kwa mada inayofuata (kwenye matokeo ya upau wa kando)",
   "app-menu-goto-previous-topic": "nenda kwa mada iliyotangulia (kwenye matokeo ya upau wa kando)",
   "app-menu-goto-next-pane": "nenda kwenye kidirisha kinachofuata",
@@ -153,7 +170,7 @@
   "app-guide-virus": "virusi",
   "app-guide-featured-article": "makala iliyoangaziwa",
   "app-menu-cover-topic": "mada ya kufunika",
-  "app-menu-news": "news",
+  "app-menu-news": "habari",
   "app-menu-culture": "utamaduni",
   "app-menu-nature": "asili",
   "app-menu-license": "leseni",
@@ -193,13 +210,19 @@
   "app-menu-persona": "mtu",
   "app-guide-featured-portal": "lango lililoangaziwa",
   "app-guide-musical-instrument": "chombo",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "teknolojia",
+  "app-guide-near-me": "karibu yangu",
+  "app-guide-newspapers": "magazeti",
+  "app-guide-news-radio": "redio",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "viashiria vya kiuchumi",
+  "app-guide-ongoing-conflicts": "migogoro",
   "app-guide-radio": "redio",
   "app-menu-country-select": "nchi",
   "app-menu-interests": "maslahi",
   "app-menu-command-editor": "mhariri wa amri",
   "app-menu-presentation": "uwasilishaji",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "mhariri",
   "app-menu-run-code": "kukimbia",
   "app-menu-clear-editor": "wazi",
   "app-foo": "foo bar baz"
