--- a/app/explore2/assets/i18n/conzept-ta.json
+++ b/app/explore2/assets/i18n/conzept-ta.json
@@ -15,7 +15,7 @@
   "app-title-citations": "மேற்கோள்கள்",
   "app-guide-see-more": "மேலும் பார்க்க",
   "app-guide-page": "பக்கம்",
-  "app-guide-news": "செய்தி",
+  "app-guide-news": "தற்போதைய நிகழ்வுகள்",
   "app-guide-topic": "தலைப்பு",
   "app-guide-artwork": "ஓவியம்",
   "app-guide-organism": "உயிரினம்",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "மக்கள்தொகையியல்",
   "app-section-location-ecology": "சூழலியல்",
   "app-section-location-travel": "பயணம்",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "வானிலை",
   "app-section-location-real-estate": "மனை",
   "app-menu-actions": "செயல்கள்",
   "app-menu-background-audio": "ஆடியோ",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "சீரற்ற தலைப்பு",
   "app-menu-compare-topics": "தலைப்புகளை ஒப்பிடுக",
   "app-menu-toggle-fullscreen": "மாற்று முழுத்திரை",
-  "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய URL",
+  "app-menu-bookmark-actions": "புக்மார்க்-தேர்வு நடவடிக்கைகள்",
+  "app-menu-bookmark-actions-reasoning": "பகுத்தறிவு",
+  "app-guide-bookmark-teach-topics": "எனக்கு கற்பி",
+  "app-guide-bookmark-quiz-topics": "என்னிடம் வினாடி வினா",
+  "app-guide-bookmark-related-topics": "தொடர்புடைய தலைப்புகள்",
+  "app-guide-bookmark-topic-differences": "வேறுபாடுகள்",
+  "app-guide-bookmark-commonalities": "பொதுவான தன்மைகள்",
+  "app-guide-bookmark-similarities": "ஒற்றுமைகள்",
+  "app-guide-bookmark-implications": "தாக்கங்கள்",
+  "app-guide-bookmark-history": "வரலாறு",
+  "app-menu-import-as": "புக்மார்க்குகளை இறக்குமதி செய்க",
+  "app-menu-export-as": "புக்மார்க்குகளை ஏற்றுமதி செய்யவும்",
+  "app-menu-bookmark-actions-media": "ஊடகம்",
+  "app-menu-visual-search": "காட்சி தேடல்",
+  "app-menu-reading-assistance": "வாசிப்பு உதவி",
+  "app-menu-bread": "வார்த்தை-தொடக்கம் தடித்த",
+  "app-menu-ai-tutor": "AI ஆசிரியர்",
+  "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய காட்சி",
   "app-menu-clone-tab": "குளோன் தாவல்",
   "app-menu-plant-identification": "தாவர அடையாளம்",
   "app-menu-text-identification": "உரை அடையாளம்",
@@ -107,7 +124,7 @@
   "app-section-library-general": "பொது",
   "app-section-library-manuscripts": "கையெழுத்துப் பிரதிகள்",
   "app-section-library-history": "வரலாறு",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "பரம்பரை",
   "app-section-library-legal": "சட்டபூர்வமான",
   "app-section-library-products": "தயாரிப்புகள்",
   "app-section-media": "ஊடகம்",
@@ -119,7 +136,7 @@
   "app-section-society": "சமூகம்",
   "app-section-society-sports": "விளையாட்டு",
   "app-section-society-food": "உணவு",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "தத்துவம்",
   "app-section-library-religion": "மதம்",
   "app-section-library-poetry": "கவிதை",
   "app-section-library-identity": "அடையாளம்",
@@ -153,7 +170,7 @@
   "app-guide-virus": "வைரஸ்",
   "app-guide-featured-article": "சிறப்புக் கட்டுரை",
   "app-menu-cover-topic": "கவர் தலைப்பு",
-  "app-menu-news": "news",
+  "app-menu-news": "செய்தி",
   "app-menu-culture": "கலாச்சாரம்",
   "app-menu-nature": "இயற்கை",
   "app-menu-license": "உரிமம்",
@@ -167,7 +184,7 @@
   "app-guide-atom": "அணு",
   "app-guide-protist": "எதிர்ப்பாளர்",
   "app-guide-country-map": "நாட்டின் வரைபடம்",
-  "app-guide-capitol": "தலைநகர்",
+  "app-guide-capitol": "மூலதனம்",
   "app-guide-form-of-government": "ஆட்சி வடிவம்.",
   "app-guide-religion": "மதம்",
   "app-guide-period": "காலம்",
@@ -193,13 +210,19 @@
   "app-menu-persona": "ஆளுமை",
   "app-guide-featured-portal": "சிறப்பு போர்டல்",
   "app-guide-musical-instrument": "கருவி",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "தொழில்நுட்பம்",
+  "app-guide-near-me": "என் அருகில்",
+  "app-guide-newspapers": "செய்தித்தாள்கள்",
+  "app-guide-news-radio": "வானொலி",
+  "app-guide-news-tv": "டி.வி",
+  "app-guide-news-economic-indicators": "பொருளாதார குறிகாட்டிகள்",
+  "app-guide-ongoing-conflicts": "மோதல்கள்",
   "app-guide-radio": "வானொலி",
   "app-menu-country-select": "நாடு",
   "app-menu-interests": "நலன்கள்",
   "app-menu-command-editor": "கட்டளை ஆசிரியர்",
   "app-menu-presentation": "விளக்கக்காட்சி",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "ஆசிரியர்",
   "app-menu-run-code": "ஓடு",
   "app-menu-clear-editor": "தெளிவானது",
   "app-foo": "foo bar baz"
