--- a/app/explore2/assets/i18n/conzept-te.json
+++ b/app/explore2/assets/i18n/conzept-te.json
@@ -13,9 +13,9 @@
   "app-title-sub": "ఉప",
   "app-title-pages": "పేజీలు",
   "app-title-citations": "అనులేఖనాలు",
-  "app-guide-see-more": "ఇంకా చూడు",
+  "app-guide-see-more": "ఇంకా చూడండి",
   "app-guide-page": "పేజీ",
-  "app-guide-news": "వార్తలు",
+  "app-guide-news": "ప్రస్తుత ఘటనలు",
   "app-guide-topic": "అంశం",
   "app-guide-artwork": "పెయింటింగ్",
   "app-guide-organism": "జీవి",
@@ -32,11 +32,11 @@
   "app-section-news-tech": "సాంకేతికత",
   "app-section-society-jobs": "ఉద్యోగాలు",
   "app-section-location": "స్థానం",
-  "app-section-location-geography": "భౌగోళిక శాస్త్రం",
+  "app-section-location-geography": "భూగోళశాస్త్రం",
   "app-section-location-demography": "జనాభా శాస్త్రం",
   "app-section-location-ecology": "జీవావరణ శాస్త్రం",
   "app-section-location-travel": "ప్రయాణం",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "వాతావరణం",
   "app-section-location-real-estate": "స్థిరాస్తి",
   "app-menu-actions": "చర్యలు",
   "app-menu-background-audio": "ఆడియో",
@@ -55,12 +55,29 @@
   "app-menu-random-topic-key": "యాదృచ్ఛిక అంశం",
   "app-menu-compare-topics": "అంశాలను సరిపోల్చండి",
   "app-menu-toggle-fullscreen": "టోగుల్ పూర్తి స్క్రీన్",
-  "app-menu-bookmark-current-view": "ప్రస్తుత URLని బుక్‌మార్క్ చేయండి",
+  "app-menu-bookmark-actions": "బుక్‌మార్క్-ఎంపిక చర్యలు",
+  "app-menu-bookmark-actions-reasoning": "తార్కికం",
+  "app-guide-bookmark-teach-topics": "నాకు బోధించు",
+  "app-guide-bookmark-quiz-topics": "నన్ను ప్రశ్నించు",
+  "app-guide-bookmark-related-topics": "సంబంధిత విషయాలు",
+  "app-guide-bookmark-topic-differences": "తేడాలు",
+  "app-guide-bookmark-commonalities": "సారూప్యతలు",
+  "app-guide-bookmark-similarities": "సారూప్యతలు",
+  "app-guide-bookmark-implications": "చిక్కులు",
+  "app-guide-bookmark-history": "చరిత్ర",
+  "app-menu-import-as": "బుక్‌మార్క్‌లను దిగుమతి చేయండి",
+  "app-menu-export-as": "బుక్‌మార్క్‌లను ఎగుమతి చేయండి",
+  "app-menu-bookmark-actions-media": "మీడియా",
+  "app-menu-visual-search": "దృశ్య శోధన",
+  "app-menu-reading-assistance": "పఠన సహాయం",
+  "app-menu-bread": "పదం-ప్రారంభం బోల్డింగ్",
+  "app-menu-ai-tutor": "AI బోధకుడు",
+  "app-menu-bookmark-current-view": "బుక్‌మార్క్ ప్రస్తుత వీక్షణ",
   "app-menu-clone-tab": "క్లోన్ ట్యాబ్",
   "app-menu-plant-identification": "మొక్క గుర్తింపు",
   "app-menu-text-identification": "వచన గుర్తింపు",
   "app-menu-digital-libraries": "డిజిటల్ లైబ్రరీలు",
-  "app-menu-geography": "భౌగోళిక శాస్త్రం",
+  "app-menu-geography": "భూగోళశాస్త్రం",
   "app-menu-version": "సంస్కరణ: Telugu",
   "app-menu-made-by": "చేసిన",
   "app-menu-all-rights-reserved": "అన్ని హక్కులు ప్రత్యేకించబడ్డాయి",
@@ -107,7 +124,7 @@
   "app-section-library-general": "సాధారణ",
   "app-section-library-manuscripts": "రాతప్రతులు",
   "app-section-library-history": "చరిత్ర",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "వంశావళి",
   "app-section-library-legal": "చట్టపరమైన",
   "app-section-library-products": "ఉత్పత్తులు",
   "app-section-media": "మీడియా",
@@ -119,7 +136,7 @@
   "app-section-society": "సమాజం",
   "app-section-society-sports": "క్రీడలు",
   "app-section-society-food": "ఆహారం",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "తత్వశాస్త్రం",
   "app-section-library-religion": "మతం",
   "app-section-library-poetry": "కవిత్వం",
   "app-section-library-identity": "గుర్తింపు",
@@ -153,7 +170,7 @@
   "app-guide-virus": "వైరస్",
   "app-guide-featured-article": "ఫీచర్ చేసిన వ్యాసం",
   "app-menu-cover-topic": "కవర్ టాపిక్",
-  "app-menu-news": "news",
+  "app-menu-news": "వార్తలు",
   "app-menu-culture": "సంస్కృతి",
   "app-menu-nature": "ప్రకృతి",
   "app-menu-license": "లైసెన్స్",
@@ -193,13 +210,19 @@
   "app-menu-persona": "వ్యక్తిత్వం",
   "app-guide-featured-portal": "ఫీచర్ చేసిన పోర్టల్",
   "app-guide-musical-instrument": "వాయిద్యం",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "సాంకేతికం",
+  "app-guide-near-me": "నా దగ్గర",
+  "app-guide-newspapers": "వార్తాపత్రికలు",
+  "app-guide-news-radio": "రేడియో",
+  "app-guide-news-tv": "టీవీ",
+  "app-guide-news-economic-indicators": "ఆర్థిక సూచికలు",
+  "app-guide-ongoing-conflicts": "గొడవలు",
   "app-guide-radio": "రేడియో",
   "app-menu-country-select": "దేశం",
-  "app-menu-interests": "అభిరుచులు",
+  "app-menu-interests": "ఆసక్తులు",
   "app-menu-command-editor": "కమాండ్ ఎడిటర్",
   "app-menu-presentation": "ప్రదర్శన",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "సంపాదకుడు",
   "app-menu-run-code": "పరుగు",
   "app-menu-clear-editor": "స్పష్టమైన",
   "app-foo": "ఫూ బార్ బాజ్"
