--- a/app/explore2/assets/i18n/conzept-uk.json
+++ b/app/explore2/assets/i18n/conzept-uk.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Цитування",
   "app-guide-see-more": "побачити більше",
   "app-guide-page": "сторінки",
-  "app-guide-news": "новини",
+  "app-guide-news": "поточні події",
   "app-guide-topic": "тема",
   "app-guide-artwork": "живопис",
   "app-guide-organism": "організм",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "демографія",
   "app-section-location-ecology": "екологія",
   "app-section-location-travel": "подорожі",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "погода",
   "app-section-location-real-estate": "нерухомість",
   "app-menu-actions": "дії",
   "app-menu-background-audio": "аудіо",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "випадкова тема",
   "app-menu-compare-topics": "порівняти теми",
   "app-menu-toggle-fullscreen": "перемкнути повноекранний режим",
-  "app-menu-bookmark-current-view": "додати поточну URL-адресу в закладки",
+  "app-menu-bookmark-actions": "дії закладки-вибору",
+  "app-menu-bookmark-actions-reasoning": "міркування",
+  "app-guide-bookmark-teach-topics": "навчи мене",
+  "app-guide-bookmark-quiz-topics": "опитуй мене",
+  "app-guide-bookmark-related-topics": "суміжні теми",
+  "app-guide-bookmark-topic-differences": "відмінності",
+  "app-guide-bookmark-commonalities": "спільні риси",
+  "app-guide-bookmark-similarities": "подібності",
+  "app-guide-bookmark-implications": "наслідки",
+  "app-guide-bookmark-history": "історії",
+  "app-menu-import-as": "імпортувати закладки",
+  "app-menu-export-as": "експортувати закладки",
+  "app-menu-bookmark-actions-media": "ЗМІ",
+  "app-menu-visual-search": "візуальний пошук",
+  "app-menu-reading-assistance": "допомога в читанні",
+  "app-menu-bread": "початок слова жирним шрифтом",
+  "app-menu-ai-tutor": "ШІ репетитор",
+  "app-menu-bookmark-current-view": "додати закладку для поточного перегляду",
   "app-menu-clone-tab": "клонувати вкладку",
   "app-menu-plant-identification": "ідентифікація рослин",
   "app-menu-text-identification": "ідентифікація тексту",
@@ -92,7 +109,7 @@
   "app-section-science-open-journals": "відкриті журнали",
   "app-section-science-closed-journals": "закриті журнали",
   "app-section-science-news": "новини",
-  "app-section-science-language": "мову",
+  "app-section-science-language": "мова",
   "app-section-science-biology": "біологія",
   "app-section-science-medical": "медичний",
   "app-section-science-chemistry": "хімія",
@@ -107,7 +124,7 @@
   "app-section-library-general": "загальний",
   "app-section-library-manuscripts": "рукописи",
   "app-section-library-history": "історії",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "генеалогія",
   "app-section-library-legal": "правовий",
   "app-section-library-products": "продуктів",
   "app-section-media": "ЗМІ",
@@ -119,7 +136,7 @@
   "app-section-society": "суспільства",
   "app-section-society-sports": "спорт",
   "app-section-society-food": "харчування",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "філософія",
   "app-section-library-religion": "релігія",
   "app-section-library-poetry": "поезії",
   "app-section-library-identity": "ідентичність",
@@ -137,7 +154,7 @@
   "app-guide-string-search": "пошук рядків",
   "app-guide-historical-country": "історична країна",
   "app-guide-ethnic-group": "етнічна група",
-  "app-guide-language": "мову",
+  "app-guide-language": "мова",
   "app-guide-national-park": "Національний парк",
   "app-guide-mammal": "ссавець",
   "app-guide-bird": "птах",
@@ -153,7 +170,7 @@
   "app-guide-virus": "вірус",
   "app-guide-featured-article": "вибрана стаття",
   "app-menu-cover-topic": "тема покриття",
-  "app-menu-news": "news",
+  "app-menu-news": "новини",
   "app-menu-culture": "культури",
   "app-menu-nature": "природи",
   "app-menu-license": "ліцензія",
@@ -193,13 +210,19 @@
   "app-menu-persona": "персона",
   "app-guide-featured-portal": "рекомендований портал",
   "app-guide-musical-instrument": "інструмент",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "технології",
+  "app-guide-near-me": "біля мене",
+  "app-guide-newspapers": "газети",
+  "app-guide-news-radio": "радіо",
+  "app-guide-news-tv": "телевізор",
+  "app-guide-news-economic-indicators": "економічні показники",
+  "app-guide-ongoing-conflicts": "конфлікти",
   "app-guide-radio": "радіо",
   "app-menu-country-select": "країна",
   "app-menu-interests": "інтереси",
   "app-menu-command-editor": "редактор команд",
   "app-menu-presentation": "презентація",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "редактор",
   "app-menu-run-code": "бігати",
   "app-menu-clear-editor": "ясно",
   "app-foo": "foo bar baz"
