--- a/app/explore2/assets/i18n/conzept-ur.json
+++ b/app/explore2/assets/i18n/conzept-ur.json
@@ -15,7 +15,7 @@
   "app-title-citations": "حوالہ جات",
   "app-guide-see-more": "دیکھیں مزید",
   "app-guide-page": "صفحہ",
-  "app-guide-news": "خبریں",
+  "app-guide-news": "موجودہ واقعات",
   "app-guide-topic": "موضوع",
   "app-guide-artwork": "پینٹنگ",
   "app-guide-organism": "حیاتیات",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "ڈیموگرافی",
   "app-section-location-ecology": "ماحولیات",
   "app-section-location-travel": "سفر",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "موسم",
   "app-section-location-real-estate": "ریل اسٹیٹ کی",
   "app-menu-actions": "اعمال",
   "app-menu-background-audio": "آڈیو",
@@ -55,9 +55,26 @@
   "app-menu-random-topic-key": "بے ترتیب موضوع",
   "app-menu-compare-topics": "موضوعات کا موازنہ کریں",
   "app-menu-toggle-fullscreen": "پوری اسکرین کو ٹوگل کریں۔",
-  "app-menu-bookmark-current-view": "موجودہ URL کو بک مارک کریں۔",
+  "app-menu-bookmark-actions": "بک مارک کے انتخاب کے اعمال",
+  "app-menu-bookmark-actions-reasoning": "استدلال",
+  "app-guide-bookmark-teach-topics": "مجھے سکھاؤ",
+  "app-guide-bookmark-quiz-topics": "مجھ سے سوال کرو",
+  "app-guide-bookmark-related-topics": "متعلقہ موضوعات",
+  "app-guide-bookmark-topic-differences": "اختلافات",
+  "app-guide-bookmark-commonalities": "مشترکات",
+  "app-guide-bookmark-similarities": "مماثلت",
+  "app-guide-bookmark-implications": "مضمرات",
+  "app-guide-bookmark-history": "تاریخ",
+  "app-menu-import-as": "بُک مارکس درآمد کریں۔",
+  "app-menu-export-as": "بک مارکس برآمد کریں۔",
+  "app-menu-bookmark-actions-media": "میڈیا",
+  "app-menu-visual-search": "بصری تلاش",
+  "app-menu-reading-assistance": "پڑھنے کی مدد",
+  "app-menu-bread": "لفظ بولڈ شروع کریں",
+  "app-menu-ai-tutor": "اے آئی ٹیوٹر",
+  "app-menu-bookmark-current-view": "موجودہ منظر کو بُک مارک کریں۔",
   "app-menu-clone-tab": "کلون ٹیب",
-  "app-menu-plant-identification": "پودوں کی شناخت",
+  "app-menu-plant-identification": "پلانٹ کی شناخت",
   "app-menu-text-identification": "متن کی شناخت",
   "app-menu-digital-libraries": "ڈیجیٹل لائبریریاں",
   "app-menu-geography": "جغرافیہ",
@@ -73,7 +90,7 @@
   "app-menu-style": "انداز",
   "app-menu-speed": "رفتار",
   "app-menu-pitch": "پچ",
-  "app-menu-fullscreen-active-pane": "فعال پین کو پوری اسکرین کریں۔",
+  "app-menu-fullscreen-active-pane": "فعال پین کی پوری اسکرین کریں۔",
   "app-menu-toggle-sidebar": "سائڈبار کو ٹوگل کریں۔",
   "app-menu-add-bookmark": "بک مارک شامل کریں",
   "app-menu-note-1": "نوٹ 1: صرف اس وقت دستیاب ہے جب فوکس سائڈبار یا ویکیپیڈیا آرٹیکل پین پر ہو۔",
@@ -107,7 +124,7 @@
   "app-section-library-general": "جنرل",
   "app-section-library-manuscripts": "مخطوطات",
   "app-section-library-history": "تاریخ",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "نسب نامہ",
   "app-section-library-legal": "قانونی",
   "app-section-library-products": "مصنوعات",
   "app-section-media": "میڈیا",
@@ -119,7 +136,7 @@
   "app-section-society": "معاشرہ",
   "app-section-society-sports": "کھیل",
   "app-section-society-food": "کھانا",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "فلسفہ",
   "app-section-library-religion": "مذہب",
   "app-section-library-poetry": "شاعری",
   "app-section-library-identity": "شناخت",
@@ -153,7 +170,7 @@
   "app-guide-virus": "وائرس",
   "app-guide-featured-article": "نمایاں مضمون",
   "app-menu-cover-topic": "کور موضوع",
-  "app-menu-news": "news",
+  "app-menu-news": "خبریں",
   "app-menu-culture": "ثقافت",
   "app-menu-nature": "فطرت",
   "app-menu-license": "لائسنس",
@@ -193,13 +210,19 @@
   "app-menu-persona": "شخصیت",
   "app-guide-featured-portal": "نمایاں پورٹل",
   "app-guide-musical-instrument": "آلہ",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "ٹیکنالوجی",
+  "app-guide-near-me": "میرے قریب",
+  "app-guide-newspapers": "اخبارات",
+  "app-guide-news-radio": "ریڈیو",
+  "app-guide-news-tv": "ٹی وی",
+  "app-guide-news-economic-indicators": "اقتصادی اشارے",
+  "app-guide-ongoing-conflicts": "تنازعات",
   "app-guide-radio": "ریڈیو",
   "app-menu-country-select": "ملک",
   "app-menu-interests": "مفادات",
   "app-menu-command-editor": "کمانڈ ایڈیٹر",
   "app-menu-presentation": "پیشکش",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "ایڈیٹر",
   "app-menu-run-code": "رن",
   "app-menu-clear-editor": "صاف",
   "app-foo": "foo بار باز"
