--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -3,59 +3,76 @@
   "app-tab-list-title": "قائمة",
   "app-tab-bookmarks-title": "إشارات مرجعية",
   "app-tab-tools-title": "أدوات",
-  "app-tab-settings-title": "الإعدادات",
+  "app-tab-settings-title": "إعدادات",
   "app-tab-help-title": "يساعد",
   "app-tab-audio-chat-title": "دردشة صوتية",
-  "app-search-placeholder": "بحث",
+  "app-search-placeholder": "يبحث",
   "app-structured-search-title": "بحث منظم",
-  "app-title-occurence": "خريطة التواجد",
+  "app-title-occurence": "خريطة الحدوث",
   "app-title-super": "ممتاز",
   "app-title-sub": "الفرعية",
   "app-title-pages": "الصفحات",
   "app-title-citations": "اقتباسات",
   "app-guide-see-more": "شاهد المزيد",
   "app-guide-page": "صفحة",
-  "app-guide-news": "الإخبارية",
+  "app-guide-news": "الاحداث الحالية",
   "app-guide-topic": "عنوان",
-  "app-guide-artwork": "لوحة",
-  "app-guide-organism": "الكائن الحي",
+  "app-guide-artwork": "تلوين",
+  "app-guide-organism": "كائن حي",
   "app-guide-music": "موسيقى",
   "app-guide-science": "علوم",
-  "app-topics-found": "تم العثور على المواضيع",
+  "app-topics-found": "المواضيع التي تم العثور عليها",
   "app-section-main": "رئيسي",
   "app-section-info": "معلومات",
   "app-section-library": "مكتبة",
   "app-section-web": "الويب",
-  "app-section-news": "الإخبارية",
-  "app-section-news-general": "جنرال لواء",
+  "app-section-news": "أخبار",
+  "app-section-news-general": "عام",
   "app-section-social": "اجتماعي",
   "app-section-news-tech": "تقنية",
   "app-section-society-jobs": "وظائف",
-  "app-section-location": "موقعك",
+  "app-section-location": "موقع",
   "app-section-location-geography": "جغرافية",
   "app-section-location-demography": "الديموغرافيا",
   "app-section-location-ecology": "علم البيئة",
   "app-section-location-travel": "يسافر",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "طقس",
   "app-section-location-real-estate": "العقارات",
   "app-menu-actions": "أجراءات",
   "app-menu-background-audio": "صوتي",
   "app-menu-background-midi": "ميدي",
-  "app-menu-topic-lists": "قوائم الموضوعات",
+  "app-menu-topic-lists": "قوائم المواضيع",
   "app-menu-various-links": "روابط مختلفة",
   "app-menu-font": "الخط",
   "app-menu-theme": "سمة",
   "app-menu-interface-language": "لغة الواجهة",
-  "app-menu-voice": "صوت بشري",
+  "app-menu-voice": "صوت",
   "app-menu-user-manual": "دليل الاستخدام",
   "app-menu-keyboard-shortcuts": "اختصارات لوحة المفاتيح",
   "app-menu-credits": "الاعتمادات",
-  "app-menu-about": "حول",
+  "app-menu-about": "عن",
   "app-menu-random-topic": "موضوع عشوائي",
   "app-menu-random-topic-key": "موضوع عشوائي",
   "app-menu-compare-topics": "مقارنة المواضيع",
   "app-menu-toggle-fullscreen": "ملء الشاشة تبديل",
-  "app-menu-bookmark-current-view": "المرجعية الحالية URL",
+  "app-menu-bookmark-actions": "إجراءات اختيار الإشارة المرجعية",
+  "app-menu-bookmark-actions-reasoning": "منطق",
+  "app-guide-bookmark-teach-topics": "علمني",
+  "app-guide-bookmark-quiz-topics": "اختبرني",
+  "app-guide-bookmark-related-topics": "مواضيع ذات صلة",
+  "app-guide-bookmark-topic-differences": "اختلافات",
+  "app-guide-bookmark-commonalities": "القواسم المشتركة",
+  "app-guide-bookmark-similarities": "التشابه",
+  "app-guide-bookmark-implications": "تداعيات",
+  "app-guide-bookmark-history": "تاريخ",
+  "app-menu-import-as": "استيراد الإشارات المرجعية",
+  "app-menu-export-as": "تصدير الإشارات المرجعية",
+  "app-menu-bookmark-actions-media": "وسائط",
+  "app-menu-visual-search": "البحث البصري",
+  "app-menu-reading-assistance": "المساعدة في القراءة",
+  "app-menu-bread": "بداية الكلمة بالخط العريض",
+  "app-menu-ai-tutor": "مدرس الذكاء الاصطناعي",
+  "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
   "app-menu-clone-tab": "علامة التبويب استنساخ",
   "app-menu-plant-identification": "تحديد النبات",
   "app-menu-text-identification": "تحديد النص",
@@ -66,24 +83,24 @@
   "app-menu-all-rights-reserved": "كل الحقوق محفوظة",
   "app-menu-font-type": "نوع الخط",
   "app-menu-font-size": "حجم الخط",
-  "app-menu-darkmode": "وضع الظلام",
+  "app-menu-darkmode": "darkmode",
   "app-menu-link-preview": "معاينة الارتباط",
   "app-menu-color-filter": "مرشح اللون",
-  "app-menu-locale": "اللغة",
-  "app-menu-style": "نمط",
+  "app-menu-locale": "لغة",
+  "app-menu-style": "أسلوب",
   "app-menu-speed": "سرعة",
   "app-menu-pitch": "يقذف",
   "app-menu-fullscreen-active-pane": "ملء الشاشة الجزء النشط",
   "app-menu-toggle-sidebar": "تبديل الشريط الجانبي",
   "app-menu-add-bookmark": "اضافة للمفضلة",
-  "app-menu-note-1": "ملاحظة 1: متاح فقط عندما يكون التركيز على الشريط الجانبي أو جزء مقالات ويكيبيديا.",
-  "app-section-business": "اعمال",
+  "app-menu-note-1": "الملاحظة 1: متاحة فقط عندما يكون التركيز على الشريط الجانبي أو جزء مقالة ويكيبيديا.",
+  "app-section-business": "عمل",
   "app-section-government": "حكومة",
-  "app-section-government-general": "جنرال لواء",
+  "app-section-government-general": "عام",
   "app-section-government-legislature": "السلطة التشريعية",
   "app-section-government-executive": "تنفيذي",
-  "app-section-government-judicial": "قضائي",
-  "app-section-education": "التعليم",
+  "app-section-government-judicial": "القضائية",
+  "app-section-education": "تعليم",
   "app-section-education-assistance": "مساعدة",
   "app-section-education-courses": "الدورات",
   "app-section-education-quizzes": "الإختبارات",
@@ -91,91 +108,91 @@
   "app-section-science-search-tools": "ادوات البحث",
   "app-section-science-open-journals": "المجلات المفتوحة",
   "app-section-science-closed-journals": "المجلات المغلقة",
-  "app-section-science-news": "الإخبارية",
+  "app-section-science-news": "أخبار",
   "app-section-science-language": "لغة",
   "app-section-science-biology": "مادة الاحياء",
   "app-section-science-medical": "طبي",
   "app-section-science-chemistry": "كيمياء",
-  "app-section-science-minerology": "علم المناجم",
+  "app-section-science-minerology": "علم المعادن",
   "app-section-science-archeology": "علم الآثار",
   "app-section-science-mathematics": "الرياضيات",
   "app-section-science-astronomy": "الفلك",
   "app-section-media-datasets": "مجموعات البيانات",
-  "app-section-media-datasets-general": "جنرال لواء",
+  "app-section-media-datasets-general": "عام",
   "app-section-media-datasets-topical": "موضعي",
   "app-section-art": "فن",
-  "app-section-library-general": "جنرال لواء",
+  "app-section-library-general": "عام",
   "app-section-library-manuscripts": "المخطوطات",
-  "app-section-library-history": "التاريخ",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-history": "تاريخ",
+  "app-section-library-genealogy": "علم الأنساب",
   "app-section-library-legal": "قانوني",
   "app-section-library-products": "منتجات",
-  "app-section-media": "وسائل الإعلام",
+  "app-section-media": "وسائط",
   "app-section-media-video": "فيديو",
   "app-section-media-image": "صورة",
   "app-section-media-audio": "صوتي",
-  "app-section-media-software": "البرمجيات",
+  "app-section-media-software": "برمجة",
   "app-section-meta": "ميتا",
-  "app-section-society": "المجتمع",
+  "app-section-society": "مجتمع",
   "app-section-society-sports": "رياضات",
-  "app-section-society-food": "غذاء",
-  "app-section-library-philosophy": "philosophy",
-  "app-section-library-religion": "دين",
-  "app-section-library-poetry": "الشعر",
+  "app-section-society-food": "طعام",
+  "app-section-library-philosophy": "فلسفة",
+  "app-section-library-religion": "دِين",
+  "app-section-library-poetry": "شِعر",
   "app-section-library-identity": "هوية",
   "app-section-society-events": "الأحداث",
-  "app-guide-welcome-text": "Conzept هي محاولة لإنشاء موسوعة للقرن الحادي والعشرين.  <br><br> استمتع باستكشافاتك! ",
+  "app-guide-welcome-text": "Conzept هي محاولة لإنشاء موسوعة للقرن الحادي والعشرين.  <br><br> استمتع بالاستكشافات الخاصة بك! ",
   "app-section-society-shopping": "التسوق",
-  "app-notification-too-few-compare-topics": "قم أولاً بإضافة موضوعين أو أكثر إلى المقارنة ، باستخدام الزر (الموجود في الجزء العلوي من مقالة ويكيبيديا وفي قسم التعريف بالموضوع)",
+  "app-notification-too-few-compare-topics": "قم أولاً بإضافة موضوعين أو أكثر إلى المقارنة، باستخدام الزر (الموجود أعلى مقالة ويكيبيديا وفي القسم التعريفي للموضوع)",
   "app-menu-goto-next-topic": "انتقل إلى الموضوع التالي (في نتائج الشريط الجانبي)",
   "app-menu-goto-previous-topic": "انتقل إلى الموضوع السابق (في نتائج الشريط الجانبي)",
   "app-menu-goto-next-pane": "انتقل إلى الجزء التالي",
   "app-menu-goto-previous-pane": "انتقل إلى الجزء السابق",
   "app-menu-new-search": "بحث جديد",
   "app-guide-documentary": "وثائقي",
-  "app-guide-country": "بلد",
-  "app-guide-string-search": "البحث عن سلسلة",
+  "app-guide-country": "دولة",
+  "app-guide-string-search": "بحث سلسلة",
   "app-guide-historical-country": "بلد تاريخي",
   "app-guide-ethnic-group": "مجموعة عرقية",
   "app-guide-language": "لغة",
   "app-guide-national-park": "متنزه قومي",
   "app-guide-mammal": "الحيوان الثديي",
-  "app-guide-bird": "عصفور",
+  "app-guide-bird": "طائر",
   "app-guide-reptile": "الزواحف",
-  "app-guide-fish": "سمك",
-  "app-guide-amphibian": "البرمائيات",
+  "app-guide-fish": "سمكة",
+  "app-guide-amphibian": "برمائي",
   "app-guide-insect": "حشرة",
   "app-guide-spider": "العنكبوت",
-  "app-guide-plant": "مصنع",
+  "app-guide-plant": "نبات",
   "app-guide-algae": "الطحالب",
   "app-guide-fungus": "فطر",
   "app-guide-bacterium": "بكتيريا",
   "app-guide-virus": "فايروس",
   "app-guide-featured-article": "مقال متميز",
   "app-menu-cover-topic": "موضوع الغلاف",
-  "app-menu-news": "news",
-  "app-menu-culture": "الثقافة",
-  "app-menu-nature": "طبيعة سجية",
+  "app-menu-news": "أخبار",
+  "app-menu-culture": "ثقافة",
+  "app-menu-nature": "طبيعة",
   "app-menu-license": "رخصة",
   "app-guide-help": "يساعد",
   "app-guide-sea": "بحر",
   "app-guide-continent": "القارة",
-  "app-guide-bioregion": "منطقة بيولوجية",
+  "app-guide-bioregion": "المنطقة الحيوية",
   "app-guide-mountain-range": "سلسلة جبال",
   "app-guide-disease": "مرض",
   "app-guide-protein": "بروتين",
   "app-guide-atom": "ذرة",
-  "app-guide-protist": "البروتيست",
-  "app-guide-country-map": "خريطة البلاد",
+  "app-guide-protist": "بروتيست",
+  "app-guide-country-map": "خريطة البلد",
   "app-guide-capitol": "الكابيتول",
-  "app-guide-form-of-government": "شكل حكومي.",
-  "app-guide-religion": "دين",
+  "app-guide-form-of-government": "شكل من الحكومة.",
+  "app-guide-religion": "دِين",
   "app-guide-period": "فترة",
-  "app-guide-history-aspect": "جانب التاريخ",
+  "app-guide-history-aspect": "الجانب التاريخي",
   "app-guide-revolution": "ثورة",
   "app-guide-war": "حرب",
   "app-guide-battle": "معركة",
-  "app-guide-documentary-title": "عنوان الفيلم الوثائقي",
+  "app-guide-documentary-title": "عنوان وثائقي",
   "app-guide-film-title": "عنوان الفيلم",
   "app-guide-art-movement": "حركة الفن",
   "app-guide-composer": "ملحن",
@@ -184,23 +201,29 @@
   "app-guide-philosopher": "فيلسوف",
   "app-guide-architect": "مهندس معماري",
   "app-guide-inventor": "مخترع",
-  "app-guide-software": "البرمجيات",
+  "app-guide-software": "برمجة",
   "app-guide-mathematics": "الرياضيات",
   "app-guide-tourist-attraction": "جذب سياحى",
   "app-guide-dish": "طبق",
   "app-guide-cell-type": "نوع من الخلايا",
-  "app-guide-archae": "أثرى",
+  "app-guide-archae": "العتائق",
   "app-menu-persona": "شخصية",
   "app-guide-featured-portal": "بوابة مميزة",
   "app-guide-musical-instrument": "أداة",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "تكنولوجيا",
+  "app-guide-near-me": "بالقرب مني",
+  "app-guide-newspapers": "الصحف",
+  "app-guide-news-radio": "مذياع",
+  "app-guide-news-tv": "تلفزيون",
+  "app-guide-news-economic-indicators": "المؤشرات الاقتصادية",
+  "app-guide-ongoing-conflicts": "الصراعات",
   "app-guide-radio": "مذياع",
-  "app-menu-country-select": "بلد",
+  "app-menu-country-select": "دولة",
   "app-menu-interests": "الإهتمامات",
   "app-menu-command-editor": "محرر الأوامر",
   "app-menu-presentation": "عرض تقديمي",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "كود التشغيل",
-  "app-menu-clear-editor": "صافي",
+  "app-menu-editor": "محرر",
+  "app-menu-run-code": "يجري",
+  "app-menu-clear-editor": "واضح",
   "app-foo": "فو بار باز"
 }
