--- a/app/explore2/assets/i18n/conzept-ceb.json
+++ b/app/explore2/assets/i18n/conzept-ceb.json
@@ -2,7 +2,7 @@
   "app-tab-topics-title": "mga hilisgutan",
   "app-tab-list-title": "listahan",
   "app-tab-bookmarks-title": "mga bookmark",
-  "app-tab-tools-title": "himan",
+  "app-tab-tools-title": "mga himan",
   "app-tab-settings-title": "mga setting",
   "app-tab-help-title": "tabang",
   "app-tab-audio-chat-title": "audio chat",
@@ -15,7 +15,7 @@
   "app-title-citations": "Mga kinutlo",
   "app-guide-see-more": "tan-awa pa",
   "app-guide-page": "panid",
-  "app-guide-news": "balita",
+  "app-guide-news": "kasamtangan nga mga panghitabo",
   "app-guide-topic": "hilisgutan",
   "app-guide-artwork": "pagpintal",
   "app-guide-organism": "organismo",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "demograpiya",
   "app-section-location-ecology": "ekolohiya",
   "app-section-location-travel": "pagbiyahe",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "panahon",
   "app-section-location-real-estate": "real estate",
   "app-menu-actions": "mga aksyon",
   "app-menu-background-audio": "audio",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "random nga topiko",
   "app-menu-compare-topics": "itandi ang mga hilisgutan",
   "app-menu-toggle-fullscreen": "i-toggle ang fullscreen",
-  "app-menu-bookmark-current-view": "i-bookmark ang kasamtangan nga URL",
+  "app-menu-bookmark-actions": "mga aksyon sa pagpili sa bookmark",
+  "app-menu-bookmark-actions-reasoning": "pangatarungan",
+  "app-guide-bookmark-teach-topics": "tudloi ko",
+  "app-guide-bookmark-quiz-topics": "quiz nako",
+  "app-guide-bookmark-related-topics": "may kalabutan nga mga hilisgutan",
+  "app-guide-bookmark-topic-differences": "mga kalainan",
+  "app-guide-bookmark-commonalities": "komonidad",
+  "app-guide-bookmark-similarities": "pagkaparehas",
+  "app-guide-bookmark-implications": "mga implikasyon",
+  "app-guide-bookmark-history": "kasaysayan",
+  "app-menu-import-as": "import nga mga bookmark",
+  "app-menu-export-as": "i-eksport ang mga bookmark",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-visual-search": "biswal nga pagpangita",
+  "app-menu-reading-assistance": "tabang sa pagbasa",
+  "app-menu-bread": "pulong-pagsugod bolding",
+  "app-menu-ai-tutor": "AI tutor",
+  "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
   "app-menu-clone-tab": "clone nga tab",
   "app-menu-plant-identification": "pag-ila sa tanom",
   "app-menu-text-identification": "pag-ila sa teksto",
@@ -119,7 +136,7 @@
   "app-section-society": "katilingban",
   "app-section-society-sports": "sports",
   "app-section-society-food": "pagkaon",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "pilosopiya",
   "app-section-library-religion": "relihiyon",
   "app-section-library-poetry": "balak",
   "app-section-library-identity": "pagkatawo",
@@ -153,7 +170,7 @@
   "app-guide-virus": "mga bayrus",
   "app-guide-featured-article": "featured nga artikulo",
   "app-menu-cover-topic": "tabon nga topiko",
-  "app-menu-news": "news",
+  "app-menu-news": "balita",
   "app-menu-culture": "kultura",
   "app-menu-nature": "kinaiyahan",
   "app-menu-license": "lisensya",
@@ -193,14 +210,20 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "gipakita nga portal",
   "app-guide-musical-instrument": "instrumento",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "teknolohiya",
+  "app-guide-near-me": "duol nako",
+  "app-guide-newspapers": "mga mantalaan",
+  "app-guide-news-radio": "radyo",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "mga timailhan sa ekonomiya",
+  "app-guide-ongoing-conflicts": "mga panagsumpaki",
   "app-guide-radio": "radyo",
   "app-menu-country-select": "nasud",
   "app-menu-interests": "interes",
   "app-menu-command-editor": "command editor",
   "app-menu-presentation": "presentasyon",
   "app-menu-editor": "editor",
-  "app-menu-run-code": "run code",
+  "app-menu-run-code": "dagan",
   "app-menu-clear-editor": "klaro",
   "app-foo": "foo bar baz"
 }
