--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -1,13 +1,13 @@
 {
   "app-tab-topics-title": "Themen",
-  "app-tab-list-title": "aufführen",
+  "app-tab-list-title": "Liste",
   "app-tab-bookmarks-title": "Lesezeichen",
-  "app-tab-tools-title": "Werkzeug",
-  "app-tab-settings-title": "die Einstellungen",
-  "app-tab-help-title": "Hilfe",
+  "app-tab-tools-title": "Werkzeuge",
+  "app-tab-settings-title": "Einstellungen",
+  "app-tab-help-title": "helfen",
   "app-tab-audio-chat-title": "Audio-Chat",
-  "app-search-placeholder": "Suche",
-  "app-structured-search-title": "strukturierte Suche",
+  "app-search-placeholder": "suchen",
+  "app-structured-search-title": "Strukturierte Suche",
   "app-title-occurence": "Vorkommenskarte",
   "app-title-super": "super",
   "app-title-sub": "sub",
@@ -15,48 +15,65 @@
   "app-title-citations": "Zitate",
   "app-guide-see-more": "Mehr sehen",
   "app-guide-page": "Seite",
-  "app-guide-news": "Nachrichten",
+  "app-guide-news": "aktuelle Ereignisse",
   "app-guide-topic": "Thema",
   "app-guide-artwork": "Malerei",
   "app-guide-organism": "Organismus",
   "app-guide-music": "Musik",
   "app-guide-science": "Wissenschaft",
   "app-topics-found": "Themen gefunden",
-  "app-section-main": "Hauptsächlich",
-  "app-section-info": "Info",
+  "app-section-main": "hauptsächlich",
+  "app-section-info": "die Info",
   "app-section-library": "Bibliothek",
   "app-section-web": "Netz",
-  "app-section-news": "Nachrichten",
-  "app-section-news-general": "Allgemeines",
+  "app-section-news": "Nachricht",
+  "app-section-news-general": "allgemein",
   "app-section-social": "Sozial",
   "app-section-news-tech": "Technik",
   "app-section-society-jobs": "Arbeitsplätze",
-  "app-section-location": "Lage",
+  "app-section-location": "Standort",
   "app-section-location-geography": "Erdkunde",
   "app-section-location-demography": "Demographie",
   "app-section-location-ecology": "Ökologie",
   "app-section-location-travel": "reisen",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "Wetter",
   "app-section-location-real-estate": "Immobilie",
   "app-menu-actions": "Aktionen",
-  "app-menu-background-audio": "Audio",
+  "app-menu-background-audio": "Audio-",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "Themenlisten",
-  "app-menu-various-links": "verschiedene Verlinkungen",
+  "app-menu-various-links": "diverse Links",
   "app-menu-font": "Schriftart",
   "app-menu-theme": "Thema",
   "app-menu-interface-language": "Schnittstellensprache",
   "app-menu-voice": "Stimme",
   "app-menu-user-manual": "Benutzerhandbuch",
   "app-menu-keyboard-shortcuts": "Tastatürkürzel",
-  "app-menu-credits": "Kredite",
+  "app-menu-credits": "Credits",
   "app-menu-about": "um",
   "app-menu-random-topic": "zufälliges Thema",
   "app-menu-random-topic-key": "zufälliges Thema",
   "app-menu-compare-topics": "Themen vergleichen",
   "app-menu-toggle-fullscreen": "Vollbild umschalten",
-  "app-menu-bookmark-current-view": "Aktuelle URL als Lesezeichen speichern",
-  "app-menu-clone-tab": "Registerkarte klonen",
+  "app-menu-bookmark-actions": "Aktionen zur Lesezeichenauswahl",
+  "app-menu-bookmark-actions-reasoning": "Argumentation",
+  "app-guide-bookmark-teach-topics": "Lehre mich",
+  "app-guide-bookmark-quiz-topics": "Befrag mich",
+  "app-guide-bookmark-related-topics": "verwandte Themen",
+  "app-guide-bookmark-topic-differences": "Unterschiede",
+  "app-guide-bookmark-commonalities": "Gemeinsamkeiten",
+  "app-guide-bookmark-similarities": "Ähnlichkeiten",
+  "app-guide-bookmark-implications": "Implikationen",
+  "app-guide-bookmark-history": "Geschichte",
+  "app-menu-import-as": "Lesezeichen importieren",
+  "app-menu-export-as": "Lesezeichen exportieren",
+  "app-menu-bookmark-actions-media": "Medien",
+  "app-menu-visual-search": "visuelle Suche",
+  "app-menu-reading-assistance": "Lesehilfe",
+  "app-menu-bread": "Wortanfang in Fettschrift",
+  "app-menu-ai-tutor": "KI-Tutor",
+  "app-menu-bookmark-current-view": "Aktuelle Ansicht als Lesezeichen speichern",
+  "app-menu-clone-tab": "Registerkarte „Klonen“.",
   "app-menu-plant-identification": "Pflanzenidentifikation",
   "app-menu-text-identification": "Texterkennung",
   "app-menu-digital-libraries": "digitale Bibliotheken",
@@ -67,47 +84,47 @@
   "app-menu-font-type": "Schriftart",
   "app-menu-font-size": "Schriftgröße",
   "app-menu-darkmode": "Dunkelmodus",
-  "app-menu-link-preview": "Link-Vorschau",
+  "app-menu-link-preview": "Linkvorschau",
   "app-menu-color-filter": "Farbfilter",
   "app-menu-locale": "Gebietsschema",
   "app-menu-style": "Stil",
   "app-menu-speed": "Geschwindigkeit",
   "app-menu-pitch": "Tonhöhe",
   "app-menu-fullscreen-active-pane": "Vollbild des aktiven Bereichs",
-  "app-menu-toggle-sidebar": "Seitenleiste umschalten",
+  "app-menu-toggle-sidebar": "Schalten Sie die Seitenleiste um",
   "app-menu-add-bookmark": "Lesezeichen hinzufügen",
   "app-menu-note-1": "Hinweis 1: Nur verfügbar, wenn der Fokus auf der Seitenleiste oder einem Wikipedia-Artikelbereich liegt.",
   "app-section-business": "Geschäft",
   "app-section-government": "Regierung",
-  "app-section-government-general": "Allgemeines",
+  "app-section-government-general": "allgemein",
   "app-section-government-legislature": "Legislative",
   "app-section-government-executive": "Exekutive",
   "app-section-government-judicial": "gerichtlich",
   "app-section-education": "Ausbildung",
   "app-section-education-assistance": "Hilfe",
   "app-section-education-courses": "Kurse",
-  "app-section-education-quizzes": "Quiz",
+  "app-section-education-quizzes": "Quizze",
   "app-section-science": "Wissenschaft",
   "app-section-science-search-tools": "Suchwerkzeuge",
-  "app-section-science-open-journals": "Zeitschriften öffnen",
+  "app-section-science-open-journals": "Tagebücher öffnen",
   "app-section-science-closed-journals": "geschlossene Zeitschriften",
-  "app-section-science-news": "Nachrichten",
+  "app-section-science-news": "Nachricht",
   "app-section-science-language": "Sprache",
   "app-section-science-biology": "Biologie",
   "app-section-science-medical": "medizinisch",
   "app-section-science-chemistry": "Chemie",
-  "app-section-science-minerology": "Mineralogie",
+  "app-section-science-minerology": "Mineralologie",
   "app-section-science-archeology": "Archäologie",
   "app-section-science-mathematics": "Mathematik",
   "app-section-science-astronomy": "Astronomie",
   "app-section-media-datasets": "Datensätze",
-  "app-section-media-datasets-general": "Allgemeines",
+  "app-section-media-datasets-general": "allgemein",
   "app-section-media-datasets-topical": "aktuell",
   "app-section-art": "Kunst",
-  "app-section-library-general": "Allgemeines",
+  "app-section-library-general": "allgemein",
   "app-section-library-manuscripts": "Manuskripte",
   "app-section-library-history": "Geschichte",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "Genealogie",
   "app-section-library-legal": "legal",
   "app-section-library-products": "Produkte",
   "app-section-media": "Medien",
@@ -118,23 +135,23 @@
   "app-section-meta": "Meta",
   "app-section-society": "Gesellschaft",
   "app-section-society-sports": "Sport",
-  "app-section-society-food": "Lebensmittel",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-society-food": "Essen",
+  "app-section-library-philosophy": "Philosophie",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
   "app-section-library-identity": "Identität",
   "app-section-society-events": "Veranstaltungen",
-  "app-guide-welcome-text": "Conzept ist der Versuch, eine Enzyklopädie für das 21. Jahrhundert zu schaffen.  <br><br> Genießen Sie Ihre Erkundungen! ",
+  "app-guide-welcome-text": "Conzept ist der Versuch, eine Enzyklopädie für das 21. Jahrhundert zu schaffen.  <br><br> Viel Spaß bei Ihren Erkundungen! ",
   "app-section-society-shopping": "Einkaufen",
-  "app-notification-too-few-compare-topics": "Fügen Sie zuerst zwei oder mehr Themen zum Vergleich hinzu, indem Sie die Schaltfläche verwenden (befindet sich oben im Wikipedia-Artikel und im Meta-Abschnitt des Themas).",
-  "app-menu-goto-next-topic": "gehe zum nächsten Thema (in den Seitenleistenergebnissen)",
-  "app-menu-goto-previous-topic": "gehe zum vorherigen Thema (in den Seitenleistenergebnissen)",
-  "app-menu-goto-next-pane": "gehe zum nächsten Fenster",
-  "app-menu-goto-previous-pane": "gehe zum vorherigen Bereich",
+  "app-notification-too-few-compare-topics": "Fügen Sie zunächst zwei oder mehr Themen zum Vergleich hinzu, indem Sie die Schaltfläche (oben im Wikipedia-Artikel und im Metabereich des Themas) verwenden.",
+  "app-menu-goto-next-topic": "Gehe zum nächsten Thema (in den Seitenleistenergebnissen)",
+  "app-menu-goto-previous-topic": "Zum vorherigen Thema gehen (in den Seitenleistenergebnissen)",
+  "app-menu-goto-next-pane": "Gehen Sie zum nächsten Bereich",
+  "app-menu-goto-previous-pane": "Gehe zum vorherigen Bereich",
   "app-menu-new-search": "neue Suche",
   "app-guide-documentary": "Dokumentarfilm",
   "app-guide-country": "Land",
-  "app-guide-string-search": "Zeichenfolgensuche",
+  "app-guide-string-search": "String-Suche",
   "app-guide-historical-country": "historisches Land",
   "app-guide-ethnic-group": "ethnische Gruppe",
   "app-guide-language": "Sprache",
@@ -142,28 +159,28 @@
   "app-guide-mammal": "Säugetier",
   "app-guide-bird": "Vogel",
   "app-guide-reptile": "Reptil",
-  "app-guide-fish": "Fische",
+  "app-guide-fish": "Fisch",
   "app-guide-amphibian": "Amphibie",
   "app-guide-insect": "Insekt",
   "app-guide-spider": "Spinne",
-  "app-guide-plant": "Pflanze",
+  "app-guide-plant": "Anlage",
   "app-guide-algae": "Algen",
   "app-guide-fungus": "Pilz",
   "app-guide-bacterium": "Bakterium",
   "app-guide-virus": "Virus",
   "app-guide-featured-article": "gesponserter Artikel",
   "app-menu-cover-topic": "Titelthema",
-  "app-menu-news": "news",
+  "app-menu-news": "Nachricht",
   "app-menu-culture": "Kultur",
   "app-menu-nature": "Natur",
   "app-menu-license": "Lizenz",
-  "app-guide-help": "Hilfe",
+  "app-guide-help": "helfen",
   "app-guide-sea": "Meer",
   "app-guide-continent": "Kontinent",
   "app-guide-bioregion": "Bioregion",
   "app-guide-mountain-range": "Gebirge",
-  "app-guide-disease": "Erkrankung",
-  "app-guide-protein": "Protein",
+  "app-guide-disease": "Krankheit",
+  "app-guide-protein": "Eiweiß",
   "app-guide-atom": "Atom",
   "app-guide-protist": "Protist",
   "app-guide-country-map": "Landkarte",
@@ -175,7 +192,7 @@
   "app-guide-revolution": "Revolution",
   "app-guide-war": "Krieg",
   "app-guide-battle": "Schlacht",
-  "app-guide-documentary-title": "dokumentarischer Titel",
+  "app-guide-documentary-title": "Titel des Dokumentarfilms",
   "app-guide-film-title": "Filmtitel",
   "app-guide-art-movement": "Kunstbewegung",
   "app-guide-composer": "Komponist",
@@ -191,16 +208,22 @@
   "app-guide-cell-type": "Zelltyp",
   "app-guide-archae": "Archae",
   "app-menu-persona": "Persona",
-  "app-guide-featured-portal": "gekennzeichnetes Portal",
+  "app-guide-featured-portal": "vorgestelltes Portal",
   "app-guide-musical-instrument": "Instrument",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "Technologie",
+  "app-guide-near-me": "in meiner Nähe",
+  "app-guide-newspapers": "Zeitungen",
+  "app-guide-news-radio": "Radio",
+  "app-guide-news-tv": "Fernseher",
+  "app-guide-news-economic-indicators": "Ökonomische Indikatoren",
+  "app-guide-ongoing-conflicts": "Konflikte",
   "app-guide-radio": "Radio",
   "app-menu-country-select": "Land",
   "app-menu-interests": "Interessen",
   "app-menu-command-editor": "Befehlseditor",
   "app-menu-presentation": "Präsentation",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "ausführen",
-  "app-menu-clear-editor": "löschen",
+  "app-menu-editor": "Editor",
+  "app-menu-run-code": "laufen",
+  "app-menu-clear-editor": "klar",
   "app-foo": "foo bar baz"
 }
