--- a/app/explore2/assets/i18n/conzept-es.json
+++ b/app/explore2/assets/i18n/conzept-es.json
@@ -2,25 +2,25 @@
   "app-tab-topics-title": "temas",
   "app-tab-list-title": "lista",
   "app-tab-bookmarks-title": "marcadores",
-  "app-tab-tools-title": "instrumentos",
+  "app-tab-tools-title": "herramientas",
   "app-tab-settings-title": "ajustes",
   "app-tab-help-title": "ayuda",
-  "app-tab-audio-chat-title": "chat de audio",
-  "app-search-placeholder": "búsqueda",
+  "app-tab-audio-chat-title": "charla de audio",
+  "app-search-placeholder": "buscar",
   "app-structured-search-title": "búsqueda estructurada",
-  "app-title-occurence": "Mapa de ocurrencia",
+  "app-title-occurence": "mapa de ocurrencia",
   "app-title-super": "súper",
   "app-title-sub": "sub",
   "app-title-pages": "paginas",
   "app-title-citations": "Citas",
   "app-guide-see-more": "ver más",
   "app-guide-page": "página",
-  "app-guide-news": "noticias",
+  "app-guide-news": "eventos actuales",
   "app-guide-topic": "tema",
   "app-guide-artwork": "cuadro",
   "app-guide-organism": "organismo",
   "app-guide-music": "música",
-  "app-guide-science": "Ciencias",
+  "app-guide-science": "ciencia",
   "app-topics-found": "temas encontrados",
   "app-section-main": "principal",
   "app-section-info": "información",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "demografía",
   "app-section-location-ecology": "ecología",
   "app-section-location-travel": "viajar",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "clima",
   "app-section-location-real-estate": "bienes raíces",
   "app-menu-actions": "comportamiento",
   "app-menu-background-audio": "audio",
@@ -49,14 +49,31 @@
   "app-menu-voice": "voz",
   "app-menu-user-manual": "manual de usuario",
   "app-menu-keyboard-shortcuts": "atajos de teclado",
-  "app-menu-credits": "creditos",
-  "app-menu-about": "sobre",
+  "app-menu-credits": "créditos",
+  "app-menu-about": "acerca de",
   "app-menu-random-topic": "tema aleatorio",
   "app-menu-random-topic-key": "tema aleatorio",
   "app-menu-compare-topics": "comparar temas",
   "app-menu-toggle-fullscreen": "alternar pantalla completa",
-  "app-menu-bookmark-current-view": "marcar la URL actual",
-  "app-menu-clone-tab": "pestaña de clonación",
+  "app-menu-bookmark-actions": "acciones de selección de marcadores",
+  "app-menu-bookmark-actions-reasoning": "razonamiento",
+  "app-guide-bookmark-teach-topics": "Enseñame",
+  "app-guide-bookmark-quiz-topics": "pregúntame",
+  "app-guide-bookmark-related-topics": "Temas relacionados",
+  "app-guide-bookmark-topic-differences": "diferencias",
+  "app-guide-bookmark-commonalities": "puntos en común",
+  "app-guide-bookmark-similarities": "similitudes",
+  "app-guide-bookmark-implications": "trascendencia",
+  "app-guide-bookmark-history": "historia",
+  "app-menu-import-as": "importar marcadores",
+  "app-menu-export-as": "exportar marcadores",
+  "app-menu-bookmark-actions-media": "medios de comunicación",
+  "app-menu-visual-search": "búsqueda visual",
+  "app-menu-reading-assistance": "asistencia de lectura",
+  "app-menu-bread": "negrita de inicio de palabra",
+  "app-menu-ai-tutor": "tutor de IA",
+  "app-menu-bookmark-current-view": "marcar vista actual",
+  "app-menu-clone-tab": "pestaña clonar",
   "app-menu-plant-identification": "identificación de plantas",
   "app-menu-text-identification": "identificación de texto",
   "app-menu-digital-libraries": "bibliotecas digitales",
@@ -72,11 +89,11 @@
   "app-menu-locale": "lugar",
   "app-menu-style": "estilo",
   "app-menu-speed": "velocidad",
-  "app-menu-pitch": "tono",
+  "app-menu-pitch": "paso",
   "app-menu-fullscreen-active-pane": "pantalla completa el panel activo",
   "app-menu-toggle-sidebar": "alternar la barra lateral",
   "app-menu-add-bookmark": "añadir marcador",
-  "app-menu-note-1": "nota 1: solo disponible cuando el foco está en la barra lateral o en el panel de un artículo de Wikipedia.",
+  "app-menu-note-1": "nota 1: solo está disponible cuando el foco está en la barra lateral o en el panel de un artículo de Wikipedia.",
   "app-section-business": "negocio",
   "app-section-government": "gobierno",
   "app-section-government-general": "general",
@@ -87,27 +104,27 @@
   "app-section-education-assistance": "asistencia",
   "app-section-education-courses": "cursos",
   "app-section-education-quizzes": "cuestionarios",
-  "app-section-science": "Ciencias",
+  "app-section-science": "ciencia",
   "app-section-science-search-tools": "herramientas de búsqueda",
-  "app-section-science-open-journals": "diarios abiertos",
+  "app-section-science-open-journals": "revistas abiertas",
   "app-section-science-closed-journals": "diarios cerrados",
   "app-section-science-news": "noticias",
   "app-section-science-language": "idioma",
   "app-section-science-biology": "biología",
   "app-section-science-medical": "médico",
   "app-section-science-chemistry": "química",
-  "app-section-science-minerology": "minerología",
+  "app-section-science-minerology": "mineralogía",
   "app-section-science-archeology": "arqueología",
   "app-section-science-mathematics": "matemáticas",
   "app-section-science-astronomy": "astronomía",
   "app-section-media-datasets": "conjuntos de datos",
   "app-section-media-datasets-general": "general",
   "app-section-media-datasets-topical": "actual",
-  "app-section-art": "Arte",
+  "app-section-art": "arte",
   "app-section-library-general": "general",
   "app-section-library-manuscripts": "manuscritos",
   "app-section-library-history": "historia",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "genealogía",
   "app-section-library-legal": "legal",
   "app-section-library-products": "productos",
   "app-section-media": "medios de comunicación",
@@ -119,16 +136,16 @@
   "app-section-society": "sociedad",
   "app-section-society-sports": "Deportes",
   "app-section-society-food": "alimento",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filosofía",
   "app-section-library-religion": "religión",
   "app-section-library-poetry": "poesía",
   "app-section-library-identity": "identidad",
   "app-section-society-events": "eventos",
   "app-guide-welcome-text": "Conzept es un intento de crear una enciclopedia para el siglo XXI.  <br><br> ¡Disfruta de tus exploraciones! ",
   "app-section-society-shopping": "compras",
-  "app-notification-too-few-compare-topics": "Primero agregue dos o más temas a la comparación, usando el botón (ubicado en la parte superior del artículo de Wikipedia y en la meta-sección del tema)",
-  "app-menu-goto-next-topic": "ir al tema siguiente (en la barra lateral de resultados)",
-  "app-menu-goto-previous-topic": "ir al tema anterior (en la barra lateral de resultados)",
+  "app-notification-too-few-compare-topics": "Primero agregue dos o más temas a la comparación, usando el botón (ubicado en la parte superior del artículo de Wikipedia y en la metasección del tema)",
+  "app-menu-goto-next-topic": "ir al siguiente tema (en los resultados de la barra lateral)",
+  "app-menu-goto-previous-topic": "ir al tema anterior (en los resultados de la barra lateral)",
   "app-menu-goto-next-pane": "ir al siguiente panel",
   "app-menu-goto-previous-pane": "ir al panel anterior",
   "app-menu-new-search": "nueva búsqueda",
@@ -160,7 +177,7 @@
   "app-guide-help": "ayuda",
   "app-guide-sea": "mar",
   "app-guide-continent": "continente",
-  "app-guide-bioregion": "bioregión",
+  "app-guide-bioregion": "biorregión",
   "app-guide-mountain-range": "cordillera",
   "app-guide-disease": "enfermedad",
   "app-guide-protein": "proteína",
@@ -171,7 +188,7 @@
   "app-guide-form-of-government": "forma de gobierno",
   "app-guide-religion": "religión",
   "app-guide-period": "período",
-  "app-guide-history-aspect": "aspecto de la historia",
+  "app-guide-history-aspect": "aspecto histórico",
   "app-guide-revolution": "revolución",
   "app-guide-war": "guerra",
   "app-guide-battle": "batalla",
@@ -189,18 +206,24 @@
   "app-guide-tourist-attraction": "atracción turística",
   "app-guide-dish": "plato",
   "app-guide-cell-type": "tipo de célula",
-  "app-guide-archae": "archae",
+  "app-guide-archae": "arqueas",
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "portal destacado",
   "app-guide-musical-instrument": "instrumento",
   "app-guide-technology": "tecnología",
+  "app-guide-near-me": "cerca de mí",
+  "app-guide-newspapers": "periódicos",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "TELEVISOR",
+  "app-guide-news-economic-indicators": "indicadores económicos",
+  "app-guide-ongoing-conflicts": "conflictos",
   "app-guide-radio": "radio",
   "app-menu-country-select": "país",
   "app-menu-interests": "intereses",
   "app-menu-command-editor": "editor de comandos",
   "app-menu-presentation": "presentación",
   "app-menu-editor": "editor",
-  "app-menu-run-code": "ejecutar código",
+  "app-menu-run-code": "correr",
   "app-menu-clear-editor": "claro",
   "app-foo": "foo bar baz"
 }
