--- a/app/explore2/assets/i18n/conzept-fr.json
+++ b/app/explore2/assets/i18n/conzept-fr.json
@@ -3,10 +3,10 @@
   "app-tab-list-title": "liste",
   "app-tab-bookmarks-title": "signets",
   "app-tab-tools-title": "outils",
-  "app-tab-settings-title": "réglages",
-  "app-tab-help-title": "aider",
+  "app-tab-settings-title": "paramètres",
+  "app-tab-help-title": "aide",
   "app-tab-audio-chat-title": "conversation audio",
-  "app-search-placeholder": "chercher",
+  "app-search-placeholder": "recherche",
   "app-structured-search-title": "recherche structurée",
   "app-title-occurence": "Carte des occurrences",
   "app-title-super": "super",
@@ -15,28 +15,28 @@
   "app-title-citations": "Citations",
   "app-guide-see-more": "voir plus",
   "app-guide-page": "page",
-  "app-guide-news": "nouvelles",
+  "app-guide-news": "événements actuels",
   "app-guide-topic": "sujet",
-  "app-guide-artwork": "La peinture",
+  "app-guide-artwork": "peinture",
   "app-guide-organism": "organisme",
   "app-guide-music": "musique",
-  "app-guide-science": "la science",
+  "app-guide-science": "science",
   "app-topics-found": "sujets trouvés",
-  "app-section-main": "principale",
+  "app-section-main": "principal",
   "app-section-info": "Info",
   "app-section-library": "bibliothèque",
   "app-section-web": "la toile",
   "app-section-news": "nouvelles",
   "app-section-news-general": "général",
-  "app-section-social": "social",
+  "app-section-social": "sociale",
   "app-section-news-tech": "technologie",
-  "app-section-society-jobs": "travaux",
+  "app-section-society-jobs": "emplois",
   "app-section-location": "emplacement",
   "app-section-location-geography": "géographie",
   "app-section-location-demography": "démographie",
   "app-section-location-ecology": "écologie",
-  "app-section-location-travel": "voyager",
-  "app-section-location-weather": "weather",
+  "app-section-location-travel": "voyage",
+  "app-section-location-weather": "météo",
   "app-section-location-real-estate": "immobilier",
   "app-menu-actions": "Actions",
   "app-menu-background-audio": "l'audio",
@@ -50,20 +50,37 @@
   "app-menu-user-manual": "Manuel de l'Utilisateur",
   "app-menu-keyboard-shortcuts": "Raccourcis clavier",
   "app-menu-credits": "crédits",
-  "app-menu-about": "sur",
-  "app-menu-random-topic": "sujet au hasard",
-  "app-menu-random-topic-key": "sujet au hasard",
+  "app-menu-about": "à propos",
+  "app-menu-random-topic": "sujet aléatoire",
+  "app-menu-random-topic-key": "sujet aléatoire",
   "app-menu-compare-topics": "comparer les sujets",
-  "app-menu-toggle-fullscreen": "passer en plein écran",
-  "app-menu-bookmark-current-view": "ajouter l'URL actuelle aux favoris",
+  "app-menu-toggle-fullscreen": "basculer en plein écran",
+  "app-menu-bookmark-actions": "actions de sélection de favoris",
+  "app-menu-bookmark-actions-reasoning": "raisonnement",
+  "app-guide-bookmark-teach-topics": "enseigne moi",
+  "app-guide-bookmark-quiz-topics": "interroge-moi",
+  "app-guide-bookmark-related-topics": "Rubriques connexes",
+  "app-guide-bookmark-topic-differences": "différences",
+  "app-guide-bookmark-commonalities": "points communs",
+  "app-guide-bookmark-similarities": "similitudes",
+  "app-guide-bookmark-implications": "conséquences",
+  "app-guide-bookmark-history": "histoire",
+  "app-menu-import-as": "importer des signets",
+  "app-menu-export-as": "exporter des signets",
+  "app-menu-bookmark-actions-media": "médias",
+  "app-menu-visual-search": "recherche visuelle",
+  "app-menu-reading-assistance": "aide à la lecture",
+  "app-menu-bread": "mise en gras du début du mot",
+  "app-menu-ai-tutor": "Tuteur IA",
+  "app-menu-bookmark-current-view": "ajouter la vue actuelle aux favoris",
   "app-menu-clone-tab": "onglet cloner",
   "app-menu-plant-identification": "identification des plantes",
-  "app-menu-text-identification": "reconnaissance de texte",
+  "app-menu-text-identification": "identification de texte",
   "app-menu-digital-libraries": "bibliothèques numériques",
   "app-menu-geography": "géographie",
   "app-menu-version": "version",
   "app-menu-made-by": "faite par",
-  "app-menu-all-rights-reserved": "Tous les droits sont réservés",
+  "app-menu-all-rights-reserved": "Tous droits réservés",
   "app-menu-font-type": "type de police",
   "app-menu-font-size": "taille de police",
   "app-menu-darkmode": "mode sombre",
@@ -71,13 +88,13 @@
   "app-menu-color-filter": "filtre de couleur",
   "app-menu-locale": "lieu",
   "app-menu-style": "style",
-  "app-menu-speed": "la rapidité",
-  "app-menu-pitch": "terrain",
+  "app-menu-speed": "vitesse",
+  "app-menu-pitch": "pas",
   "app-menu-fullscreen-active-pane": "plein écran le volet actif",
   "app-menu-toggle-sidebar": "basculer la barre latérale",
   "app-menu-add-bookmark": "ajouter un marque-page",
-  "app-menu-note-1": "note 1 : disponible uniquement lorsque le focus est sur la barre latérale ou un volet d'article de Wikipédia.",
-  "app-section-business": "Entreprise",
+  "app-menu-note-1": "note 1 : disponible uniquement lorsque le focus est sur la barre latérale ou sur un volet d'article Wikipédia.",
+  "app-section-business": "entreprise",
   "app-section-government": "gouvernement",
   "app-section-government-general": "général",
   "app-section-government-legislature": "corps législatif",
@@ -87,12 +104,12 @@
   "app-section-education-assistance": "assistance",
   "app-section-education-courses": "cours",
   "app-section-education-quizzes": "quiz",
-  "app-section-science": "la science",
+  "app-section-science": "science",
   "app-section-science-search-tools": "outils de recherche",
-  "app-section-science-open-journals": "revues ouvertes",
-  "app-section-science-closed-journals": "revues fermées",
+  "app-section-science-open-journals": "journaux ouverts",
+  "app-section-science-closed-journals": "journaux fermés",
   "app-section-science-news": "nouvelles",
-  "app-section-science-language": "Langue",
+  "app-section-science-language": "langue",
   "app-section-science-biology": "la biologie",
   "app-section-science-medical": "médical",
   "app-section-science-chemistry": "chimie",
@@ -106,29 +123,29 @@
   "app-section-art": "art",
   "app-section-library-general": "général",
   "app-section-library-manuscripts": "manuscrits",
-  "app-section-library-history": "l'histoire",
-  "app-section-library-genealogy": "genealogy",
-  "app-section-library-legal": "juridique",
+  "app-section-library-history": "histoire",
+  "app-section-library-genealogy": "généalogie",
+  "app-section-library-legal": "légal",
   "app-section-library-products": "des produits",
   "app-section-media": "médias",
   "app-section-media-video": "vidéo",
   "app-section-media-image": "image",
   "app-section-media-audio": "l'audio",
-  "app-section-media-software": "Logiciel",
+  "app-section-media-software": "logiciel",
   "app-section-meta": "méta",
   "app-section-society": "société",
   "app-section-society-sports": "des sports",
-  "app-section-society-food": "aliments",
-  "app-section-library-philosophy": "philosophy",
-  "app-section-library-religion": "la religion",
+  "app-section-society-food": "nourriture",
+  "app-section-library-philosophy": "philosophie",
+  "app-section-library-religion": "religion",
   "app-section-library-poetry": "poésie",
   "app-section-library-identity": "identité",
   "app-section-society-events": "événements",
-  "app-guide-welcome-text": "Conzept est une tentative de créer une encyclopédie pour le 21e siècle.  <br><br> Bonne exploration ! ",
+  "app-guide-welcome-text": "Conzept est une tentative de créer une encyclopédie pour le 21e siècle.  <br><br> Bonnes explorations ! ",
   "app-section-society-shopping": "achats",
   "app-notification-too-few-compare-topics": "Ajoutez d'abord deux sujets ou plus à la comparaison, en utilisant le bouton (situé en haut de l'article Wikipédia et dans la méta-section du sujet)",
-  "app-menu-goto-next-topic": "aller au sujet suivant (dans les résultats de la barre latérale)",
-  "app-menu-goto-previous-topic": "aller au sujet précédent (dans les résultats de la barre latérale)",
+  "app-menu-goto-next-topic": "passer au sujet suivant (dans la barre latérale des résultats)",
+  "app-menu-goto-previous-topic": "aller au sujet précédent (dans la barre latérale des résultats)",
   "app-menu-goto-next-pane": "aller au volet suivant",
   "app-menu-goto-previous-pane": "aller au volet précédent",
   "app-menu-new-search": "nouvelle recherche",
@@ -137,7 +154,7 @@
   "app-guide-string-search": "recherche de chaîne",
   "app-guide-historical-country": "pays historique",
   "app-guide-ethnic-group": "groupe ethnique",
-  "app-guide-language": "Langue",
+  "app-guide-language": "langue",
   "app-guide-national-park": "parc national",
   "app-guide-mammal": "mammifère",
   "app-guide-bird": "oiseau",
@@ -146,18 +163,18 @@
   "app-guide-amphibian": "amphibie",
   "app-guide-insect": "insecte",
   "app-guide-spider": "araignée",
-  "app-guide-plant": "plante",
+  "app-guide-plant": "usine",
   "app-guide-algae": "algues",
   "app-guide-fungus": "champignon",
   "app-guide-bacterium": "bactérie",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "article vedette",
   "app-menu-cover-topic": "sujet de couverture",
-  "app-menu-news": "news",
-  "app-menu-culture": "Culture",
-  "app-menu-nature": "Nature",
+  "app-menu-news": "nouvelles",
+  "app-menu-culture": "culture",
+  "app-menu-nature": "nature",
   "app-menu-license": "Licence",
-  "app-guide-help": "aider",
+  "app-guide-help": "aide",
   "app-guide-sea": "mer",
   "app-guide-continent": "continent",
   "app-guide-bioregion": "biorégion",
@@ -169,13 +186,13 @@
   "app-guide-country-map": "carte du pays",
   "app-guide-capitol": "Capitole",
   "app-guide-form-of-government": "forme de gouvernement.",
-  "app-guide-religion": "la religion",
+  "app-guide-religion": "religion",
   "app-guide-period": "période",
   "app-guide-history-aspect": "aspect historique",
   "app-guide-revolution": "révolution",
   "app-guide-war": "guerre",
   "app-guide-battle": "bataille",
-  "app-guide-documentary-title": "titre documentaire",
+  "app-guide-documentary-title": "titre du documentaire",
   "app-guide-film-title": "titre de film",
   "app-guide-art-movement": "mouvement artistique",
   "app-guide-composer": "compositeur",
@@ -184,23 +201,29 @@
   "app-guide-philosopher": "philosophe",
   "app-guide-architect": "architecte",
   "app-guide-inventor": "inventeur",
-  "app-guide-software": "Logiciel",
+  "app-guide-software": "logiciel",
   "app-guide-mathematics": "mathématiques",
   "app-guide-tourist-attraction": "attraction touristique",
-  "app-guide-dish": "assiette",
+  "app-guide-dish": "plat",
   "app-guide-cell-type": "type de cellule",
-  "app-guide-archae": "archae",
+  "app-guide-archae": "archées",
   "app-menu-persona": "personnage",
-  "app-guide-featured-portal": "portail en vedette",
+  "app-guide-featured-portal": "portail vedette",
   "app-guide-musical-instrument": "instrument",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "technologie",
+  "app-guide-near-me": "proche de moi",
+  "app-guide-newspapers": "journaux",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "la télé",
+  "app-guide-news-economic-indicators": "indicateurs économiques",
+  "app-guide-ongoing-conflicts": "conflits",
   "app-guide-radio": "radio",
   "app-menu-country-select": "pays",
   "app-menu-interests": "intérêts",
   "app-menu-command-editor": "éditeur de commandes",
   "app-menu-presentation": "présentation",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "exécuter le code",
-  "app-menu-clear-editor": "dégager",
+  "app-menu-editor": "éditeur",
+  "app-menu-run-code": "courir",
+  "app-menu-clear-editor": "clair",
   "app-foo": "foo bar baz"
 }
