--- a/app/explore2/assets/i18n/conzept-ja.json
+++ b/app/explore2/assets/i18n/conzept-ja.json
@@ -6,8 +6,8 @@
   "app-tab-settings-title": "設定",
   "app-tab-help-title": "ヘルプ",
   "app-tab-audio-chat-title": "音声チャット",
-  "app-search-placeholder": "探す",
-  "app-structured-search-title": "構造化検索",
+  "app-search-placeholder": "検索",
+  "app-structured-search-title": "構造化された検索",
   "app-title-occurence": "発生マップ",
   "app-title-super": "素晴らしい",
   "app-title-sub": "サブ",
@@ -15,55 +15,72 @@
   "app-title-citations": "引用",
   "app-guide-see-more": "続きを見る",
   "app-guide-page": "ページ",
-  "app-guide-news": "ニュース",
+  "app-guide-news": "時事問題",
   "app-guide-topic": "トピック",
-  "app-guide-artwork": "ペインティング",
+  "app-guide-artwork": "絵画",
   "app-guide-organism": "生命体",
   "app-guide-music": "音楽",
-  "app-guide-science": "理科",
+  "app-guide-science": "科学",
   "app-topics-found": "トピックが見つかりました",
   "app-section-main": "主要",
   "app-section-info": "情報",
   "app-section-library": "図書館",
   "app-section-web": "ウェブ",
   "app-section-news": "ニュース",
-  "app-section-news-general": "全般的",
+  "app-section-news-general": "一般的な",
   "app-section-social": "社交",
-  "app-section-news-tech": "テック",
+  "app-section-news-tech": "技術",
   "app-section-society-jobs": "仕事",
   "app-section-location": "位置",
   "app-section-location-geography": "地理",
   "app-section-location-demography": "人口統計",
-  "app-section-location-ecology": "エコロジー",
-  "app-section-location-travel": "トラベル",
-  "app-section-location-weather": "weather",
+  "app-section-location-ecology": "生態学",
+  "app-section-location-travel": "旅行",
+  "app-section-location-weather": "天気",
   "app-section-location-real-estate": "不動産",
   "app-menu-actions": "行動",
   "app-menu-background-audio": "オーディオ",
   "app-menu-background-midi": "ミディ",
   "app-menu-topic-lists": "トピックリスト",
-  "app-menu-various-links": "各種リンク",
+  "app-menu-various-links": "さまざまなリンク",
   "app-menu-font": "フォント",
   "app-menu-theme": "テーマ",
-  "app-menu-interface-language": "インターフェイス言語",
+  "app-menu-interface-language": "インターフェース言語",
   "app-menu-voice": "声",
   "app-menu-user-manual": "ユーザーマニュアル",
   "app-menu-keyboard-shortcuts": "キーボードショートカット",
   "app-menu-credits": "クレジット",
-  "app-menu-about": "約",
-  "app-menu-random-topic": "ランダムなトピック",
-  "app-menu-random-topic-key": "ランダムなトピック",
+  "app-menu-about": "について",
+  "app-menu-random-topic": "ランダムな話題",
+  "app-menu-random-topic-key": "ランダムな話題",
   "app-menu-compare-topics": "トピックを比較する",
   "app-menu-toggle-fullscreen": "フルスクリーン切り替え",
-  "app-menu-bookmark-current-view": "現在の URL をブックマークする",
+  "app-menu-bookmark-actions": "ブックマーク選択アクション",
+  "app-menu-bookmark-actions-reasoning": "推論",
+  "app-guide-bookmark-teach-topics": "教えて",
+  "app-guide-bookmark-quiz-topics": "クイズしてください",
+  "app-guide-bookmark-related-topics": "関連トピック",
+  "app-guide-bookmark-topic-differences": "違い",
+  "app-guide-bookmark-commonalities": "共通点",
+  "app-guide-bookmark-similarities": "類似点",
+  "app-guide-bookmark-implications": "影響",
+  "app-guide-bookmark-history": "歴史",
+  "app-menu-import-as": "ブックマークをインポートする",
+  "app-menu-export-as": "ブックマークをエクスポートする",
+  "app-menu-bookmark-actions-media": "メディア",
+  "app-menu-visual-search": "ビジュアル検索",
+  "app-menu-reading-assistance": "読書補助",
+  "app-menu-bread": "単語の先頭を太字にする",
+  "app-menu-ai-tutor": "AI家庭教師",
+  "app-menu-bookmark-current-view": "現在のビューをブックマークする",
   "app-menu-clone-tab": "クローンタブ",
-  "app-menu-plant-identification": "植物識別",
-  "app-menu-text-identification": "テキスト識別",
-  "app-menu-digital-libraries": "デジタル図書館",
+  "app-menu-plant-identification": "植物の同定",
+  "app-menu-text-identification": "テキストの識別",
+  "app-menu-digital-libraries": "デジタルライブラリ",
   "app-menu-geography": "地理",
   "app-menu-version": "バージョン",
   "app-menu-made-by": "作られた",
-  "app-menu-all-rights-reserved": "全著作権所有",
+  "app-menu-all-rights-reserved": "無断転載を禁じます",
   "app-menu-font-type": "フォントの種類",
   "app-menu-font-size": "フォントサイズ",
   "app-menu-darkmode": "ダークモード",
@@ -71,26 +88,26 @@
   "app-menu-color-filter": "カラーフィルター",
   "app-menu-locale": "ロケール",
   "app-menu-style": "スタイル",
-  "app-menu-speed": "速度",
+  "app-menu-speed": "スピード",
   "app-menu-pitch": "ピッチ",
-  "app-menu-fullscreen-active-pane": "アクティブなペインを全画面表示",
-  "app-menu-toggle-sidebar": "サイドバーを切り替える",
-  "app-menu-add-bookmark": "ブックマークを追加",
-  "app-menu-note-1": "注 1: フォーカスがサイドバーまたはウィキペディアの記事ペインにある場合にのみ使用できます。",
+  "app-menu-fullscreen-active-pane": "アクティブなペインを全画面表示します",
+  "app-menu-toggle-sidebar": "サイドバーを切り替えます",
+  "app-menu-add-bookmark": "ブックマークを追加する",
+  "app-menu-note-1": "注 1: フォーカスがサイドバーまたは Wikipedia 記事ペインにある場合にのみ使用できます。",
   "app-section-business": "仕事",
   "app-section-government": "政府",
-  "app-section-government-general": "全般的",
-  "app-section-government-legislature": "議会",
+  "app-section-government-general": "一般的な",
+  "app-section-government-legislature": "立法府",
   "app-section-government-executive": "エグゼクティブ",
   "app-section-government-judicial": "司法",
   "app-section-education": "教育",
   "app-section-education-assistance": "援助",
   "app-section-education-courses": "コース",
   "app-section-education-quizzes": "クイズ",
-  "app-section-science": "理科",
+  "app-section-science": "科学",
   "app-section-science-search-tools": "検索ツール",
-  "app-section-science-open-journals": "ジャーナルを開く",
-  "app-section-science-closed-journals": "閉鎖されたジャーナル",
+  "app-section-science-open-journals": "オープンジャーナル",
+  "app-section-science-closed-journals": "閉じられた雑誌",
   "app-section-science-news": "ニュース",
   "app-section-science-language": "言語",
   "app-section-science-biology": "生物学",
@@ -101,14 +118,14 @@
   "app-section-science-mathematics": "数学",
   "app-section-science-astronomy": "天文学",
   "app-section-media-datasets": "データセット",
-  "app-section-media-datasets-general": "全般的",
+  "app-section-media-datasets-general": "一般的な",
   "app-section-media-datasets-topical": "話題の",
   "app-section-art": "美術",
-  "app-section-library-general": "全般的",
-  "app-section-library-manuscripts": "写本",
+  "app-section-library-general": "一般的な",
+  "app-section-library-manuscripts": "原稿",
   "app-section-library-history": "歴史",
-  "app-section-library-genealogy": "genealogy",
-  "app-section-library-legal": "法的",
+  "app-section-library-genealogy": "系譜",
+  "app-section-library-legal": "法律上の",
   "app-section-library-products": "製品",
   "app-section-media": "メディア",
   "app-section-media-video": "ビデオ",
@@ -118,24 +135,24 @@
   "app-section-meta": "メタ",
   "app-section-society": "社会",
   "app-section-society-sports": "スポーツ",
-  "app-section-society-food": "食物",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-society-food": "食べ物",
+  "app-section-library-philosophy": "哲学",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "詩",
   "app-section-library-identity": "身元",
   "app-section-society-events": "イベント",
-  "app-guide-welcome-text": "Conzept は、21 世紀の百科事典を作成する試みです。 <br><br> あなたの探検を楽しんでください！",
+  "app-guide-welcome-text": "Conzept は 21 世紀の百科事典を作成する試みです。  <br><br> 探検をお楽しみください!",
   "app-section-society-shopping": "買い物",
-  "app-notification-too-few-compare-topics": "まず、ボタン (ウィキペディアの記事の上部とトピックのメタセクションにあります) を使用して、2 つ以上のトピックを比較に追加します。",
-  "app-menu-goto-next-topic": "次のトピックに移動 (サイドバーの結果)",
-  "app-menu-goto-previous-topic": "前のトピックに移動 (サイドバーの結果)",
+  "app-notification-too-few-compare-topics": "まず、ボタン (Wikipedia 記事の上部とトピックのメタ セクションにあります) を使用して、2 つ以上のトピックを比較に追加します。",
+  "app-menu-goto-next-topic": "次のトピックに移動します (サイドバーの結果内)",
+  "app-menu-goto-previous-topic": "前のトピックに移動します (サイドバーの結果内)",
   "app-menu-goto-next-pane": "次のペインに移動",
   "app-menu-goto-previous-pane": "前のペインに移動",
   "app-menu-new-search": "新しい検索",
   "app-guide-documentary": "ドキュメンタリー",
   "app-guide-country": "国",
   "app-guide-string-search": "文字列検索",
-  "app-guide-historical-country": "歴史的な国",
+  "app-guide-historical-country": "歴史ある国",
   "app-guide-ethnic-group": "民族グループ",
   "app-guide-language": "言語",
   "app-guide-national-park": "国立公園",
@@ -144,16 +161,16 @@
   "app-guide-reptile": "爬虫類",
   "app-guide-fish": "魚",
   "app-guide-amphibian": "両生類",
-  "app-guide-insect": "虫",
+  "app-guide-insect": "昆虫",
   "app-guide-spider": "クモ",
-  "app-guide-plant": "工場",
+  "app-guide-plant": "植物",
   "app-guide-algae": "藻類",
-  "app-guide-fungus": "菌類",
+  "app-guide-fungus": "真菌",
   "app-guide-bacterium": "細菌",
   "app-guide-virus": "ウイルス",
   "app-guide-featured-article": "おすすめの記事",
-  "app-menu-cover-topic": "カバートピック",
-  "app-menu-news": "news",
+  "app-menu-cover-topic": "表紙のトピック",
+  "app-menu-news": "ニュース",
   "app-menu-culture": "文化",
   "app-menu-nature": "自然",
   "app-menu-license": "ライセンス",
@@ -162,16 +179,16 @@
   "app-guide-continent": "大陸",
   "app-guide-bioregion": "バイオリージョン",
   "app-guide-mountain-range": "山脈",
-  "app-guide-disease": "疾患",
+  "app-guide-disease": "病気",
   "app-guide-protein": "タンパク質",
   "app-guide-atom": "原子",
   "app-guide-protist": "原生生物",
   "app-guide-country-map": "国の地図",
   "app-guide-capitol": "国会議事堂",
-  "app-guide-form-of-government": "政府の形態。",
+  "app-guide-form-of-government": "政府の形式",
   "app-guide-religion": "宗教",
-  "app-guide-period": "限目",
-  "app-guide-history-aspect": "歴史的側面",
+  "app-guide-period": "期間",
+  "app-guide-history-aspect": "歴史の側面",
   "app-guide-revolution": "革命",
   "app-guide-war": "戦争",
   "app-guide-battle": "戦い",
@@ -188,19 +205,25 @@
   "app-guide-mathematics": "数学",
   "app-guide-tourist-attraction": "観光の名所",
   "app-guide-dish": "皿",
-  "app-guide-cell-type": "セルタイプ",
+  "app-guide-cell-type": "細胞の種類",
   "app-guide-archae": "古細菌",
   "app-menu-persona": "ペルソナ",
   "app-guide-featured-portal": "注目のポータル",
   "app-guide-musical-instrument": "楽器",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "テクノロジー",
+  "app-guide-near-me": "私の近く",
+  "app-guide-newspapers": "新聞",
+  "app-guide-news-radio": "無線",
+  "app-guide-news-tv": "テレビ",
+  "app-guide-news-economic-indicators": "経済指標",
+  "app-guide-ongoing-conflicts": "衝突",
   "app-guide-radio": "無線",
   "app-menu-country-select": "国",
-  "app-menu-interests": "興味",
+  "app-menu-interests": "興味のあること",
   "app-menu-command-editor": "コマンドエディタ",
   "app-menu-presentation": "プレゼンテーション",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "コードを実行する",
+  "app-menu-editor": "編集者",
+  "app-menu-run-code": "走る",
   "app-menu-clear-editor": "クリア",
   "app-foo": "フーバーバズ"
 }
