--- a/app/explore2/assets/i18n/conzept-no.json
+++ b/app/explore2/assets/i18n/conzept-no.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Sitater",
   "app-guide-see-more": "se mer",
   "app-guide-page": "side",
-  "app-guide-news": "nyheter",
+  "app-guide-news": "aktuelle hendelser",
   "app-guide-topic": "emne",
   "app-guide-artwork": "maleri",
   "app-guide-organism": "organisme",
@@ -36,7 +36,7 @@
   "app-section-location-demography": "demografi",
   "app-section-location-ecology": "økologi",
   "app-section-location-travel": "reise",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "vær",
   "app-section-location-real-estate": "eiendom",
   "app-menu-actions": "handlinger",
   "app-menu-background-audio": "lyd",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "tilfeldig emne",
   "app-menu-compare-topics": "sammenligne emner",
   "app-menu-toggle-fullscreen": "veksle mellom fullskjerm",
-  "app-menu-bookmark-current-view": "bokmerke gjeldende URL",
+  "app-menu-bookmark-actions": "handlinger for bokmerkevalg",
+  "app-menu-bookmark-actions-reasoning": "argumentasjon",
+  "app-guide-bookmark-teach-topics": "Lær meg",
+  "app-guide-bookmark-quiz-topics": "spør meg",
+  "app-guide-bookmark-related-topics": "relaterte temaer",
+  "app-guide-bookmark-topic-differences": "forskjeller",
+  "app-guide-bookmark-commonalities": "fellestrekk",
+  "app-guide-bookmark-similarities": "likheter",
+  "app-guide-bookmark-implications": "implikasjoner",
+  "app-guide-bookmark-history": "historie",
+  "app-menu-import-as": "importere bokmerker",
+  "app-menu-export-as": "eksportere bokmerker",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-visual-search": "visuelt søk",
+  "app-menu-reading-assistance": "lesehjelp",
+  "app-menu-bread": "ord-start fet skrift",
+  "app-menu-ai-tutor": "AI-lærer",
+  "app-menu-bookmark-current-view": "bokmerke gjeldende visning",
   "app-menu-clone-tab": "klone-fanen",
   "app-menu-plant-identification": "planteidentifikasjon",
   "app-menu-text-identification": "tekstidentifikasjon",
@@ -107,7 +124,7 @@
   "app-section-library-general": "generell",
   "app-section-library-manuscripts": "manuskripter",
   "app-section-library-history": "historie",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "slektsforskning",
   "app-section-library-legal": "lovlig",
   "app-section-library-products": "Produkter",
   "app-section-media": "media",
@@ -119,7 +136,7 @@
   "app-section-society": "samfunn",
   "app-section-society-sports": "sport",
   "app-section-society-food": "mat",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "filosofi",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
@@ -153,7 +170,7 @@
   "app-guide-virus": "virus",
   "app-guide-featured-article": "omtalt artikkel",
   "app-menu-cover-topic": "dekke emnet",
-  "app-menu-news": "news",
+  "app-menu-news": "nyheter",
   "app-menu-culture": "kultur",
   "app-menu-nature": "natur",
   "app-menu-license": "tillatelse",
@@ -193,14 +210,20 @@
   "app-menu-persona": "persona",
   "app-guide-featured-portal": "omtalt portal",
   "app-guide-musical-instrument": "instrument",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "teknologi",
+  "app-guide-near-me": "nær meg",
+  "app-guide-newspapers": "aviser",
+  "app-guide-news-radio": "radio",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "økonomiske indikatorer",
+  "app-guide-ongoing-conflicts": "konflikter",
   "app-guide-radio": "radio",
   "app-menu-country-select": "land",
   "app-menu-interests": "interesser",
   "app-menu-command-editor": "kommando editor",
   "app-menu-presentation": "presentasjon",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "kjøre",
+  "app-menu-editor": "redaktør",
+  "app-menu-run-code": "løpe",
   "app-menu-clear-editor": "klar",
   "app-foo": "foo bar baz"
 }
