--- a/app/explore2/assets/i18n/conzept-tr.json
+++ b/app/explore2/assets/i18n/conzept-tr.json
@@ -4,23 +4,23 @@
   "app-tab-bookmarks-title": "yer imleri",
   "app-tab-tools-title": "aletler",
   "app-tab-settings-title": "ayarlar",
-  "app-tab-help-title": "Yardım Edin",
+  "app-tab-help-title": "yardım",
   "app-tab-audio-chat-title": "sesli sohbet",
-  "app-search-placeholder": "arama",
+  "app-search-placeholder": "aramak",
   "app-structured-search-title": "yapılandırılmış arama",
   "app-title-occurence": "Oluşum haritası",
   "app-title-super": "Süper",
   "app-title-sub": "alt",
   "app-title-pages": "sayfalar",
-  "app-title-citations": "alıntılar",
+  "app-title-citations": "Alıntılar",
   "app-guide-see-more": "daha fazla gör",
   "app-guide-page": "sayfa",
-  "app-guide-news": "haberler",
+  "app-guide-news": "güncel olaylar",
   "app-guide-topic": "başlık",
   "app-guide-artwork": "tablo",
   "app-guide-organism": "organizma",
   "app-guide-music": "müzik",
-  "app-guide-science": "Bilim",
+  "app-guide-science": "bilim",
   "app-topics-found": "bulunan konular",
   "app-section-main": "ana",
   "app-section-info": "bilgi",
@@ -31,12 +31,12 @@
   "app-section-social": "sosyal",
   "app-section-news-tech": "teknoloji",
   "app-section-society-jobs": "Meslekler",
-  "app-section-location": "yer",
+  "app-section-location": "konum",
   "app-section-location-geography": "coğrafya",
   "app-section-location-demography": "demografi",
   "app-section-location-ecology": "ekoloji",
-  "app-section-location-travel": "yolculuk",
-  "app-section-location-weather": "weather",
+  "app-section-location-travel": "seyahat",
+  "app-section-location-weather": "hava durumu",
   "app-section-location-real-estate": "Emlak",
   "app-menu-actions": "hareketler",
   "app-menu-background-audio": "ses",
@@ -55,42 +55,59 @@
   "app-menu-random-topic-key": "rastgele konu",
   "app-menu-compare-topics": "konuları karşılaştır",
   "app-menu-toggle-fullscreen": "tam ekrana geç",
-  "app-menu-bookmark-current-view": "geçerli URL'ye yer işareti koy",
+  "app-menu-bookmark-actions": "yer imi seçimi eylemleri",
+  "app-menu-bookmark-actions-reasoning": "muhakeme",
+  "app-guide-bookmark-teach-topics": "bana öğret",
+  "app-guide-bookmark-quiz-topics": "beni test et",
+  "app-guide-bookmark-related-topics": "İlgili konular",
+  "app-guide-bookmark-topic-differences": "farklılıklar",
+  "app-guide-bookmark-commonalities": "ortak noktalar",
+  "app-guide-bookmark-similarities": "benzerlikler",
+  "app-guide-bookmark-implications": "çıkarımlar",
+  "app-guide-bookmark-history": "tarih",
+  "app-menu-import-as": "yer işaretlerini içe aktar",
+  "app-menu-export-as": "yer işaretlerini dışa aktar",
+  "app-menu-bookmark-actions-media": "medya",
+  "app-menu-visual-search": "görsel arama",
+  "app-menu-reading-assistance": "okuma yardımı",
+  "app-menu-bread": "kelime başlangıcı kalınlaştırma",
+  "app-menu-ai-tutor": "Yapay zeka öğretmeni",
+  "app-menu-bookmark-current-view": "geçerli görünüme yer işareti koy",
   "app-menu-clone-tab": "klon sekmesi",
   "app-menu-plant-identification": "bitki tanımlama",
   "app-menu-text-identification": "metin tanımlama",
   "app-menu-digital-libraries": "dijital kütüphaneler",
   "app-menu-geography": "coğrafya",
   "app-menu-version": "versiyon",
-  "app-menu-made-by": "tarafından yapılmış",
-  "app-menu-all-rights-reserved": "Tüm hakları Saklıdır",
+  "app-menu-made-by": "tarafından yapıldı",
+  "app-menu-all-rights-reserved": "Her hakkı saklıdır",
   "app-menu-font-type": "Yazı tipi",
   "app-menu-font-size": "yazı Boyutu",
   "app-menu-darkmode": "karanlık mod",
   "app-menu-link-preview": "bağlantı önizlemesi",
   "app-menu-color-filter": "renk filtresi",
-  "app-menu-locale": "yerel",
+  "app-menu-locale": "yerel ayar",
   "app-menu-style": "stil",
   "app-menu-speed": "hız",
   "app-menu-pitch": "saha",
-  "app-menu-fullscreen-active-pane": "aktif bölmeyi tam ekran",
-  "app-menu-toggle-sidebar": "kenar çubuğunu aç / kapat",
+  "app-menu-fullscreen-active-pane": "etkin bölmeyi tam ekran",
+  "app-menu-toggle-sidebar": "kenar çubuğunu değiştir",
   "app-menu-add-bookmark": "imi eklemek",
-  "app-menu-note-1": "not 1: yalnızca odak kenar çubuğunda veya bir Wikipedia makale bölmesinde olduğunda kullanılabilir.",
+  "app-menu-note-1": "not 1: yalnızca odak kenar çubuğunda veya Vikipedi makale bölmesinde olduğunda kullanılabilir.",
   "app-section-business": "işletme",
   "app-section-government": "devlet",
   "app-section-government-general": "genel",
   "app-section-government-legislature": "yasama organı",
   "app-section-government-executive": "yönetici",
   "app-section-government-judicial": "adli",
-  "app-section-education": "Eğitim",
+  "app-section-education": "eğitim",
   "app-section-education-assistance": "yardım",
   "app-section-education-courses": "dersler",
-  "app-section-education-quizzes": "sınavlar",
-  "app-section-science": "Bilim",
+  "app-section-education-quizzes": "testler",
+  "app-section-science": "bilim",
   "app-section-science-search-tools": "Arama araçları",
   "app-section-science-open-journals": "açık günlükler",
-  "app-section-science-closed-journals": "kapalı günlükler",
+  "app-section-science-closed-journals": "kapalı dergiler",
   "app-section-science-news": "haberler",
   "app-section-science-language": "dil",
   "app-section-science-biology": "Biyoloji",
@@ -102,31 +119,31 @@
   "app-section-science-astronomy": "astronomi",
   "app-section-media-datasets": "veri kümeleri",
   "app-section-media-datasets-general": "genel",
-  "app-section-media-datasets-topical": "topikal",
-  "app-section-art": "Sanat",
+  "app-section-media-datasets-topical": "güncel",
+  "app-section-art": "sanat",
   "app-section-library-general": "genel",
   "app-section-library-manuscripts": "el yazmaları",
-  "app-section-library-history": "Tarih",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-history": "tarih",
+  "app-section-library-genealogy": "şecere",
   "app-section-library-legal": "yasal",
-  "app-section-library-products": "Ürün:% s",
+  "app-section-library-products": "ürünler",
   "app-section-media": "medya",
   "app-section-media-video": "video",
-  "app-section-media-image": "resim",
+  "app-section-media-image": "görüntü",
   "app-section-media-audio": "ses",
   "app-section-media-software": "yazılım",
   "app-section-meta": "meta",
   "app-section-society": "toplum",
   "app-section-society-sports": "Spor Dalları",
-  "app-section-society-food": "Gıda",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-society-food": "yiyecek",
+  "app-section-library-philosophy": "Felsefe",
   "app-section-library-religion": "din",
   "app-section-library-poetry": "şiir",
-  "app-section-library-identity": "Kimlik",
-  "app-section-society-events": "Etkinlikler",
+  "app-section-library-identity": "kimlik",
+  "app-section-society-events": "olaylar",
   "app-guide-welcome-text": "Conzept, 21. yüzyıl için bir ansiklopedi yaratma girişimidir.  <br><br> Keşiflerinizin tadını çıkarın! ",
   "app-section-society-shopping": "alışveriş",
-  "app-notification-too-few-compare-topics": "İlk önce düğmeyi kullanarak karşılaştırmaya iki veya daha fazla konu ekleyin (Wikipedia makalesinin en üstünde ve konunun meta bölümünde bulunur)",
+  "app-notification-too-few-compare-topics": "Öncelikle düğmeyi kullanarak (Wikipedia makalesinin üst kısmında ve konunun meta bölümünde bulunur) iki veya daha fazla konuyu karşılaştırmaya ekleyin.",
   "app-menu-goto-next-topic": "sonraki konuya git (kenar çubuğu sonuçlarında)",
   "app-menu-goto-previous-topic": "önceki konuya git (kenar çubuğu sonuçlarında)",
   "app-menu-goto-next-pane": "sonraki bölmeye git",
@@ -134,7 +151,7 @@
   "app-menu-new-search": "yeni arama",
   "app-guide-documentary": "belgesel",
   "app-guide-country": "ülke",
-  "app-guide-string-search": "dizi arama",
+  "app-guide-string-search": "dize arama",
   "app-guide-historical-country": "tarihi ülke",
   "app-guide-ethnic-group": "etnik grup",
   "app-guide-language": "dil",
@@ -147,17 +164,17 @@
   "app-guide-insect": "böcek",
   "app-guide-spider": "örümcek",
   "app-guide-plant": "bitki",
-  "app-guide-algae": "yosun",
+  "app-guide-algae": "algler",
   "app-guide-fungus": "mantar",
   "app-guide-bacterium": "bakteri",
   "app-guide-virus": "virüs",
   "app-guide-featured-article": "öne çıkan makale",
   "app-menu-cover-topic": "kapak konusu",
-  "app-menu-news": "news",
+  "app-menu-news": "haberler",
   "app-menu-culture": "kültür",
   "app-menu-nature": "doğa",
   "app-menu-license": "lisans",
-  "app-guide-help": "Yardım Edin",
+  "app-guide-help": "yardım",
   "app-guide-sea": "deniz",
   "app-guide-continent": "kıta",
   "app-guide-bioregion": "biyolojik bölge",
@@ -168,7 +185,7 @@
   "app-guide-protist": "protist",
   "app-guide-country-map": "ülke haritası",
   "app-guide-capitol": "başkent",
-  "app-guide-form-of-government": "gov formu.",
+  "app-guide-form-of-government": "hükümet biçimi",
   "app-guide-religion": "din",
   "app-guide-period": "dönem",
   "app-guide-history-aspect": "tarih yönü",
@@ -187,20 +204,26 @@
   "app-guide-software": "yazılım",
   "app-guide-mathematics": "matematik",
   "app-guide-tourist-attraction": "turistik cazibe",
-  "app-guide-dish": "yemek",
+  "app-guide-dish": "tabak",
   "app-guide-cell-type": "hücre tipi",
   "app-guide-archae": "arke",
   "app-menu-persona": "kişilik",
   "app-guide-featured-portal": "öne çıkan portal",
   "app-guide-musical-instrument": "enstrüman",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "teknoloji",
+  "app-guide-near-me": "bana yakın",
+  "app-guide-newspapers": "gazeteler",
+  "app-guide-news-radio": "radyo",
+  "app-guide-news-tv": "televizyon",
+  "app-guide-news-economic-indicators": "ekonomik göstergeler",
+  "app-guide-ongoing-conflicts": "çatışmalar",
   "app-guide-radio": "radyo",
   "app-menu-country-select": "ülke",
   "app-menu-interests": "ilgi alanları",
   "app-menu-command-editor": "komut düzenleyici",
   "app-menu-presentation": "sunum",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "editör",
   "app-menu-run-code": "koşmak",
-  "app-menu-clear-editor": "açık",
+  "app-menu-clear-editor": "temizlemek",
   "app-foo": "foo bar baz"
 }
