--- a/app/explore2/assets/i18n/conzept-vi.json
+++ b/app/explore2/assets/i18n/conzept-vi.json
@@ -4,45 +4,45 @@
   "app-tab-bookmarks-title": "dấu trang",
   "app-tab-tools-title": "công cụ",
   "app-tab-settings-title": "cài đặt",
-  "app-tab-help-title": "Cứu giúp",
-  "app-tab-audio-chat-title": "trò chuyện âm thanh",
-  "app-search-placeholder": "Tìm kiếm",
+  "app-tab-help-title": "giúp đỡ",
+  "app-tab-audio-chat-title": "trò chuyện bằng âm thanh",
+  "app-search-placeholder": "tìm kiếm",
   "app-structured-search-title": "tìm kiếm có cấu trúc",
-  "app-title-occurence": "Bản đồ xuất hiện",
+  "app-title-occurence": "Bản đồ diễn biến",
   "app-title-super": "siêu",
   "app-title-sub": "phụ",
   "app-title-pages": "trang",
   "app-title-citations": "Trích dẫn",
   "app-guide-see-more": "xem thêm",
   "app-guide-page": "trang",
-  "app-guide-news": "Tin tức",
-  "app-guide-topic": "chủ đề",
-  "app-guide-artwork": "bức tranh",
+  "app-guide-news": "sự kiện hiện tại",
+  "app-guide-topic": "đề tài",
+  "app-guide-artwork": "bức vẽ",
   "app-guide-organism": "sinh vật",
-  "app-guide-music": "Âm nhạc",
+  "app-guide-music": "âm nhạc",
   "app-guide-science": "khoa học",
   "app-topics-found": "chủ đề được tìm thấy",
-  "app-section-main": "chính",
+  "app-section-main": "chủ yếu",
   "app-section-info": "thông tin",
   "app-section-library": "thư viện",
-  "app-section-web": "web",
+  "app-section-web": "mạng lưới",
   "app-section-news": "Tin tức",
-  "app-section-news-general": "chung",
+  "app-section-news-general": "tổng quan",
   "app-section-social": "xã hội",
   "app-section-news-tech": "công nghệ",
   "app-section-society-jobs": "việc làm",
-  "app-section-location": "địa điểm",
+  "app-section-location": "vị trí",
   "app-section-location-geography": "địa lý",
   "app-section-location-demography": "nhân khẩu học",
-  "app-section-location-ecology": "sinh thái học",
-  "app-section-location-travel": "đi du lịch",
-  "app-section-location-weather": "weather",
+  "app-section-location-ecology": "sinh thái",
+  "app-section-location-travel": "du lịch",
+  "app-section-location-weather": "thời tiết",
   "app-section-location-real-estate": "địa ốc",
   "app-menu-actions": "hành động",
   "app-menu-background-audio": "âm thanh",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "danh sách chủ đề",
-  "app-menu-various-links": "các liên kết khác nhau",
+  "app-menu-various-links": "liên kết khác nhau",
   "app-menu-font": "nét chữ",
   "app-menu-theme": "chủ đề",
   "app-menu-interface-language": "ngôn ngữ giao diện",
@@ -53,35 +53,52 @@
   "app-menu-about": "Về",
   "app-menu-random-topic": "chủ đề ngẫu nhiên",
   "app-menu-random-topic-key": "chủ đề ngẫu nhiên",
-  "app-menu-compare-topics": "so sánh các chủ đề",
+  "app-menu-compare-topics": "so sánh chủ đề",
   "app-menu-toggle-fullscreen": "bật chế độ toàn màn hình",
-  "app-menu-bookmark-current-view": "đánh dấu trang URL hiện tại",
-  "app-menu-clone-tab": "tab sao chép",
-  "app-menu-plant-identification": "xác định thực vật",
+  "app-menu-bookmark-actions": "hành động chọn dấu trang",
+  "app-menu-bookmark-actions-reasoning": "lý luận",
+  "app-guide-bookmark-teach-topics": "dạy tôi",
+  "app-guide-bookmark-quiz-topics": "đố tôi",
+  "app-guide-bookmark-related-topics": "chủ đề liên quan",
+  "app-guide-bookmark-topic-differences": "sự khác biệt",
+  "app-guide-bookmark-commonalities": "những điểm chung",
+  "app-guide-bookmark-similarities": "điểm tương đồng",
+  "app-guide-bookmark-implications": "hàm ý",
+  "app-guide-bookmark-history": "lịch sử",
+  "app-menu-import-as": "nhập dấu trang",
+  "app-menu-export-as": "xuất dấu trang",
+  "app-menu-bookmark-actions-media": "phương tiện truyền thông",
+  "app-menu-visual-search": "tìm kiếm trực quan",
+  "app-menu-reading-assistance": "hỗ trợ đọc",
+  "app-menu-bread": "in đậm đầu từ",
+  "app-menu-ai-tutor": "Gia sư AI",
+  "app-menu-bookmark-current-view": "đánh dấu chế độ xem hiện tại",
+  "app-menu-clone-tab": "tab nhân bản",
+  "app-menu-plant-identification": "nhận dạng thực vật",
   "app-menu-text-identification": "nhận dạng văn bản",
-  "app-menu-digital-libraries": "thư viện kỹ thuật số",
+  "app-menu-digital-libraries": "thư viện số",
   "app-menu-geography": "địa lý",
   "app-menu-version": "phiên bản",
   "app-menu-made-by": "được làm bởi",
   "app-menu-all-rights-reserved": "Đã đăng ký Bản quyền",
-  "app-menu-font-type": "loại phông chữ",
+  "app-menu-font-type": "kiểu chữ",
   "app-menu-font-size": "cỡ chữ",
-  "app-menu-darkmode": "darkmode",
+  "app-menu-darkmode": "chế độ tối",
   "app-menu-link-preview": "xem trước liên kết",
   "app-menu-color-filter": "bộ lọc màu",
   "app-menu-locale": "ngôn ngữ",
-  "app-menu-style": "Phong cách",
-  "app-menu-speed": "tốc độ, vận tốc",
+  "app-menu-style": "phong cách",
+  "app-menu-speed": "tốc độ",
   "app-menu-pitch": "sân bóng đá",
-  "app-menu-fullscreen-active-pane": "toàn màn hình ngăn hoạt động",
+  "app-menu-fullscreen-active-pane": "toàn màn hình khung hoạt động",
   "app-menu-toggle-sidebar": "chuyển đổi thanh bên",
   "app-menu-add-bookmark": "thêm dấu trang",
-  "app-menu-note-1": "lưu ý 1: chỉ khả dụng khi tiêu điểm nằm trên thanh bên hoặc ngăn bài viết Wikipedia.",
+  "app-menu-note-1": "lưu ý 1: chỉ khả dụng khi tiêu điểm nằm ở thanh bên hoặc khung bài viết Wikipedia.",
   "app-section-business": "việc kinh doanh",
-  "app-section-government": "chính quyền",
-  "app-section-government-general": "chung",
+  "app-section-government": "chính phủ",
+  "app-section-government-general": "tổng quan",
   "app-section-government-legislature": "cơ quan lập pháp",
-  "app-section-government-executive": "chấp hành, quản lý",
+  "app-section-government-executive": "điều hành",
   "app-section-government-judicial": "tư pháp",
   "app-section-education": "giáo dục",
   "app-section-education-assistance": "hỗ trợ",
@@ -90,47 +107,47 @@
   "app-section-science": "khoa học",
   "app-section-science-search-tools": "công cụ tìm kiếm",
   "app-section-science-open-journals": "mở tạp chí",
-  "app-section-science-closed-journals": "tạp chí đóng cửa",
+  "app-section-science-closed-journals": "tạp chí đã đóng",
   "app-section-science-news": "Tin tức",
   "app-section-science-language": "ngôn ngữ",
-  "app-section-science-biology": "sinh học",
-  "app-section-science-medical": "Y khoa",
+  "app-section-science-biology": "sinh vật học",
+  "app-section-science-medical": "thuộc về y học",
   "app-section-science-chemistry": "hoá học",
   "app-section-science-minerology": "khoáng vật học",
   "app-section-science-archeology": "khảo cổ học",
   "app-section-science-mathematics": "toán học",
   "app-section-science-astronomy": "thiên văn học",
   "app-section-media-datasets": "bộ dữ liệu",
-  "app-section-media-datasets-general": "chung",
+  "app-section-media-datasets-general": "tổng quan",
   "app-section-media-datasets-topical": "chuyên đề",
-  "app-section-art": "Mỹ thuật",
-  "app-section-library-general": "chung",
+  "app-section-art": "nghệ thuật",
+  "app-section-library-general": "tổng quan",
   "app-section-library-manuscripts": "bản thảo",
   "app-section-library-history": "lịch sử",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "phả hệ",
   "app-section-library-legal": "hợp pháp",
-  "app-section-library-products": "Mỹ phẩm",
+  "app-section-library-products": "các sản phẩm",
   "app-section-media": "phương tiện truyền thông",
-  "app-section-media-video": "video",
+  "app-section-media-video": "băng hình",
   "app-section-media-image": "hình ảnh",
   "app-section-media-audio": "âm thanh",
   "app-section-media-software": "phần mềm",
   "app-section-meta": "meta",
   "app-section-society": "xã hội",
   "app-section-society-sports": "các môn thể thao",
-  "app-section-society-food": "món ăn",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-society-food": "đồ ăn",
+  "app-section-library-philosophy": "triết lý",
   "app-section-library-religion": "tôn giáo",
   "app-section-library-poetry": "thơ",
-  "app-section-library-identity": "xác thực",
+  "app-section-library-identity": "danh tính",
   "app-section-society-events": "sự kiện",
-  "app-guide-welcome-text": "Conzept là một nỗ lực để tạo ra một bộ bách khoa toàn thư cho thế kỷ 21.  <br><br> Hãy tận hưởng những khám phá của bạn! ",
-  "app-section-society-shopping": "mua đồ",
-  "app-notification-too-few-compare-topics": "Trước tiên, hãy thêm hai hoặc nhiều chủ đề vào so sánh, bằng cách sử dụng nút (nằm ở đầu bài viết Wikipedia và trong phần meta của chủ đề)",
-  "app-menu-goto-next-topic": "chuyển đến chủ đề tiếp theo (trong kết quả của thanh bên)",
-  "app-menu-goto-previous-topic": "chuyển đến chủ đề trước (trong kết quả của thanh bên)",
-  "app-menu-goto-next-pane": "chuyển đến khung tiếp theo",
-  "app-menu-goto-previous-pane": "đi đến ngăn trước",
+  "app-guide-welcome-text": "Conzept là một nỗ lực nhằm tạo ra một bộ bách khoa toàn thư cho thế kỷ 21.  <br><br> Tận hưởng chuyến khám phá của bạn! ",
+  "app-section-society-shopping": "mua sắm",
+  "app-notification-too-few-compare-topics": "Trước tiên, hãy thêm hai hoặc nhiều chủ đề vào so sánh bằng cách sử dụng nút (nằm ở đầu bài viết Wikipedia và trong phần meta của chủ đề)",
+  "app-menu-goto-next-topic": "đi tới chủ đề tiếp theo (trong kết quả thanh bên)",
+  "app-menu-goto-previous-topic": "đi tới chủ đề trước đó (trong kết quả thanh bên)",
+  "app-menu-goto-next-pane": "đi tới khung tiếp theo",
+  "app-menu-goto-previous-pane": "đi đến khung trước",
   "app-menu-new-search": "tìm kiếm mới",
   "app-guide-documentary": "phim tài liệu",
   "app-guide-country": "quốc gia",
@@ -141,41 +158,41 @@
   "app-guide-national-park": "công viên quốc gia",
   "app-guide-mammal": "động vật có vú",
   "app-guide-bird": "chim",
-  "app-guide-reptile": "bò sát",
+  "app-guide-reptile": "loài bò sát",
   "app-guide-fish": "cá",
   "app-guide-amphibian": "lưỡng cư",
   "app-guide-insect": "côn trùng",
-  "app-guide-spider": "con nhện",
+  "app-guide-spider": "nhện",
   "app-guide-plant": "thực vật",
   "app-guide-algae": "tảo",
   "app-guide-fungus": "nấm",
-  "app-guide-bacterium": "vi trùng",
+  "app-guide-bacterium": "vi khuẩn",
   "app-guide-virus": "vi-rút",
-  "app-guide-featured-article": "bài báo nổi bật",
-  "app-menu-cover-topic": "chủ đề trang bìa",
-  "app-menu-news": "news",
-  "app-menu-culture": "văn hóa",
+  "app-guide-featured-article": "bài viết nổi bật",
+  "app-menu-cover-topic": "chủ đề bìa",
+  "app-menu-news": "Tin tức",
+  "app-menu-culture": "văn hoá",
   "app-menu-nature": "thiên nhiên",
   "app-menu-license": "giấy phép",
-  "app-guide-help": "Cứu giúp",
+  "app-guide-help": "giúp đỡ",
   "app-guide-sea": "biển",
   "app-guide-continent": "lục địa",
-  "app-guide-bioregion": "bioregion",
+  "app-guide-bioregion": "vùng sinh học",
   "app-guide-mountain-range": "dãy núi",
-  "app-guide-disease": "dịch bệnh",
+  "app-guide-disease": "bệnh",
   "app-guide-protein": "chất đạm",
   "app-guide-atom": "nguyên tử",
-  "app-guide-protist": "người nuôi dưỡng",
+  "app-guide-protist": "người bảo vệ",
   "app-guide-country-map": "bản đồ đất nước",
-  "app-guide-capitol": "capitol",
-  "app-guide-form-of-government": "hình thức của chính phủ.",
+  "app-guide-capitol": "thủ đô",
+  "app-guide-form-of-government": "hình thức của chính phủ",
   "app-guide-religion": "tôn giáo",
   "app-guide-period": "Giai đoạn",
   "app-guide-history-aspect": "khía cạnh lịch sử",
-  "app-guide-revolution": "Cuộc cách mạng",
+  "app-guide-revolution": "cuộc cách mạng",
   "app-guide-war": "chiến tranh",
   "app-guide-battle": "trận đánh",
-  "app-guide-documentary-title": "tiêu đề tài liệu",
+  "app-guide-documentary-title": "tiêu đề phim tài liệu",
   "app-guide-film-title": "Tên phim",
   "app-guide-art-movement": "trào lưu nghệ thuật",
   "app-guide-composer": "nhà soạn nhạc",
@@ -186,21 +203,27 @@
   "app-guide-inventor": "người phát minh",
   "app-guide-software": "phần mềm",
   "app-guide-mathematics": "toán học",
-  "app-guide-tourist-attraction": "thu hút khách du lịch",
+  "app-guide-tourist-attraction": "địa điểm du lịch",
   "app-guide-dish": "món ăn",
   "app-guide-cell-type": "loại tế bào",
-  "app-guide-archae": "khảo cổ học",
-  "app-menu-persona": "cá tính",
+  "app-guide-archae": "cổ vật",
+  "app-menu-persona": "tính cách",
   "app-guide-featured-portal": "cổng thông tin nổi bật",
   "app-guide-musical-instrument": "dụng cụ",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "công nghệ",
+  "app-guide-near-me": "gần tôi",
+  "app-guide-newspapers": "Báo",
+  "app-guide-news-radio": "Đài",
+  "app-guide-news-tv": "TV",
+  "app-guide-news-economic-indicators": "chỉ số kinh tế",
+  "app-guide-ongoing-conflicts": "xung đột",
   "app-guide-radio": "Đài",
   "app-menu-country-select": "quốc gia",
   "app-menu-interests": "sở thích",
-  "app-menu-command-editor": "trình soạn thảo lệnh",
+  "app-menu-command-editor": "soạn thảo lệnh",
   "app-menu-presentation": "bài thuyết trình",
-  "app-menu-editor": "editor",
+  "app-menu-editor": "biên tập viên",
   "app-menu-run-code": "chạy",
-  "app-menu-clear-editor": "xa lạ",
-  "app-foo": "foo bar baz"
+  "app-menu-clear-editor": "thông thoáng",
+  "app-foo": "quán bar foo baz"
 }
