--- a/app/explore2/assets/i18n/conzept-zh.json
+++ b/app/explore2/assets/i18n/conzept-zh.json
@@ -1,27 +1,27 @@
 {
-  "app-tab-topics-title": "话题",
+  "app-tab-topics-title": "主题",
   "app-tab-list-title": "列表",
   "app-tab-bookmarks-title": "书签",
   "app-tab-tools-title": "工具",
   "app-tab-settings-title": "设置",
   "app-tab-help-title": "帮助",
-  "app-tab-audio-chat-title": "语音聊天",
+  "app-tab-audio-chat-title": "音频聊天",
   "app-search-placeholder": "搜索",
   "app-structured-search-title": "结构化搜索",
-  "app-title-occurence": "出现图",
+  "app-title-occurence": "发生图",
   "app-title-super": "极好的",
   "app-title-sub": "子",
   "app-title-pages": "页面",
   "app-title-citations": "引文",
-  "app-guide-see-more": "看更多",
+  "app-guide-see-more": "查看更多",
   "app-guide-page": "页",
-  "app-guide-news": "消息",
+  "app-guide-news": "现在发生的事",
   "app-guide-topic": "话题",
   "app-guide-artwork": "绘画",
   "app-guide-organism": "生物",
   "app-guide-music": "音乐",
   "app-guide-science": "科学",
-  "app-topics-found": "找到的主题",
+  "app-topics-found": "找到主题",
   "app-section-main": "主要的",
   "app-section-info": "信息",
   "app-section-library": "图书馆",
@@ -29,14 +29,14 @@
   "app-section-news": "消息",
   "app-section-news-general": "一般的",
   "app-section-social": "社会的",
-  "app-section-news-tech": "技术",
+  "app-section-news-tech": "科技",
   "app-section-society-jobs": "工作",
   "app-section-location": "地点",
   "app-section-location-geography": "地理",
-  "app-section-location-demography": "人口学",
+  "app-section-location-demography": "人口统计学",
   "app-section-location-ecology": "生态",
   "app-section-location-travel": "旅行",
-  "app-section-location-weather": "weather",
+  "app-section-location-weather": "天气",
   "app-section-location-real-estate": "房地产",
   "app-menu-actions": "行动",
   "app-menu-background-audio": "声音的",
@@ -55,7 +55,24 @@
   "app-menu-random-topic-key": "随机话题",
   "app-menu-compare-topics": "比较主题",
   "app-menu-toggle-fullscreen": "切换全屏",
-  "app-menu-bookmark-current-view": "为当前网址添加书签",
+  "app-menu-bookmark-actions": "书签选择操作",
+  "app-menu-bookmark-actions-reasoning": "推理",
+  "app-guide-bookmark-teach-topics": "教我",
+  "app-guide-bookmark-quiz-topics": "测验我",
+  "app-guide-bookmark-related-topics": "相关话题",
+  "app-guide-bookmark-topic-differences": "差异",
+  "app-guide-bookmark-commonalities": "共同点",
+  "app-guide-bookmark-similarities": "相似之处",
+  "app-guide-bookmark-implications": "影响",
+  "app-guide-bookmark-history": "历史",
+  "app-menu-import-as": "导入书签",
+  "app-menu-export-as": "导出书签",
+  "app-menu-bookmark-actions-media": "媒体",
+  "app-menu-visual-search": "视觉搜索",
+  "app-menu-reading-assistance": "阅读辅助",
+  "app-menu-bread": "词首加粗",
+  "app-menu-ai-tutor": "人工智能导师",
+  "app-menu-bookmark-current-view": "为当前视图添加书签",
   "app-menu-clone-tab": "克隆选项卡",
   "app-menu-plant-identification": "植物鉴定",
   "app-menu-text-identification": "文字识别",
@@ -76,12 +93,12 @@
   "app-menu-fullscreen-active-pane": "全屏显示活动窗格",
   "app-menu-toggle-sidebar": "切换侧边栏",
   "app-menu-add-bookmark": "添加书签",
-  "app-menu-note-1": "注意 1：仅当焦点位于侧边栏或 Wikipedia 文章窗格时才可用。",
+  "app-menu-note-1": "注意 1：仅当焦点位于侧边栏或维基百科文章窗格时才可用。",
   "app-section-business": "商业",
   "app-section-government": "政府",
   "app-section-government-general": "一般的",
   "app-section-government-legislature": "立法机关",
-  "app-section-government-executive": "行政人员",
+  "app-section-government-executive": "管理人员",
   "app-section-government-judicial": "司法",
   "app-section-education": "教育",
   "app-section-education-assistance": "协助",
@@ -89,10 +106,10 @@
   "app-section-education-quizzes": "测验",
   "app-section-science": "科学",
   "app-section-science-search-tools": "搜索工具",
-  "app-section-science-open-journals": "公开期刊",
-  "app-section-science-closed-journals": "封闭式期刊",
+  "app-section-science-open-journals": "开放期刊",
+  "app-section-science-closed-journals": "封闭期刊",
   "app-section-science-news": "消息",
-  "app-section-science-language": "语",
+  "app-section-science-language": "语言",
   "app-section-science-biology": "生物学",
   "app-section-science-medical": "医疗的",
   "app-section-science-chemistry": "化学",
@@ -102,31 +119,31 @@
   "app-section-science-astronomy": "天文学",
   "app-section-media-datasets": "数据集",
   "app-section-media-datasets-general": "一般的",
-  "app-section-media-datasets-topical": "外用",
+  "app-section-media-datasets-topical": "话题性的",
   "app-section-art": "艺术",
   "app-section-library-general": "一般的",
   "app-section-library-manuscripts": "手稿",
   "app-section-library-history": "历史",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-genealogy": "家谱",
   "app-section-library-legal": "合法的",
   "app-section-library-products": "产品",
   "app-section-media": "媒体",
   "app-section-media-video": "视频",
-  "app-section-media-image": "图片",
+  "app-section-media-image": "图像",
   "app-section-media-audio": "声音的",
   "app-section-media-software": "软件",
   "app-section-meta": "元",
   "app-section-society": "社会",
   "app-section-society-sports": "运动的",
   "app-section-society-food": "食物",
-  "app-section-library-philosophy": "philosophy",
+  "app-section-library-philosophy": "哲学",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "诗歌",
   "app-section-library-identity": "身份",
   "app-section-society-events": "事件",
-  "app-guide-welcome-text": "Conzept 是为 21 世纪创建百科全书的尝试。 <br><br> 享受你的探索！",
+  "app-guide-welcome-text": "Conzept 试图创建一本 21 世纪的百科全书。 <br><br> 享受你的探索吧！",
   "app-section-society-shopping": "购物",
-  "app-notification-too-few-compare-topics": "首先使用按钮添加两个或更多主题进行比较（位于 Wikipedia-article 顶部和主题的元部分中）",
+  "app-notification-too-few-compare-topics": "首先使用 按钮（位于维基百科文章顶部和主题的元部分）添加两个或多个主题进行比较",
   "app-menu-goto-next-topic": "转到下一个主题（在侧边栏结果中）",
   "app-menu-goto-previous-topic": "转到上一个主题（在侧边栏结果中）",
   "app-menu-goto-next-pane": "转到下一个窗格",
@@ -137,13 +154,13 @@
   "app-guide-string-search": "字符串搜索",
   "app-guide-historical-country": "历史国家",
   "app-guide-ethnic-group": "民族",
-  "app-guide-language": "语",
+  "app-guide-language": "语言",
   "app-guide-national-park": "国家公园",
   "app-guide-mammal": "哺乳动物",
   "app-guide-bird": "鸟",
   "app-guide-reptile": "爬虫",
   "app-guide-fish": "鱼",
-  "app-guide-amphibian": "两栖动物",
+  "app-guide-amphibian": "两栖类",
   "app-guide-insect": "昆虫",
   "app-guide-spider": "蜘蛛",
   "app-guide-plant": "植物",
@@ -153,7 +170,7 @@
   "app-guide-virus": "病毒",
   "app-guide-featured-article": "特色文章",
   "app-menu-cover-topic": "封面主题",
-  "app-menu-news": "news",
+  "app-menu-news": "消息",
   "app-menu-culture": "文化",
   "app-menu-nature": "自然",
   "app-menu-license": "执照",
@@ -175,7 +192,7 @@
   "app-guide-revolution": "革命",
   "app-guide-war": "战争",
   "app-guide-battle": "战斗",
-  "app-guide-documentary-title": "文件名",
+  "app-guide-documentary-title": "纪录片标题",
   "app-guide-film-title": "片名",
   "app-guide-art-movement": "艺术运动",
   "app-guide-composer": "作曲家",
@@ -190,17 +207,23 @@
   "app-guide-dish": "盘子",
   "app-guide-cell-type": "细胞类型",
   "app-guide-archae": "古细菌",
-  "app-menu-persona": "角色",
-  "app-guide-featured-portal": "特色门户",
+  "app-menu-persona": "人格面具",
+  "app-guide-featured-portal": "特色门户网站",
   "app-guide-musical-instrument": "乐器",
-  "app-guide-technology": "technology",
+  "app-guide-technology": "技术",
+  "app-guide-near-me": "靠近我",
+  "app-guide-newspapers": "报纸",
+  "app-guide-news-radio": "收音机",
+  "app-guide-news-tv": "电视",
+  "app-guide-news-economic-indicators": "经济指标",
+  "app-guide-ongoing-conflicts": "冲突",
   "app-guide-radio": "收音机",
   "app-menu-country-select": "国家",
   "app-menu-interests": "兴趣",
   "app-menu-command-editor": "命令编辑器",
-  "app-menu-presentation": "介绍",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "运行代码",
+  "app-menu-presentation": "推介会",
+  "app-menu-editor": "编辑",
+  "app-menu-run-code": "跑步",
   "app-menu-clear-editor": "清除",
-  "app-foo": "富吧巴兹"
+  "app-foo": "富巴巴兹"
 }
